--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713746703000-->
-[内塔尼亚胡称将加大对哈马斯的军事压力 汗尤尼斯一家医院发现数十具尸体](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B-%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93)
+<!--1713746705000-->
+[311比112 美国会众议院通过608亿美元援乌法案](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-311%E6%AF%94112-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87610%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88)
 ------
 
-<div>21/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/7266a39c-0023-11ef-a6e7-005056a90284/w:1280/p:16x9/2024-04-21T205412Z_576377780_RC2XA7AKBLOK_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>以色列总理内塔尼亚胡周日(4月21日）表示，以色列将加大对巴勒斯坦武装组织哈马斯的军事压力，以确保被扣押加沙的人质获释；加沙地带民防部门周日称，在以色列袭击的加沙地带一家医院的院子里发现了数十具尸体。        </strong></p><div><p>法新社报道，内塔尼亚胡在犹太节日逾越节前夕发表视频讲话，他表示在未来几天，以色列将加大对哈马斯的军事和政治压力，因为这是解救人质和取得胜利的唯一途径，以色列很快就会对哈马斯进行更多和更痛苦的打击。</p><p>内塔尼亚胡并重申，将对拉法发动地面攻势，他认为拉法是哈马斯军事基地及最后的堡垒。</p><p>以色列军方曾经表示，去年10月7日遭到哈马斯从以色列南部挟持的一些人质被扣押在拉法。</p><p>以色列军方发言人哈加里（Daniel Hagari）周日稍后在电视播出的谈话中表示，以军总参谋长哈莱维在南部军区司令部与军方高开会并评估局势，他在会上批准了以军继续展开军事行动的计划。不过他没有就此提供细节。</p><p>他说："逾越节时，人质已经被俘200天，我们会战斗，直到他们回到我们身边。"</p><p>以色列军队20日夜间空袭加沙地带南部城市拉法（Rafah）多处住宅，造成至少19人死亡。</p><p>报道说，死者绝大多数是妇女和儿童，其中包括一名孕妇。另有大量人员被埋在废墟下等待救援。</p><p>另据巴勒斯坦卫生部21日发表的声明，以军当天还在约旦河西岸城市希伯伦同巴勒斯坦人发生冲突，开枪打死两名巴勒斯坦人。</p><p>据巴勒斯坦加沙地带卫生部门21日发布的数据，以军过去24小时对加沙地带的袭击共造成48人死亡、97人受伤。去年10月新一轮巴以冲突爆发以来，以色列在加沙地带的军事行动已造成超过3.4万人死亡、约7.7万人受伤。</p><p>另据加沙民防部门周日（4月21日）说，卫生人员在南部城市汗尤尼斯的一家医院发现了至少50具尸体。以色列军方称正在查证这个报道。</p><p>法新社报道，民防机构在声明中说，遗体是在纳赛尔医疗中心的庭院中发现的。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXL2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E7%25A7%25B0%25E5%25B0%2586%25E5%258A%25A0%25E5%25A4%25A7%25E5%25AF%25B9%25E5%2593%2588%25E9%25A9%25AC%25E6%2596%25AF%25E7%259A%2584%25E5%2586%259B%25E4%25BA%258B%25E5%258E%258B%25E5%258A%259B-%25E6%25B1%2597%25E5%25B0%25A4%25E5%25B0%25BC%25E6%2596%25AF%25E4%25B8%2580%25E5%25AE%25B6%25E5%258C%25BB%25E9%2599%25A2%25E5%258F%2591%25E7%258E%25B0%25E6%2595%25B0%25E5%258D%2581%25E5%2585%25B7%25E5%25B0%25B8%25E4%25BD%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXL2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/68fcb402-ff3f-11ee-a91e-005056bfb2b6/w:1280/p:16x9/Capture-2205.JPG"><p><strong>4月20日，美国国会众议院以311比112票通过了《2024年乌克兰安全补充拨款法案》（H.R.8035）。所有民主党议员都投了赞成票。共和党议员的赞成与反对投票几乎持平，101票赞成，112票反对，1票弃权。该法案通过时，民主党人和旁听席上的来宾欢呼雀跃。众议院议长约翰逊（Mike Johnson）警告说，在会场上挥舞旗帜是“违反礼仪”的行为。        </strong></p><div><p>该援助计划提供608.4亿美元援助乌克兰，其中138亿美元用于乌克兰购买先进武器，134亿美元用于补充美军库存，110亿美元用于支持美国在欧洲的盟友，另外138亿美元用于为乌克兰购买美国防御系统。 </p><p>还有90亿美元将作为经济援助拨给乌克兰这个饱受战争蹂躏的国家，这些援助将以贷款的形式提供，经美国国会批准后总统可以免除这些贷款。该方案现在将提交参议院表决，然后交由拜登总统签署。拜登已表示，一旦国会通过，他将签署这些法案。</p><p>得知消息后，乌克兰总统泽连斯基（Volodymyr Zelenskyy）通过社交媒体平台X表示：“感谢美国众议院两党以及议长迈克·约翰逊（Mike Johnson）本人作出的决定，让历史沿着正确的轨道前进”。</p><p>泽连斯基补充说：“民主与自由永远具有全球意义，只要美国帮助保护民主与自由，民主与自由就永远不会失败。众议院今天通过的至关重要的美国援助法案将阻止战争扩大，拯救成千上万人的生命，并帮助我们两国变得更加强大”。</p><p>泽连斯基说：“只有通过实力才能实现公正的和平与安全。我们希望这些法案能够得到参议院的支持，并递交给拜登总统。谢谢你，美国！”</p><p>拜登（Joe Biden）周六通过白宫发表的声明表示：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界舞台上的领导力发出了明确的信息。在这个关键的转折点上，他们齐心协力，响应历史的召唤，通过了急需的国家安全立法，这是我几个月来为之奋斗的目标”。</p><p>拜登说：“这一一揽子计划将为以色列和乌克兰提供重要支持；为加沙、苏丹、海地以及世界各地受冲突和自然灾害影响的其他地区提供急需的人道主义援助；并加强印度-太平洋的安全与稳定”。</p><p>拜登续指：“在以色列面临来自伊朗的前所未有的攻击、乌克兰遭受俄罗斯持续轰炸的情况下，这是一个非常紧迫的时刻。我要感谢约翰逊议长、杰弗里斯（众议院民主党、Hakeem Jeffries）领袖以及众议院两党议员联盟，他们投票支持将我们的国家安全放在首位”。</p><p>拜登说：“我敦促参议院尽快将这一方案提交到我的办公桌上，以便我能够将其签署成为法律，我们也可以迅速向乌克兰运送武器装备，以满足他们的紧急战场需求”。</p><p>北约秘书长斯托尔滕贝格（Jens Stoltenberg）同样通过X平台表示：“我对美国众议院批准向乌克兰提供新的重大援助计划表示欢迎。乌克兰正在利用北约盟国提供的武器摧毁俄罗斯的作战能力。这使我们欧洲和北美更加安全”。</p><p>欧盟委员会主席冯德莱恩（Ursula von der Leyen）在X平台上写道：“我对美国众议院压倒性的赞成票表示欢迎。乌克兰应该得到针对俄罗斯的一切支持。现在，我们要求美国参议院尽快投票，因为这关系到生命。跨大西洋盟国团结一致，支持自由与民主”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-311%25E6%25AF%2594112-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587610%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E6%258F%25B4%25E4%25B9%258C%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
