--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713712502000-->
-[日本首相向靖国神社奉献祭品  大臣参拜靖国神社](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240421-%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81-%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE)
+<!--1713746703000-->
+[内塔尼亚胡称将加大对哈马斯的军事压力 汗尤尼斯一家医院发现数十具尸体](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B-%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93)
 ------
 
-<div>21/04/2024 - 09:57</div><img src="https://s.rfi.fr/media/display/3ceea9d8-1583-11ea-9068-005056bf7c53/w:1280/p:16x9/Yasukuni%201%20-%20pluie_0.jpg"><p><strong>一年一度的靖国神社“春大祭”于21日至23日在东京九段靖国神社举行。岸田首相献上名为“真榊”的祭品。        </strong></p><div><p>岸田首相自2021年10月就任首相以来，都在8月15日二战结束纪念日以及春秋两季靖国神社的定期祭典献上名为“真榊”的祭品，据透露，到23日“春大祭”结束，岸田首相本人不会去参拜靖国神社。</p><p>岸田内阁成员中，经济再兴大臣新藤义孝21日上午参拜了靖国神社。他表示：“我满怀崇敬的心情，参拜了那些曾经全心全意为国家奋斗的人们的英灵。”他表示，参拜靖国神社是“私人行为”。他还表示：“我向英灵汇报了三月底在硫磺岛举行了日美联合追悼会。”</p><p>新藤义孝是二战末期日美硫磺岛战役中日方担任指挥官的栗林忠道中将的外孙。</p><p>日本众参两院议长也献上祭品“真榊”。</p><p>韩国外交部21日对日本首相岸田文雄向靖国神社供奉祭品“真榊”以及部分大臣参拜靖国神社表示“深感失望和遗憾”。外交部在一份发言人评论中指出：“日本负有责任的领导人反复祭祀并参拜了美化侵略战争、合祀战犯的靖国神社。”评论敦促“日本负责任的领导人正视历史，在行动中表现出对过去谦虚的反思和真心的反省”，这是“面向未来的日韩关系发展的重要基础”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXFm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E7%259B%25B8%25E5%2590%2591%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE%25E5%25A5%2589%25E7%258C%25AE%25E7%25A5%25AD%25E5%2593%2581-%25E5%25A4%25A7%25E8%2587%25A3%25E5%258F%2582%25E6%258B%259C%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXFm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/7266a39c-0023-11ef-a6e7-005056a90284/w:1280/p:16x9/2024-04-21T205412Z_576377780_RC2XA7AKBLOK_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>以色列总理内塔尼亚胡周日(4月21日）表示，以色列将加大对巴勒斯坦武装组织哈马斯的军事压力，以确保被扣押加沙的人质获释；加沙地带民防部门周日称，在以色列袭击的加沙地带一家医院的院子里发现了数十具尸体。        </strong></p><div><p>法新社报道，内塔尼亚胡在犹太节日逾越节前夕发表视频讲话，他表示在未来几天，以色列将加大对哈马斯的军事和政治压力，因为这是解救人质和取得胜利的唯一途径，以色列很快就会对哈马斯进行更多和更痛苦的打击。</p><p>内塔尼亚胡并重申，将对拉法发动地面攻势，他认为拉法是哈马斯军事基地及最后的堡垒。</p><p>以色列军方曾经表示，去年10月7日遭到哈马斯从以色列南部挟持的一些人质被扣押在拉法。</p><p>以色列军方发言人哈加里（Daniel Hagari）周日稍后在电视播出的谈话中表示，以军总参谋长哈莱维在南部军区司令部与军方高开会并评估局势，他在会上批准了以军继续展开军事行动的计划。不过他没有就此提供细节。</p><p>他说："逾越节时，人质已经被俘200天，我们会战斗，直到他们回到我们身边。"</p><p>以色列军队20日夜间空袭加沙地带南部城市拉法（Rafah）多处住宅，造成至少19人死亡。</p><p>报道说，死者绝大多数是妇女和儿童，其中包括一名孕妇。另有大量人员被埋在废墟下等待救援。</p><p>另据巴勒斯坦卫生部21日发表的声明，以军当天还在约旦河西岸城市希伯伦同巴勒斯坦人发生冲突，开枪打死两名巴勒斯坦人。</p><p>据巴勒斯坦加沙地带卫生部门21日发布的数据，以军过去24小时对加沙地带的袭击共造成48人死亡、97人受伤。去年10月新一轮巴以冲突爆发以来，以色列在加沙地带的军事行动已造成超过3.4万人死亡、约7.7万人受伤。</p><p>另据加沙民防部门周日（4月21日）说，卫生人员在南部城市汗尤尼斯的一家医院发现了至少50具尸体。以色列军方称正在查证这个报道。</p><p>法新社报道，民防机构在声明中说，遗体是在纳赛尔医疗中心的庭院中发现的。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXL2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E7%25A7%25B0%25E5%25B0%2586%25E5%258A%25A0%25E5%25A4%25A7%25E5%25AF%25B9%25E5%2593%2588%25E9%25A9%25AC%25E6%2596%25AF%25E7%259A%2584%25E5%2586%259B%25E4%25BA%258B%25E5%258E%258B%25E5%258A%259B-%25E6%25B1%2597%25E5%25B0%25A4%25E5%25B0%25BC%25E6%2596%25AF%25E4%25B8%2580%25E5%25AE%25B6%25E5%258C%25BB%25E9%2599%25A2%25E5%258F%2591%25E7%258E%25B0%25E6%2595%25B0%25E5%258D%2581%25E5%2585%25B7%25E5%25B0%25B8%25E4%25BD%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXL2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
