--- a/articles/rfi/999959.md
+++ b/articles/rfi/999959.md
@@ -1,5 +1,5 @@
-<!--1713712501000-->
-[布林肯访华谈关切议题 美众院通过了援乌的新方案 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240421-%E5%B8%83%E6%9E%97%E8%82%AF%E8%AE%BF%E5%8D%8E%E8%B0%88%E5%85%B3%E5%88%87%E8%AE%AE%E9%A2%98-%E7%BE%8E%E4%BC%97%E9%99%A2%E9%80%9A%E8%BF%87%E4%BA%86%E6%8F%B4%E4%B9%8C%E7%9A%84%E6%96%B0%E6%96%B9%E6%A1%88)
+<!--1713712502000-->
+[日本首相向靖国神社奉献祭品  大臣参拜靖国神社](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240421-%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81-%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE)
 ------
 
-<div>21/04/2024 - 12:43</div><img src="https://s.rfi.fr/media/display/1e80ac62-1303-11ea-bdea-005056a99247/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>美国国务卿布林肯即将访华的消息普遍受到周日法国媒体的关注，费加罗报强调出，美国国务卿此行特别想在北京提出中国支持俄罗斯国防工业的问题。另外，世界报驻华盛顿记者Piotr Smolar指出，历经六个月的僵局后，美国众议院周六最终通过了对乌克兰的新金援方案。                    </strong></p><div><p>费加罗报写道，据一位美国官员称，布林肯将于 4 月 24 日至 26 日访问中国，他打算在北京直接提出他对中国政府支持俄罗斯国防工业的关切。</p><p>华盛顿承认中国没有向俄罗斯提供直接军事援助，但谴责中国输出军民两用材料，用于生产俄罗斯在对乌克兰战争中使用的弹药和武器。</p><p>周五在意大利举行的新闻发布会上，美国国务卿指责中国间接“助长”了乌克兰冲突，布林肯说：“如果中国一方面希望与欧洲和其他国家保持友好关系，另一方面就不能助长冷战结束以来对欧洲安全的最大威胁。”</p><p><strong>分歧的主要来源--台湾</strong></p><p>报道接着援引一位美国官员说，布林肯还将要求中国在下个月台湾当选总统赖清德的就职典礼上避免采取 "挑衅 "措施。台湾是分歧的主要根源，中国抗议美国向台北出售武器，而美国则抱怨北京打算改变台湾现状。</p><p>此举标志着中美紧张局势的进一步缓和，这种紧张局势在前总统特朗普执政期间曾一度加剧，如果他在 11 月的大选中获胜，他将再次承诺对中国政府采取强硬立场。但乔-拜登总统在寻求加强世界两大经济体之间的稳定的同时，也不断施加压力。</p><p>在布林肯访华之前的几天里，拜登与日本和菲律宾这两个对中国野心保持警惕的美国盟国的领导人举行了联合会晤，并提议对不配合的中国提高钢铁关税。一位美国高级官员在周六宣布布林肯访问之前对记者说：“我们现在的情况与一年前不同，当时双边关系正处于历史最低点。我们已经着手稳定双边关系，同时不牺牲我们加强联盟、激烈竞争和捍卫自身利益的能力。”</p><p><strong>途经上海</strong></p><p>此外，报道指出，作为两国关系缓和的标志，布林肯将在北京之前在大都市上海停留，他打算在那里鼓励加强美中两国之间的文化联系。布林肯此行之前，拜登与习近平进行了电话交谈，美国财政部长耶伦也访问了中国。</p><p>去年 11 月，两国元首在旧金山附近会晤，努力使中美关系重回正轨，特别是重新建立最高级别的军事对话，并承诺合作打击芬太尼（一种在美国造成严重破坏的合成毒品）。</p><p>剥到最后提到，在史汀生中心高级研究员孙云看来，中国正面临经济复苏的困境，正在寻求绥靖。中国领导人“在现阶段没有办法对付他们眼中好战或破坏稳定的美国，他们也不准备赌美国会在经济上重新介入，但他们可以让美国保持沉默”。</p><p><strong>在美国，经过六个月的僵局之后，众议院通过了对乌克兰的新援助方案</strong></p><p>世界报驻华盛顿记者在提要中写道，周六表决的四个文本分别涉及对基辅、以色列和台湾的援助，以及对 TikTok 的禁令威胁。为了将这些单独的文本付诸表决，共和党籍议长迈克-约翰逊（Mike Johnson）不得不克服自己阵营中一些当选议员的反抗。</p><p>在经历了六个多月的屡次失败、毫无结果的修版、共和党的封锁以及美国在全世界形象的灾难之后，美国众议院终于 4 月 20 日星期六通过了一项新的乌克兰援助计划。乌克兰现在比以往任何时候都更需要这项价值 608 亿美元（570 亿欧元）的援助计划，因为该国的弹药已经耗尽，而且在没有有效保护的情况下遭受俄罗斯的打击。</p><p>该文本以 311 票赞成、112 票反对获得通过，其通过率几乎与周六以蜗牛般速度通过的其他三项草案一样轻松。它们都与美国的外交政策及其资金来源有关。这一结果让乌克兰的支持者们松了一口气，他们不想让克里姆林宫以美对乌放弃和抛弃的方式获得胜利。但这也说明了共和党少数派代表“让美国再次伟大”运动数月来对国会的挟持。</p><p>世界报驻美记者表示，正如您可能已经猜到的那样，两党中赞成向乌克兰提供军事支持的人占了绝大多数，但这却成了“大老党”内部混乱的牺牲品。众议院议长约翰逊无视其同党共和党激进派的批评，才最终让这一多数派表达了自己的意见。</p><p>美国总统拜登在一份声明中说：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界上的领导力发出了明确的信息。世界报指出，这位民主党总统呼吁参议院尽快确认该方案（投票定于 4 月 23 日进行）以便他能签署该方案。</p><p>乌克兰总统泽连斯基则在 X 平台上对所有为“让历史走上正轨”做出贡献的人表示“感谢”。他补充说：“众议院今天通过的至关重要的美国援助法案将防止战争蔓延，拯救成千上万人的生命，并帮助我们两国变得更加强大。”</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>21/04/2024 - 09:57</div><img src="https://s.rfi.fr/media/display/3ceea9d8-1583-11ea-9068-005056bf7c53/w:1280/p:16x9/Yasukuni%201%20-%20pluie_0.jpg"><p><strong>一年一度的靖国神社“春大祭”于21日至23日在东京九段靖国神社举行。岸田首相献上名为“真榊”的祭品。        </strong></p><div><p>岸田首相自2021年10月就任首相以来，都在8月15日二战结束纪念日以及春秋两季靖国神社的定期祭典献上名为“真榊”的祭品，据透露，到23日“春大祭”结束，岸田首相本人不会去参拜靖国神社。</p><p>岸田内阁成员中，经济再兴大臣新藤义孝21日上午参拜了靖国神社。他表示：“我满怀崇敬的心情，参拜了那些曾经全心全意为国家奋斗的人们的英灵。”他表示，参拜靖国神社是“私人行为”。他还表示：“我向英灵汇报了三月底在硫磺岛举行了日美联合追悼会。”</p><p>新藤义孝是二战末期日美硫磺岛战役中日方担任指挥官的栗林忠道中将的外孙。</p><p>日本众参两院议长也献上祭品“真榊”。</p><p>韩国外交部21日对日本首相岸田文雄向靖国神社供奉祭品“真榊”以及部分大臣参拜靖国神社表示“深感失望和遗憾”。外交部在一份发言人评论中指出：“日本负有责任的领导人反复祭祀并参拜了美化侵略战争、合祀战犯的靖国神社。”评论敦促“日本负责任的领导人正视历史，在行动中表现出对过去谦虚的反思和真心的反省”，这是“面向未来的日韩关系发展的重要基础”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXFm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E7%259B%25B8%25E5%2590%2591%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE%25E5%25A5%2589%25E7%258C%25AE%25E7%25A5%25AD%25E5%2593%2581-%25E5%25A4%25A7%25E8%2587%25A3%25E5%258F%2582%25E6%258B%259C%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXFm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
