--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
-<!--1713681902000-->
-[中国人花36万欧元 想在德国获得“世界一流的医疗系统”：富人贩运团伙落网](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240420-%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83-%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97-%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F-%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91)
+<!--1713683707000-->
+[苹果在北京压力下下架Meta两款社交软件WhatsApp和Threads - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240420-%E8%8B%B9%E6%9E%9C%E5%9C%A8%E5%8C%97%E4%BA%AC%E5%8E%8B%E5%8A%9B%E4%B8%8B%E4%B8%8B%E6%9E%B6meta%E4%B8%A4%E6%AC%BE%E7%A4%BE%E4%BA%A4%E8%BD%AF%E4%BB%B6whatsapp%E5%92%8Cthreads)
 ------
 
-<div>20/04/2024 - 23:19</div><img src="https://s.rfi.fr/media/display/96ee1e2a-ff5b-11ee-aa46-005056a90284/w:1280/p:16x9/AP23327570102805.jpg"><p><strong>德国打击针对中国富人的人口走私团伙的行动还在进行中，并且曝光了更多细节。据德国《焦点》周刊报道，一个团伙大规模出售德国居留证，特别是向中国人出售，以获取大量金钱。其诱饵在于宣传德国“世界一流的医疗系统”和最好的教育。通过对八个联邦州的大规模突袭，警方捣毁了一个专门针对中国和阿曼富人的国际走私团伙。        </strong></p><div><p>本周三开始，德国联邦警察在几个联邦州开始大规模搜查走私嫌疑人，目前已执行了221项搜查令，没收了超过120万欧元的现金。十名嫌疑人已被拘留。其中包括来自科隆地区的两名律师，他们被认为是主要被告。据说，人贩子是通过他们的律师事务所招募的。</p><p>为了获得永久居留许可，被贩运者向嫌疑人支付了3万至35万欧元。据调查人员称，周四行动仍在继续，并在北威州进行了进一步搜查。其中包括116个住宅地址。在搜查过程中，涉嫌走私的人员被逮捕，“大量证据”被没收。</p><p>被偷渡者想要利用德国国家的好处。检察官亨德里克·蒂默周三在杜塞尔多夫表示，在个别案件中，获得居留许可的费用高达36万欧元。突击搜查的目标是38名犯罪嫌疑人以及147名据称被贩运者。如果算上后来带来的家人，大约有350人，其中大部分是中国公民。</p><p>据调查人员称，这些财力雄厚的外国人——包括来自南非和印度的——是通过互联网上所谓的“居留计划”招募的。那里不仅为德国的医疗和教育体系做广告，还承诺德国公民身份。《居留法》针对自营职业者和技术工人的特殊规则被非法利用。</p><p>蒂默说，被该团伙贩运的147人，大多数人目前下落不明。他们可能居住在原籍国，但也可能在德国拥有一个长期住所。其中一间涉嫌公寓是康斯坦茨附近的一所精英寄宿学校，“王室孩子也在那里上学，”蒂默说。 “事实上，不仅孩子在那里登记，父亲也是主申请人——当然他不住在那里。”</p><p>调查人员称，被偷渡者想要“利用德国社会、健康和教育国家的优势。 也许他们中的一些人想在欧洲度过退休时光。如果被偷渡者被发现，其伪造的居留许可将失效。只要他们被列为被告并且刑事诉讼仍在进行中，驱逐出境就会暂停。调查人员仍然希望得到他们的证人证词。</p><p>此次调查以“投资者”名义进行，因为涉嫌被贩运者想在德国投资公司或房地产，为贩运须付的总金额可能高达36万欧元，涉嫌犯罪。除其他外，还包括设立虚假公司、为所谓的住宅提供资金以及虚构工资。 此外，调查人员举例称，还必须向律师事务所支付高达4万欧元的“咨询费”。</p><p>一旦支付了走私费用，该律师事务所就联系外国使团——例如德国驻上海和广州领事馆——并签发了旅行签证。</p><p>据调查人员称，居留证是从北威州的克尔彭市和索林根市以及莱茵-埃尔夫特区和迪伦区的移民办公室获得的。团伙共同行动，将富有的外国人偷运到德国的行为已经持续了好几年。</p><p>此次调查的起因是德国驻中国广州领事馆的举报以及大量有关银行涉嫌洗钱的报道。调查于2020年开始，但部分犯罪发生在2016/2017年。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240420-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E8%258A%25B136%25E4%25B8%2587%25E6%25AC%25A7%25E5%2585%2583-%25E6%2583%25B3%25E5%259C%25A8%25E5%25BE%25B7%25E5%259B%25BD%25E8%258E%25B7%25E5%25BE%2597-%25E4%25B8%2596%25E7%2595%258C%25E4%25B8%2580%25E6%25B5%2581%25E7%259A%2584%25E5%258C%25BB%25E7%2596%2597%25E7%25B3%25BB%25E7%25BB%259F-%25E5%25AF%258C%25E4%25BA%25BA%25E8%25B4%25A9%25E8%25BF%2590%25E5%259B%25A2%25E4%25BC%2599%25E8%2590%25BD%25E7%25BD%2591&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 12:23</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>周六（4月20日）法国主要报纸有关中国的报道主要集中于经济和社会，在北京的压力下，苹果清理在中国的应用程序虚拟商店App Store，删除了Meta旗下社交软件WhatsApp和Threads。权威《世界报》和经济性《回声报》都对此给与报道。                    </strong></p><div><p>WhatsApp是拥有30亿用户的世界领先通讯工具，但几天来，它已在中国无法下载，苹果公司周五证实，已从中国的虚拟苹果商店中删除该应有程序，其他已经消失的应用还有同属Meta的社交软件 Threads、以及Telegram 和 Signal。</p><p>报道指，此举尽管对Meta的经济影响微乎其微，因为在中国，WhatsApp的主要用户是一些外籍人士、留学生及外国游客，而所有的中国人使用的都是微信这一日常生活必不可少的超级应用，WhatsApp此前已被北京封锁多年，通常只能通过付费VPN翻墙软件才能访问和断续使用。</p><p>《世界报》写道，中国密切监控媒体和互联网，对其有严格的监管和审查，杜绝如何对国家政策可能有负面影响或造成动荡的内容。谷歌、油管等许多外国网站、应用程序和X、Instagram、Facebook等社交网络只有通过VPN才能使用。</p><p>现在，WhatsApp在中国将不再能下载。报道指，中国似乎希望对应用程序给与更多地控制，而此时这样做的矛盾之处是，中国正在恢复与外部世界的外交、文化和人文交流，并试图安抚外国企业来华投资以重振本国经济。此外，该措施也证实了苹果在中国的困难，以及该品牌在中国长期以来的所具有的标志性地位，相对于当局而言，该品牌可能的议价能力越来越弱。</p><p>根据苹果公司表示，正是中国国家网信办，出于“国家安全”的原因“命令”其删除这些应用程序。简言之，可能是苹果或Meta拒绝遵守一项新规定：自4月1日起，中国所有应用程序都必须在工信部正式“注册”，否则将停止在中国运营。据一直在分析该法规的律师事务所Dezan Shira称，该措施自2000年以来一直针对于网站实施，用以打击网络欺诈。微信上的“小应用”也受到影响。但为获得通过，应用程序必须提供潜在的敏感技术信息，例如服务器位置、IP 地址等。</p><p>这是否触及苹果的红线？苹果在一份声明中说，“我们有义务尊重我们经营所在国家的法律，即使我们并不同意”。据路透社报道，为什么苹果只删除了WhatsApp，而其他Meta应用程序，如Facebook、Instagram或Messenger等周五仍然可以下载，对此还有待观察，苹果和Meta目前没有给与置评。</p><p>无论如何这并不是首次外国应用程序被中国屏蔽，《回声报》提到2021 年，当北京接管火爆的私人在线辅导行业时，语言学习软件Duolingo在中国的应用商店中就被下架了近一年。2017 年，苹果也在其中国应用商店中删除《纽约时报》的应用程序今。</p><p>《回声报》指，苹果下架两款Meta应用是在该集团首席执行官库克于3月下旬访问中国之后。苹果在中国这一其全球第三大市场正面临困境：消费减弱，数百万公务员不再能公开购买iPhone，而来自中国品牌的本地竞争日益激烈。为重夺优势，最近苹果决定在上海开设第8家苹果店。目前上海的苹果店数量甚至已超过纽约。</p><p><strong>北京半程马拉松赛“放水”争议 何杰和三名外籍选手被取消成绩</strong></p><p>上周日北京半程马拉松比赛中国选手何杰夺冠争议是费加罗有关中国报道的另一话题，组织者周五宣布取消何杰和协助其夺冠的其他三名肯尼亚及埃塞俄比亚选手的获奖资格。比赛视频被网络疯传引发巨大争议，促使组织方在赛后展开调查。</p><p>画面中2023年亚运会马拉松金牌得主、中国运动员何杰在接近终点时一度被三名外籍选手超越，但后者随后似乎放慢速度，并示意何杰加速，这一画面令人惊讶。三名外籍选手之一的姆南加特之后告诉BBC说，他们三人是作为“野兔”参加，即只是负责带跑，但比赛中他们确是佩戴着参赛号码布参加了比赛。组委会在央视援引的声明中说，，三名外籍选手确实是配速员，但负责比赛的合作公司并未这样宣布而实际作为选手参赛。最终何杰和三名外籍选手被宣布取消比赛成绩。组委会对没有及时“发现并纠正”问题表示道歉。</p><p>此次争议引发了中国网络的巨大震撼，一位微博网民说，“体育精神被毁，这是一种耻辱”。报道回顾近年来多项中国体育赛事饱受争议。包括2019年徐州国际马拉松赛的一名参赛者被发现在比赛时骑自行车代跑，以及中国一支定向运动队因在军运会上“作弊”被取消参赛资格。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
