--- a/articles/rfi/999964.md
+++ b/articles/rfi/999964.md
@@ -1,5 +1,5 @@
-<!--1713667501000-->
-[美国会众议院压倒性通过TikTok剥离相关法案](https://www.rfi.fr/cn/%E6%94%BF%E6%B2%BB/20240420-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87tiktok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88)
+<!--1713681902000-->
+[中国人花36万欧元 想在德国获得“世界一流的医疗系统”：富人贩运团伙落网](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240420-%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83-%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97-%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F-%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91)
 ------
 
-<div>20/04/2024 - 19:31</div><img src="https://s.rfi.fr/media/display/c0964f20-ff3a-11ee-b3ae-005056bf30b7/w:1280/p:16x9/Capture-2203.JPG"><p><strong>4月20日，美国国会众议院以360票对58票的两党投票结果通过了《21世纪以实力求和平法案》（H.R. 8038）。该法案包括多项国家安全优先事项，包括制裁伊朗、扣押被冻结的俄罗斯主权资产，以及一项可能导致在全美国范围内禁止使用TikTok的措施。该法案要求TikTok目前的中国所有者在一年内出售其股份，否则TikTok将面临禁令。其还将允许美国总统对俄罗斯和伊朗实施新的制裁。        </strong></p><div><p>美联社报导指，美国众议院共和党人此前决定将TikTok剥离问题作为一个更大的对外援助计划的一部分，这是拜登总统的优先事项，同时国会也广泛支持乌克兰和以色列等盟友。</p><p>由于民主党人和共和党人都对TikTok的所有者——字节跳动表示了国家安全方面的担忧，一项销售期限更短、为期六个月的独立法案在3月份以两党压倒性票数在美国众议院获得通过。</p><p>修改后的措施在周六以360票赞成、58票反对获得通过，经过谈判，美国参议院将把出售的期限延长至9个月，如果出售正在进行中，可再延长3个月。法律挑战可能会进一步延长这一期限。</p><p>这些修改似乎旨在消除一些参议员的顾虑，即原来的六个月出售期限可能太短。然而，这些修改是否足以获得参议院的批准仍是未知数，因为一些主要参议员已表示希望以更慢的速度通过TikTok剥离法案。</p><p>TikTok已表示，如果剥离法案得到通过，很可能会诉诸法庭，试图阻止法律的实施，并称这将剥夺TikTok在美国约1.7亿用户的宪法第一修正案权利。数月来，TikTok斥资极力游说反对相关立法，并推动该应用美国用户，其中许多是年轻人致电国会表示反对。但这种激烈的反击和干预激怒了国会山的立法者们，他们普遍担心北京对TikTok及其母公司的影响力，而很少有议员自己使用该平台。</p><p>TikTok发言人周六在一份声明中称：“不幸的是，众议院正以重要的对外和人道主义援助为幌子，再次强行通过一项禁令法案，该法案将践踏1.7亿美国人的言论自由权，摧毁700万家企业，并关闭一个每年为美国经济贡献240亿美元的平台”。</p><p>此外，该法案还包含美国众议院外交委员会主席麦考尔（Michael McCaul）所说的“国会多年来通过的最全面的制裁伊朗措施”。其将对接收与加工伊朗石油的港口和炼油厂实施制裁，并对参与去年失效的联合国对伊朗导弹禁运所涵盖的活动或参与伊朗导弹和无人机供应或销售的任何人实施制裁。该法案还将进一步限制向伊朗出口原产于美国的商品和技术。</p><p>与此同时，该法案还将授权行政当局扣押并向乌克兰转移在美国的被冻结的俄罗斯主权资产，以帮助乌克兰进行战斗和重建。美国众议院议长约翰逊（Mike Johnson）表示，他正考虑将这项名为《REPO法案》的措施作为对乌援助的一种方式。</p><p>拜登政府的高级官员也一直在与七国集团（G7）国家合作，探讨帮助乌克兰的新战略，这需要美国国会的批准。官员们告诉美国有线电视新闻网（CNN）称，被七国集团和欧盟冻结的俄罗斯央行资产绝大部分由欧盟持有，美国仅持有价值约50亿美元的资产。此外，该法案还将对哈马斯、巴勒斯坦伊斯兰圣战组织（杰哈德）和其他巴勒斯坦恐怖组织实施强制性制裁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCC.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%2594%25BF%25E6%25B2%25BB%2F20240420-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E5%258E%258B%25E5%2580%2592%25E6%2580%25A7%25E9%2580%259A%25E8%25BF%2587tiktok%25E5%2589%25A5%25E7%25A6%25BB%25E7%259B%25B8%25E5%2585%25B3%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCC.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCC.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E5%8E%8B%E5%80%92%E6%80%A7%E9%80%9A%E8%BF%87TikTok%E5%89%A5%E7%A6%BB%E7%9B%B8%E5%85%B3%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 23:19</div><img src="https://s.rfi.fr/media/display/96ee1e2a-ff5b-11ee-aa46-005056a90284/w:1280/p:16x9/AP23327570102805.jpg"><p><strong>德国打击针对中国富人的人口走私团伙的行动还在进行中，并且曝光了更多细节。据德国《焦点》周刊报道，一个团伙大规模出售德国居留证，特别是向中国人出售，以获取大量金钱。其诱饵在于宣传德国“世界一流的医疗系统”和最好的教育。通过对八个联邦州的大规模突袭，警方捣毁了一个专门针对中国和阿曼富人的国际走私团伙。        </strong></p><div><p>本周三开始，德国联邦警察在几个联邦州开始大规模搜查走私嫌疑人，目前已执行了221项搜查令，没收了超过120万欧元的现金。十名嫌疑人已被拘留。其中包括来自科隆地区的两名律师，他们被认为是主要被告。据说，人贩子是通过他们的律师事务所招募的。</p><p>为了获得永久居留许可，被贩运者向嫌疑人支付了3万至35万欧元。据调查人员称，周四行动仍在继续，并在北威州进行了进一步搜查。其中包括116个住宅地址。在搜查过程中，涉嫌走私的人员被逮捕，“大量证据”被没收。</p><p>被偷渡者想要利用德国国家的好处。检察官亨德里克·蒂默周三在杜塞尔多夫表示，在个别案件中，获得居留许可的费用高达36万欧元。突击搜查的目标是38名犯罪嫌疑人以及147名据称被贩运者。如果算上后来带来的家人，大约有350人，其中大部分是中国公民。</p><p>据调查人员称，这些财力雄厚的外国人——包括来自南非和印度的——是通过互联网上所谓的“居留计划”招募的。那里不仅为德国的医疗和教育体系做广告，还承诺德国公民身份。《居留法》针对自营职业者和技术工人的特殊规则被非法利用。</p><p>蒂默说，被该团伙贩运的147人，大多数人目前下落不明。他们可能居住在原籍国，但也可能在德国拥有一个长期住所。其中一间涉嫌公寓是康斯坦茨附近的一所精英寄宿学校，“王室孩子也在那里上学，”蒂默说。 “事实上，不仅孩子在那里登记，父亲也是主申请人——当然他不住在那里。”</p><p>调查人员称，被偷渡者想要“利用德国社会、健康和教育国家的优势。 也许他们中的一些人想在欧洲度过退休时光。如果被偷渡者被发现，其伪造的居留许可将失效。只要他们被列为被告并且刑事诉讼仍在进行中，驱逐出境就会暂停。调查人员仍然希望得到他们的证人证词。</p><p>此次调查以“投资者”名义进行，因为涉嫌被贩运者想在德国投资公司或房地产，为贩运须付的总金额可能高达36万欧元，涉嫌犯罪。除其他外，还包括设立虚假公司、为所谓的住宅提供资金以及虚构工资。 此外，调查人员举例称，还必须向律师事务所支付高达4万欧元的“咨询费”。</p><p>一旦支付了走私费用，该律师事务所就联系外国使团——例如德国驻上海和广州领事馆——并签发了旅行签证。</p><p>据调查人员称，居留证是从北威州的克尔彭市和索林根市以及莱茵-埃尔夫特区和迪伦区的移民办公室获得的。团伙共同行动，将富有的外国人偷运到德国的行为已经持续了好几年。</p><p>此次调查的起因是德国驻中国广州领事馆的举报以及大量有关银行涉嫌洗钱的报道。调查于2020年开始，但部分犯罪发生在2016/2017年。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240420-%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA%25E8%258A%25B136%25E4%25B8%2587%25E6%25AC%25A7%25E5%2585%2583-%25E6%2583%25B3%25E5%259C%25A8%25E5%25BE%25B7%25E5%259B%25BD%25E8%258E%25B7%25E5%25BE%2597-%25E4%25B8%2596%25E7%2595%258C%25E4%25B8%2580%25E6%25B5%2581%25E7%259A%2584%25E5%258C%25BB%25E7%2596%2597%25E7%25B3%25BB%25E7%25BB%259F-%25E5%25AF%258C%25E4%25BA%25BA%25E8%25B4%25A9%25E8%25BF%2590%25E5%259B%25A2%25E4%25BC%2599%25E8%2590%25BD%25E7%25BD%2591&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91%20-%20https%3A%2F%2Frfi.my%2FAXDN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E4%BA%BA%E8%8A%B136%E4%B8%87%E6%AC%A7%E5%85%83%20%E6%83%B3%E5%9C%A8%E5%BE%B7%E5%9B%BD%E8%8E%B7%E5%BE%97%E2%80%9C%E4%B8%96%E7%95%8C%E4%B8%80%E6%B5%81%E7%9A%84%E5%8C%BB%E7%96%97%E7%B3%BB%E7%BB%9F%E2%80%9D%EF%BC%9A%E5%AF%8C%E4%BA%BA%E8%B4%A9%E8%BF%90%E5%9B%A2%E4%BC%99%E8%90%BD%E7%BD%91&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
