--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+4-22 [封面新闻｜从医者变成病人，“鸿茅药酒事件”当事人谭秦东的劫后余生](/articles/cdt/341434.md)
+
 4-22 [风慢慢｜说“俄罗斯必败”的冯玉军，不再是复旦的了](/articles/cdt/341437.md)
 
 4-22 [【404文库】“直到今天，朱砂在仁丹配方中的含量仍居高不下”（外二篇）](/articles/cdt/341439.md)
@@ -598,6 +600,4 @@
 3-19 [北城远在北方｜民以食为天，谁来守护我们的餐桌？](/articles/cdt/342540.md)
 
 3-19 [读宋史的赵大胖｜从我懂事起，就不再相信“人之初性本善”](/articles/cdt/342542.md)
-
-3-19 [海边的西塞罗｜全国的霸凌者，都在等着看这三个人渣的下场](/articles/cdt/342543.md)
 
