--- a/articles/rfi/999979.md
+++ b/articles/rfi/999979.md
@@ -1,5 +1,5 @@
-<!--1713611701000-->
-[中国对台湾聚碳酸酯开征反倾销税 裁定美国丙酸存在倾销](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E-%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80)
+<!--1713624303000-->
+[以色列袭击伊朗时也袭击了叙利亚南部一个军事雷达阵地](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0)
 ------
 
-<div>20/04/2024 - 11:13</div><img src="https://s.rfi.fr/media/display/05f75f40-fef6-11ee-9c4e-005056bf30b7/w:1280/p:16x9/93faf4a873084aad99185a73a87055ec.jpg"><p><strong>据中央社报道，中国商务部对原产于台湾的进口聚碳酸酯反倾销做出最终裁定，从今天4月20日起征收反倾销税，为期5年。此外，也对美国进口的丙酸裁定存在倾销，调查机关决定采用保证金形式实施临时反倾销措施。        </strong></p><div><p>聚碳酸酯为「海峡两岸经济合作框架协议」（ECFA）早收清单小项之一。报道称，在2024年台湾总统大选前夕，中国对台进行施压，ECFA项目终止为其中一项手段。</p><p>2022年11月30日，中国商务部决定对原产于台湾的进口聚碳酸酯进行反倾销立案调查。</p><p>当时，对台湾聚碳酸酯课征最高税率22.4%的临时反倾销税。不过，去年11月30日决定将此调查延长至2024年的5月29日。</p><p>19日，北京选在民进党总统当选人赖清德5月20日上任前的一个月公布调查结果并决定征收为期5年的反倾销税，引发政治联想。</p><p>这是中国第一起针对台湾输入商品进行的反倾销调查，尤其聚碳酸酯属于ECFA早收列表项目，是否涉及中国变相取消ECFA早收红利，甚至取消ECFA，也引起关注。</p><p>聚碳酸酯是一种热塑性塑料，主要用于电子电器、汽车、光学、包装、医疗器械等领域。目前中国是台湾聚碳酸酯最大出口市场，根据海关数据显示，去年出口约8.3亿美元到中国，占比约78.5％。</p><p>据中国商务部公告，反倾销税包含台湾化学纤维股份有限公司9.0%；台湾出光石油化学股份有限公司9.0%；奇美实业股份有限公司12.2%；奇菱科技股份有限公司12.2%；其他台湾地区公司22.4%。</p><p>与此同时，中国商务部官网也发布「关于原产于美国的进口丙酸反倾销调查的初步裁定公告」，初步认定被调查产品存在倾销。调查机关决定采用保证金形式实施临时反倾销措施。</p><p>自2024年4月20日起，进口业者在进口原产于美国的丙酸时，应依据初裁决定所确定的保证金比率，向中国海关提供相应的保证金。据中国商务部说，保证金比率为43.5%。</p><p>丙酸是重要的精细化工产品及有机合成原料，主要用于生产防腐剂、防霉剂、除草剂、医药中间体等，广泛应用于食品、饲料、农药、医药等领域。</p><p>外界注意到，美国进口的丙酸被中国裁定涉及反倾销之前，美国白宫网站17日发布消息，指责中国不公平做法，宣布计划针对中国钢铝产品采取新的限制措施，包括将对中国钢铝产品的301关税提高至现有水平的3倍，并与邻国合作防止中国钢铝产品间接出口美国等。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX8U.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E4%25B8%25AD%25E5%259B%25BD%25E5%25AF%25B9%25E5%258F%25B0%25E6%25B9%25BE%25E8%2581%259A%25E7%25A2%25B3%25E9%2585%25B8%25E9%2585%25AF%25E5%25BC%2580%25E5%25BE%2581%25E5%258F%258D%25E5%2580%25BE%25E9%2594%2580%25E7%25A8%258E-%25E8%25A3%2581%25E5%25AE%259A%25E7%25BE%258E%25E5%259B%25BD%25E4%25B8%2599%25E9%2585%25B8%25E5%25AD%2598%25E5%259C%25A8%25E5%2580%25BE%25E9%2594%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80%20-%20https%3A%2F%2Frfi.my%2FAX8U.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80%20-%20https%3A%2F%2Frfi.my%2FAX8U.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX8U.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E5%AF%B9%E5%8F%B0%E6%B9%BE%E8%81%9A%E7%A2%B3%E9%85%B8%E9%85%AF%E5%BC%80%E5%BE%81%E5%8F%8D%E5%80%BE%E9%94%80%E7%A8%8E%20%E8%A3%81%E5%AE%9A%E7%BE%8E%E5%9B%BD%E4%B8%99%E9%85%B8%E5%AD%98%E5%9C%A8%E5%80%BE%E9%94%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>19/04/2024 - 20:13</div><img src="https://s.rfi.fr/media/display/1ff7a568-fe78-11ee-b2b7-005056bfb2b6/w:1280/p:16x9/Syria%20Deraa.PNG"><p><strong>据叙利亚国防部和一个非政府组织称，周五（4月19日）黎明时分，以色列在袭击伊朗中部时，也袭击了叙利亚南部一个军事雷达阵地。        </strong></p><div><p>叙利亚国防部在一份声明中说："2:55（格林尼治标准时间 23:55）左右，敌人以色列使用导弹（......）对我方在南部地区的防空地点发动了袭击"。叙利亚国防部补充说，袭击造成了"物质"损失，未提及是否有人员伤亡。</p><p>总部设在英国的非政府组织叙利亚人权观察站（OSDH）则报告说，"以色列袭击的目标是德拉（Deraa）省的一个叙利亚军队雷达阵地，该阵地探测到以色列飞机进入叙利亚领空"。</p><p>这个在叙利亚拥有庞大消息网络的非政府组织的负责人拉米-阿卜杜勒-拉赫曼（Rami Abdel Rahmane）对法新社说，袭击发生时，"以色列空军正在德拉地区上空密集飞行"，而叙利亚的防空部队并未采取行动。</p><p>自2011年叙利亚战争爆发以来，以色列军队在叙利亚发动了数百次袭击，特别针对亲伊朗团体。</p><p> "雷达阵地"   </p><p>当地网络媒体 “Suwayda 24” 的负责人马鲁夫（Rayan Maarouf）此前告诉法新社，该地区的"叙利亚军队雷达阵地遭到了袭击"，但他没有说明消息来源。</p><p>据报道，周五凌晨叙利亚遭空袭的时间几乎与伊朗中部听到巨大爆炸声的时间一致。据美国媒体援引美国高级官员的话说，那是以色列发动的袭击。</p><p>据伊朗官方法尔斯通讯社报道，德黑兰当局称，该国中部一个军事基地附近发生了三起爆炸。</p><p>伊朗官方通讯社伊斯兰共和国通讯社Irna表示，爆炸发生后“没有造成重大损失”的报告。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和致命无人机，以色列曾警告称将进行报复。在那次对以色列史无前例的袭击之前，伊朗驻大马士革领事馆遭到袭击，尽管以色列没有承责，但伊朗认为是以色列干的。</p><p>4月1日的袭击摧毁了伊朗领事馆，造成16人死亡，其中有7名伊朗伊斯兰革命卫队成员，包括两名高级军官。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E5%258F%2599%25E5%2588%25A9%25E4%25BA%259A%25E5%258D%2597%25E9%2583%25A8%25E4%25B8%2580%25E4%25B8%25AA%25E5%2586%259B%25E4%25BA%258B%25E9%259B%25B7%25E8%25BE%25BE%25E9%2598%25B5%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
