--- a/articles/rfi/999960.md
+++ b/articles/rfi/999960.md
@@ -1,5 +1,5 @@
-<!--1713712501000-->
-[中印角力背景下的马尔代夫立法选举 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240421-%E4%B8%AD%E5%8D%B0%E8%A7%92%E5%8A%9B%E8%83%8C%E6%99%AF%E4%B8%8B%E7%9A%84%E9%A9%AC%E5%B0%94%E4%BB%A3%E5%A4%AB%E7%AB%8B%E6%B3%95%E9%80%89%E4%B8%BE)
+<!--1713746702000-->
+[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
 ------
 
-<div>21/04/2024 - 13:16</div><img src="https://s.rfi.fr/media/display/a50fb70a-ff2b-11ee-b09e-005056bf30b7/w:1280/p:16x9/000_34PM4D8.jpg"><p><strong>印度洋岛国马尔代夫周日（4月21日）举行立法选举，在中国和印度在该地区大国角力背景下，选举被认为对亲中的总统穆罕默德 穆伊祖的一大考验，其政党在众院不占多数， 新近当选的穆伊祖正推进外交调整，舍弃传统捐助国印度，与中国走的更近。在大选前，这一调整尤其受到反对派的反对。                    </strong></p><div><p>法新社报导，马尔代夫拥有原始白色海滩和僻静度假村，以南亚最昂贵的度假胜地之一著称，而现在，这个位居东西国际航运干线上具有避略地位的印度洋岛国，已成为印度和中国地缘政治竞争的热点。</p><p>现年45岁的穆伊祖去年9月以亲中的前总统亚明（Abdulla Yameen）的代理人之姿赢得大选。就任后，他提出一项削弱印度战略影响力的计划，迫使新德里撤回部署在马尔代夫的89名驻军，这些印度驻军在此驾驶新德里赠送的三架侦察机，在马尔代夫的辽阔海上边界巡逻。穆伊祖目前要求全面印度驻军必须5月10日之前离开。</p><p>与此同时，穆伊祖正不断拉近与中国的关系，他在就任三个月后已在今年一月正式访问北京，在立法选举热闹进行之际，穆伊祖本月把几个备受关注的基础建设合约批给了中国的国有企业，在选举期间引发争议。</p><p>投票前夕，马尔代夫首都马累涌现出一大波代表反对党的黄色旗帜和身着黄色T恤人士的集会，反对党试图阻止总统寻求获得议会多数的努力，并遏制其施政及改变该国外交方向的企图。</p><p>马尔代夫选举组织人呼吁全国约28.5万选民及时投票。设在各群岛的投票陛周日全天开放九个半小时，选举结果预料会在隔天一早揭晓。</p><p>穆伊祖一位不愿透露姓名的助手告诉法新社说，"在各政党为周日选举进行的竞选活动中，地缘政治在很大程度上占据了重要位置。”他说，“总统就任时承诺要求印度军队撤离马尔代夫，他正为此努力”但“自他上台以来议会并没有与他合作"。</p><p>穆伊祖去年年底就任以来，国会已驳回了他提名的三个内阁任命，并否决了他的一些政府预算提案。</p><p>马尔代夫目前国会是由穆伊祖的前一任总统索里（Ibrahim Mohamed Solih）担任党魁的亲印度的“马尔代夫民主党”主导，该党一直在试图阻挡穆伊祖各项重新调整马尔地夫外交方向的举措。</p><p>观察指，包括穆伊祖所属“人民全国大会党”在内的大党均处分裂状态下，任何单一政党预料都难以在国会取得多数席次，因此有必要组成联盟。而马尔代夫法院此前裁定撤销穆伊祖的导师、前总统亚明的腐败和洗钱罪11年监禁判决，亚明已于周四刚刚获释，这个变化被认为应有助于加强穆伊祖的力量。</p><p>亚明承诺将继续开展反印运动，正是这场运动使他的盟友穆伊祖在去年九月的总统选举获胜。穆伊祖承诺的驱逐驻扎在马尔代夫的89名印度驻军行动已从今年3月启动，已有 25名印度士兵撤离。</p><p>对于与印度的关系，曾任马尔代夫上届政府国防部长的民主党人玛丽亚·迪迪向法广驻马尔代夫特约记者 Sébastien Farcis表示说，“ 印度是我们最近的邻国，在紧急情况下我们总是给他们打电话。对我们来说最大的安全威胁是自然灾害或石油泄漏，因为世界三分之一的石油出口经过马尔代夫。这样的事故会摧毁我们依赖鱼业和旅游业。在这种情况下，印度可以帮助我们。而中国距离很远。”</p><p>印度视马尔代夫群岛为其势力范围的一部分，但随着穆伊祖的当选，马尔代夫归入中国、这个其最大外国债权国的轨道。 据马尔代夫国防部称， 3 月该国与北京签署了一项旨在 "加强双边关系 "的 "军事援助 "协议。Farcis报道，在拉近与中国关系的同时，穆伊祖政府拒绝提与中国结盟，表示该国继续欢迎印度的投资及粮食援助。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9E%97%E5%85%B0/" title="林兰">林兰</a></div></div></div></div>
+<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
