--- a/articles/rfi/999967.md
+++ b/articles/rfi/999967.md
@@ -1,5 +1,5 @@
-<!--1713665702000-->
-[科索沃国会跨党派代表团访台湾与候任总统赖清德会面](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2)
+<!--1713674702000-->
+[巴基斯坦自杀式袭击: 据称遇袭的日本人被误认为是中国人](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB-%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA)
 ------
 
-<div>20/04/2024 - 17:09</div><img src="https://s.rfi.fr/media/display/e084a394-ff27-11ee-8caa-005056bfb2b6/w:1280/p:16x9/Taiwan%20Lai%20Ching-te%20Kosovo%20Taipei%2019042024.PNG"><p><strong>科索沃前总理率领的国会跨党派代表团访问台湾与候任总统赖清德会谈，双方希望透过更多元交流与合作，共创两国繁荣发展及增进人民福祉，壮大世界民主阵营的力量。        </strong></p><div><p>据中央社4月19日报道，赖清德当天下午在总统府与科索沃前总理霍蒂（Avdullah Hoti）率领的国会跨党派议员及企业代表会面，表达热烈欢迎，也感谢科索沃总统奥斯曼妮（Vjosa Osmani）及国会友台小组在第一时间对台湾0403地震的诚挚关心。</p><p>据台湾中华民国总统府网站消息，赖清德与科索沃访团会面时表示，科索沃是欧洲最年轻的国家，2008年科索沃宣布独立时，台湾是率先承认科索沃的国家之一。他还说，面对世界变局及威权主义扩张，台湾与科索沃同处捍卫自由的最前线。他强调，科索沃访宾此行具有“壮大民主”、“创造共荣”、“深化交流”三项重大意义。</p><p>率领科索沃代表团的前总理霍蒂恭贺赖清德赢得总统大选，并表示，作为主权独立国家，两国在国际上都面临类似挑战，期盼双边能交流经验，并加强与盟友的合作。霍蒂称他此行已经确立几项可以实质合作的面向，也与台湾经济部、对外贸易发展协会、台湾大学及台大医院等进行了有成果的会面。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXBK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E7%25A7%2591%25E7%25B4%25A2%25E6%25B2%2583%25E5%259B%25BD%25E4%25BC%259A%25E8%25B7%25A8%25E5%2585%259A%25E6%25B4%25BE%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E5%258F%25B0%25E6%25B9%25BE%25E4%25B8%258E%25E5%2580%2599%25E4%25BB%25BB%25E6%2580%25BB%25E7%25BB%259F%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E4%25BC%259A%25E9%259D%25A2&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXBK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 10:30</div><img src="https://s.rfi.fr/media/display/3a174222-fed8-11ee-805b-005056bf30b7/w:1280/p:16x9/2024-04-19T070615Z_942085290_RC2G97ATX36P_RTRMADP_3_PAKISTAN-ATTACK.JPG"><p><strong>巴基斯坦南部卡拉奇周五（4月19日）发生针对汽车的自杀式攻击，车内的五名日本男子所幸一人受轻伤，其他人未有大碍。两名袭击者均已死亡。遇袭的5人为一家日本公司雇员，爆炸发生时正乘车前往卡拉奇出口工业区的途中。报道指，日本人在巴基斯坦很少成为极端组织的攻击目标，日本媒体暗示他们可能被误当作了中国人而遇袭。        </strong></p><div><p>据本台法语部驻东京特约记者费德里克 查理（<strong>Frédéric Charles</strong>）的报道，巴基斯坦极端主义团体对中国在该国资助的工业项目怀有深刻敌意，他们的大多数攻击都是针对中国公民。日本权威财经媒体《日经新闻》报道指，此次攻击中，乘坐防弹车前往卡拉奇港口区的五名日本男子可能被误认为是中国公民。巴基斯坦警方也提及了这种可能性。</p><p>此次袭击据信是第一次针对在巴基斯坦的日本公司的员工。一位专门研究巴基斯坦激进主义的学者告诉日经新闻说，“在巴基斯坦工作的日本人开始担心该国武装分子可能会因长相而把他们误认为是中国人”。反恐专家库拉姆·伊克巴尔（Kuram Iqbal）表示，这次袭击显然是一起身份误袭案件。他说，“日本从未受到巴基斯坦恐怖分子的注意。“</p><p>报道指，日本在巴基斯坦的经济存在与中国相比很少，而中国资助的项目被认为不会给当地居民带来任何好处，大部分工作岗位都流向了中国劳动力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX8A.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E8%2587%25AA%25E6%259D%2580%25E5%25BC%258F%25E8%25A2%25AD%25E5%2587%25BB-%25E6%258D%25AE%25E7%25A7%25B0%25E9%2581%2587%25E8%25A2%25AD%25E7%259A%2584%25E6%2597%25A5%25E6%259C%25AC%25E4%25BA%25BA%25E8%25A2%25AB%25E8%25AF%25AF%25E8%25AE%25A4%25E4%25B8%25BA%25E6%2598%25AF%25E4%25B8%25AD%25E5%259B%25BD%25E4%25BA%25BA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA%20-%20https%3A%2F%2Frfi.my%2FAX8A.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX8A.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E8%87%AA%E6%9D%80%E5%BC%8F%E8%A2%AD%E5%87%BB%3A%20%E6%8D%AE%E7%A7%B0%E9%81%87%E8%A2%AD%E7%9A%84%E6%97%A5%E6%9C%AC%E4%BA%BA%E8%A2%AB%E8%AF%AF%E8%AE%A4%E4%B8%BA%E6%98%AF%E4%B8%AD%E5%9B%BD%E4%BA%BA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
