--- a/articles/rfi/999969.md
+++ b/articles/rfi/999969.md
@@ -1,5 +1,5 @@
-<!--1713656702000-->
-[布林肯下周访华将面告中国不要向俄出口武器](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8)
+<!--1713665702000-->
+[科索沃国会跨党派代表团访台湾与候任总统赖清德会面](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2)
 ------
 
-<div>20/04/2024 - 23:20</div><img src="https://s.rfi.fr/media/display/d04b83f6-ff5b-11ee-8036-005056bfb2b6/w:1280/p:16x9/2024-04-19T092952Z_874730840_RC2I97AOU4FS_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>美国国务卿布林肯将于4月24至26日访问中国。布林肯此行旨在向北京施压，要求其减少对俄罗斯军事及国防产业的支持。布林肯还将谈及南海、台海局势、中国不公平贸易及打击芬太尼等。美方官员简报此行时提到，在台湾总统就职前的敏感时期，希望所有国家避免采取使局势升级的挑衅行动。        </strong></p><div><p>法新社报道，这是布林肯一年之内第二次出访北京，也标志着美中之间的摩擦，相较于前总统特朗普时期进一步减少。特朗普在竞选期间承诺，如果赢得11月的总统大选，他将对北京采取强硬政策。而现任总统拜登则是寻求维持世界最大两个经济体之间更大稳定的同时，继续向北京施加压力。</p><p>在布林肯访华之前，拜登与美国在亚洲的两个盟友日本和菲律宾领导人举行首次三边峰会，向在印太地区不断扩张的中国发出强烈信号；与此同时，拜登政府计划大幅提高中国钢铁关税。</p><p>一位美国高层官员向媒体表示，“我们的情况与一年前有所不同，当时美中双边关系处于历史低点”。这位没有透露姓名的官员称，“我们的目标是在稳定(美中）双边关系的同时，加强(与盟友间的）联盟、积极竞争并捍卫我们利益”。</p><p>据称，布林肯将特别提出北京对影响乌克兰战场局势的俄罗斯国防工业的支持。虽然中国没有向俄罗斯直接提供军事援助，但美国指责中国向俄罗斯转让用于生产对乌克兰战争的弹药和武器的军民两用材料。布林肯在周五意大利举行的新闻发布会上指责北京"间接"助长乌克兰冲突称：“中国既希望与欧洲及其他国家保持友好关系，就不能助长冷战结束以来对欧洲安全面临的最大威胁”。</p><p>美国国务院高阶官员日前举行电话背景简报时表示，布林肯此行除了前往北京，还将中途停留上海。官员指出，布林肯一行人包括刚从中国返美、主管亚太事务的助卿康达（Daniel Kritenbrink）、国际毒品暨执法事务助卿罗宾逊（Todd Robinson）、负责网络空间和数位政策的费克（Nathaniel Fick）以及公共外交及公共事务次卿艾伦（Elizabeth Allen）。</p><p>美中关系或许从谷底反弹，但是布林肯再次踏上中国，也逢多事之秋：美国刚启动对中国的海运、物流和造船业的301条款调查；美国会举证，指中国仍补贴芬太尼生产出口，及美国官员多次正告中国不要支持俄罗斯国防业。</p><p>这名官员表示，布林肯此行目标有3：在关键议题上取得进展、明确且直接地传达对区域及全球议题的关切，及负责任地管理竞争，以免造成误判或冲突。官员也预告，可预期双边在未来几周、几个月将进行更多高阶外交接触及互动。</p><p>他指出，布林肯除了延续拜习会的承诺，推进禁毒合作及强化两军沟通等外，布林肯将明确且坦率地提出美国对人权、不公平经济及贸易行为、中国工业产能过剩、中国支持俄罗斯国防业等问题的关切。</p><p>他称，"国务卿还将讨论印太区域的挑战，包括中国在南海挑衅、朝鲜威胁言论及鲁莽行动、缅甸危机及重申台海和平与稳定的重要性"。</p><p>另据中央社报道，在官员回应布林肯是否将要求中国在台湾总统就职典礼前后，维持台海稳定时表示，布林肯将在公开及私下场合强调，美国对于维持台海和平与稳定有着持久的利益，美国认为这对于该区域及世界至关重要。</p><p>他说，在台湾新任总统就职典礼前夕的这重要且敏感时期，"我们期待所有国家都能为和平与稳定做出贡献，避免采取可能升高紧张局势的挑衅行动，并展示克制。这将是我们今后要传达的讯息。"</p><p>打击在美国引发成千上万人死亡的芬太尼（fentanyl）氾滥方面，官员说，布林肯视芬太尼为美中最重要的议题之一。芬太尼是18岁到49岁美国人最主要的死因，此行重点在于确保双边落实拜习会的相关协议，在执法机构方面，更是如此。</p><p>记者询问美国国务院短期内是否有意降低对中国的第3级旅游警示，官员指出，美国尽一切可能确保海外公民的安全。当前针对中国的旅游警示是基于中国若干国安法的不透明性及美国公民遭关押等情形所引发的疑虑，相信布林肯访中期间将再次提出这些问题。</p><p>他说，美方将在适当的情况下重新评估旅游示警等级，"但实际上，这是非常严格的过程。"</p><p>中国"对外关系法"及修订版"反间谍法"去年7月上路后，美国国务院发出第3级旅游警示（Reconsider travel，仅次于最高级的"请勿前往"，Do Not Travel），建议公民"重新考虑是否前往中国旅行，以避免中国当局任意执法、禁止出境以及错误拘留的风险。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDQ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF%25E4%25B8%258B%25E5%2591%25A8%25E8%25AE%25BF%25E5%258D%258E%25E5%25B0%2586%25E9%259D%25A2%25E5%2591%258A%25E4%25B8%25AD%25E5%259B%25BD%25E4%25B8%258D%25E8%25A6%2581%25E5%2590%2591%25E4%25BF%2584%25E5%2587%25BA%25E5%258F%25A3%25E6%25AD%25A6%25E5%2599%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%20-%20https%3A%2F%2Frfi.my%2FAXDQ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%20-%20https%3A%2F%2Frfi.my%2FAXDQ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDQ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%E4%B8%8B%E5%91%A8%E8%AE%BF%E5%8D%8E%E5%B0%86%E9%9D%A2%E5%91%8A%E4%B8%AD%E5%9B%BD%E4%B8%8D%E8%A6%81%E5%90%91%E4%BF%84%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 17:09</div><img src="https://s.rfi.fr/media/display/e084a394-ff27-11ee-8caa-005056bfb2b6/w:1280/p:16x9/Taiwan%20Lai%20Ching-te%20Kosovo%20Taipei%2019042024.PNG"><p><strong>科索沃前总理率领的国会跨党派代表团访问台湾与候任总统赖清德会谈，双方希望透过更多元交流与合作，共创两国繁荣发展及增进人民福祉，壮大世界民主阵营的力量。        </strong></p><div><p>据中央社4月19日报道，赖清德当天下午在总统府与科索沃前总理霍蒂（Avdullah Hoti）率领的国会跨党派议员及企业代表会面，表达热烈欢迎，也感谢科索沃总统奥斯曼妮（Vjosa Osmani）及国会友台小组在第一时间对台湾0403地震的诚挚关心。</p><p>据台湾中华民国总统府网站消息，赖清德与科索沃访团会面时表示，科索沃是欧洲最年轻的国家，2008年科索沃宣布独立时，台湾是率先承认科索沃的国家之一。他还说，面对世界变局及威权主义扩张，台湾与科索沃同处捍卫自由的最前线。他强调，科索沃访宾此行具有“壮大民主”、“创造共荣”、“深化交流”三项重大意义。</p><p>率领科索沃代表团的前总理霍蒂恭贺赖清德赢得总统大选，并表示，作为主权独立国家，两国在国际上都面临类似挑战，期盼双边能交流经验，并加强与盟友的合作。霍蒂称他此行已经确立几项可以实质合作的面向，也与台湾经济部、对外贸易发展协会、台湾大学及台大医院等进行了有成果的会面。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXBK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-%25E7%25A7%2591%25E7%25B4%25A2%25E6%25B2%2583%25E5%259B%25BD%25E4%25BC%259A%25E8%25B7%25A8%25E5%2585%259A%25E6%25B4%25BE%25E4%25BB%25A3%25E8%25A1%25A8%25E5%259B%25A2%25E8%25AE%25BF%25E5%258F%25B0%25E6%25B9%25BE%25E4%25B8%258E%25E5%2580%2599%25E4%25BB%25BB%25E6%2580%25BB%25E7%25BB%259F%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B7%25E4%25BC%259A%25E9%259D%25A2&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2%20-%20https%3A%2F%2Frfi.my%2FAXBK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXBK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%A7%91%E7%B4%A2%E6%B2%83%E5%9B%BD%E4%BC%9A%E8%B7%A8%E5%85%9A%E6%B4%BE%E4%BB%A3%E8%A1%A8%E5%9B%A2%E8%AE%BF%E5%8F%B0%E6%B9%BE%E4%B8%8E%E5%80%99%E4%BB%BB%E6%80%BB%E7%BB%9F%E8%B5%96%E6%B8%85%E5%BE%B7%E4%BC%9A%E9%9D%A2&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
