--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713651303000-->
-[中国海军成立75周年之际，美菲将举行迄今规模最大的「肩并肩」军演 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240420-%E4%B8%AD%E5%9B%BD%E6%B5%B7%E5%86%9B%E6%88%90%E7%AB%8B75%E5%91%A8%E5%B9%B4%E4%B9%8B%E9%99%85%EF%BC%8C%E7%BE%8E%E8%8F%B2%E5%B0%86%E4%B8%BE%E8%A1%8C%E8%BF%84%E4%BB%8A%E8%A7%84%E6%A8%A1%E6%9C%80%E5%A4%A7%E7%9A%84-%E8%82%A9%E5%B9%B6%E8%82%A9-%E5%86%9B%E6%BC%94)
+<!--1713656702000-->
+[联合国在刚果(金)南基伍撤兵](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240420-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C-%E9%87%91-%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5)
 ------
 
-<div>20/04/2024 - 13:40</div><img src="https://s.rfi.fr/media/display/e98fc2f0-ff06-11ee-9e4b-005056bfb2b6/w:1280/p:16x9/a4b36f8e-0be8-4841-92e5-1998c81bd74e.png"><p><strong>中国海军成立75周年之际，美菲将举行史上最大规模的「肩并肩」（Balikatan）联合军演。这项一年一度的演习从4月22日起至5月10日结束，届时将约有16,700名军人参加，美方将出动11,000人，菲方将派出5000多人。他们将参加海上安全、空中和导弹防御、动态导弹打击、网络防御和信息作战等方面的训练。                    </strong></p><div><p>据路透社报道，负责这次演习的菲律宾陆军上校迈克尔·洛基科（Michael Logico）说，这将是首次在菲律宾领海之外进行的海上演习。他表示，美菲军人将模拟收复菲律宾最北端被敌方军队占领的岛屿。该岛屿位于面向南中国海的巴拉望省西部，靠近台湾，其中最北端的雅米岛距离台湾仅约140公里。</p><p>美菲军队「肩并肩」联演举行始于1991年，至今已经34个年头。在今年的年度演习中，法国军队将首次派出一艘护卫舰参加，与菲律宾和美国海军军舰在马尼拉南中国海内专属经济区联合巡航。这次由菲律宾、美国和法国海军联合举行的演习被视为历届「肩并肩」规模最大的一次。</p><p>但法国与菲律宾两国并没有签署「驻军地位协议」（SOFA），因此法军只能在菲律宾领海之外参加演习。</p><p>路透社指出，此次演习旨在提高美国和菲律宾两军之间的互操作性。此次演习是在中国最近在南中国海和台湾海峡频频采取咄咄逼人的行为的背景下进行的，而南中国海和台湾海峡是中美紧张关系的导火索。</p><p><strong>针对美菲军演 中国反对“威慑第三方”</strong></p><p>针对美菲计划中的演习，中国外交部已警告菲律宾应该“清醒地认识到”，“拉拢域外国家在南海炫耀武力、挑起对抗，只会加剧紧张局势，破坏地区稳定”。</p><p>据中央社援引中国军事问题专家曹卫东周六向媒体表示，反对菲律宾引进外国的军事力量威慑第三方，并说这已非单单保护菲律宾。</p><p>曹卫东说，美菲两国的军事关系是两国的事情，但中方反对的是军事关系针对第三方。中国与菲律宾是南海周边国家，存在岛屿主权与海上画线争端的问题。</p><p>曹卫东指，美国在菲律宾有5个基地，现在又有4个，其中3个在吕宋岛，“靠近我们的台湾地区”。并且又部署「堤丰武器系统」（Typhon Weapons System ），可搭载「战斧」（Tomahawk）巡戈导弹，加上「标准六型」（SM-6）导弹，这令台湾在「战斧」巡戈导弹的覆盖之下。</p><p>据他强调，中方因而要考虑，“这对台湾岛构成威胁”，还对广东等沿海构成威胁，离大陆的东南沿海城市也很近。如果将这种军事基地部署在菲律宾，无论是对台湾还是中国大陆，“都是安全上的威胁”。</p><p>曹卫东又说，中方坚决反对这样的演习，因为威胁其他国家。除此之外，美菲演习扩大，向外海推进，并且是在美国与俄罗斯撕毁「中导条约」后，第一次在境外部署陆基中程弹道导弹，射程在500公里至5500公里，“部署在我们家门口”，对中国的意图是非常明显。</p><p>至于19日共军成立信息支持部队，曹卫东仅表示，这与编制体制有关，这种改变还是对未来讯息条件下的军事任务有关。</p><p><strong>美军新型陆基导弹首度登上第一岛链</strong></p><p>另据美国《海军新闻》15日消息称，美国陆军的新型陆基导弹发射系统最近在菲律宾北部部署，这套被称为「堤丰」（Typhon）武器系统的中程能力陆基导弹发射系统，正在参与为期两周的「坚盾-24」（Salaknib 24）美菲陆军联合演习。</p><p>该陆基导弹发射系统由美国洛克希德马丁公司设计、原采用海军MK-41垂直发射系统，修改后用于陆基作战。值得一提的是，此次是这套新型陆基导弹系统首次在“第一岛链”亮相，中其程导弹的射程可达两千公里以上，因此被认为可达中国东南沿海地带及敏感的南海及台湾海峡区域。专家视此为对中国发出警示，传达美国在印太地区的军事防御能力。</p><p>美国陆军新闻稿亦指出，部署「堤丰」武器系统“目的是提升菲律宾的海上防御能力，同时强化美菲同盟的协同工作能力与战备”。</p><p>值得关注还有，军事专家表示，美方在美菲联演部属的系统，可应付中国各型导弹。例如战斧可攻击中国南方陆地、在南海的基地。如果美军必须在西太平洋或在南海跟解放军交战，美军会快速派出派遣部队到第一岛链上各岛屿，并在快速部队掩护下，设各型导弹基地，一方面去拦截中国可能对第一岛链上美国的各盟邦或伙伴国，乃至美军基地，甚至是第二岛链关岛等的设施的攻击。</p><p>针对美国的举动，中南海也随即释出高调反制信号，发布与古巴军事高层在北京有军事对话的消息，较劲意味十分浓厚，再次折射出当下美、菲、中在此区域的激烈角力。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E5%A4%8F%E6%A6%95/" title="夏榕">夏榕</a></div></div></div></div>
+<div>20/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/2dfd7f30-1632-11ea-ac30-005056a99247/w:1280/p:16x9/RDC-Helicopt%C3%A8re-Monusco_2_0.jpg"><p><strong>在非洲刚果民主共和国（RD Congo）的东部地区，联合国维和部队-驻刚果（金）稳定特派团（Monusco）的撤兵行动正在进行之中。在南基伍省的卡莱赫（Kalehe）地区，巴基斯坦蓝盔兵已于昨天周五（2024年04月19日）把他们的营地移交给了刚果（金）的军事力量。本台法广（RFI）特派记者当天现场见证了官方组织的移交仪式。南基伍省的军政高层和妇女领袖都对联合国维和部队军人们的付出给予了正面的肯定，并表示谢意。        </strong></p><div><p>本台法广（RFI）法文网今天（2024年04月20日）星期六有关非洲的最新报导之一是联合国维和部队正在紧锣密鼓地从刚果民主共和国撤兵。现在距离近期目标，即在四月底之前撤出该国的南基伍省还有10天。最终目标则是要在今年（2024年）结束从刚果（金）撤出的任务。</p><p><strong>-- 巴基斯坦蓝盔兵得到南基伍民众的肯定 -</strong></p><p>据本台法广（RFI）法文网报导，在南基伍省的联合国驻刚果（金）稳定特派团（Monusco）现已关闭了位于瓦伦古（Walungu）地区的Kamanyola基地，和位于卡巴雷（Kabare）地区的Amsar营地。04月19日周五巴基斯坦蓝盔兵移交的Bunyakiri营地位于卡莱赫（Kalehe）地区。当地位于南基伍省省城布卡武（Bukavu）以北80公里。联合国维和部队的这个营地紧邻Kahuzi Biega国家公园。巴基斯坦蓝盔兵自2004年起，在当地已经驻扎了20年之久。</p><a href="https://www.rfi.fr/fr/afrique/20240419-rdc-la-monusco-se-retire-de-sa-base-de-bunyakiri-au-sud-kivu"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.jpg" alt="Peacekeepers serving in the United Nations Organization Stabilization Mission in the Democratic Republic of the Congo (MONUSCO) from Pakistan patrol the streets of Uvira, South Kivu, in the Democratic" srcset="https://s.rfi.fr/media/display/d43b1974-0d55-11ea-bec1-005056a9aa4d/2017-09-30t175913z_1849764507_rc19a77bd740_rtrmadp_3_congo-rebels.jpg 2480w"sizes=""width="2480"height="1620"loading="lazy"></picture><figcaption><span>存档图片 / 刚果（金）的巴基斯坦蓝盔兵。Image Archive / RD Congo ：des contingents pakistanais de la Monusco.</span>                <span>REUTERS - Crispin Kyala / RFI Archive</span>            </figcaption></figure></a><p>本台法广（RFI）特派记者威廉（William Basimike）周五出席了巴基斯坦蓝盔兵向刚果（金）军事力量移交营地的仪式。在现场，Bunyakiri的一位妇女领袖Maliyabo Munganga感谢巴基斯坦维和军人们的付出。这位女性领袖对齐塞克迪总统（Président Félix Tshisekedi）直言道，他们（巴基斯坦军人们）稳住了安全局势，因为，自从他们到来之后，强奸案减少了。</p><p><strong>-- 南基伍省军政当局感谢巴基斯坦蓝盔兵 -</strong></p><p>南基伍省的Bunyakiri营地最初，只是一个不固定的行动基地。2016年才成为了一个固定营地。这里部署了80名维和士兵，负责保护周边1万多居民。负责支援联合国行动的负责人Ebrima Ceesay重申，联合国没有放弃刚果（金）。他说：“在驻刚果（金）稳定特派团（Monusco）撤出后，联合国的机构、基金和项目将继续遵照授权予以提供支持。但安全与民防的责任则属于刚果（金）政府。</p><a href="https://www.rfi.fr/fr/tag/rdc/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.webp 600w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.jpg" alt="Les tireurs isolés suivent régulièrement des formations pratiques et font plusieurs exercices sur les champs de tir." srcset="https://s.rfi.fr/media/display/d10054ee-151c-11ea-867b-005056a99247/LA-PHOTO-DU-MARDI-03-NOVEMBRE-2015_0.jpg 600w"sizes=""width="600"height="400"loading="lazy"></picture><figcaption><span>存档图片 / 刚果（金）：南基伍省Bunyakiri的军事训练。Image Archive / RD Congo : MONUSCO - un tireur embusqué lors d’une formation dans le territoire de Bunyakiri. （illustration)</span>                <span>MONUSCO - Sajjad Khan / RFI Archive</span>            </figcaption></figure></a><p>刚果（金）南基伍省副省长Marc Malago，还有在南基伍省的军方后勤与行政副指挥Gr. Mabosso Jean-Ladis将军也都称赞巴基斯坦维和军人们得以重筑和平。他们还承诺，<a href="https://www.rfi.fr/tw/關鍵詞/剛果-金/" target="_self">刚果（金）</a>政府将肩负起保障人民安全的职责。</p><a href="https://www.rfi.fr/tw/%E9%97%9C%E9%8D%B5%E8%A9%9E/%E5%89%9B%E6%9E%9C-%E9%87%91/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.webp 344w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.gif" alt="存档地图 / 刚果（金）南基伍省及其省城布卡武（Bukavu）。RFI Carte Archive / RD Congo : le Sud-Kivu est une province de la république démocratique du Congo. Elle voisine le Rwanda, le Burundi et la Tanzanie. Ici, la province Sud-Kivu." srcset="https://s.rfi.fr/media/display/6a340b4c-1563-11ea-a62c-005056a99247/REP-DEM-CONGO-344-sud-kivu_1_0.gif 344w"sizes=""width="344"height="257"loading="lazy"></picture><figcaption><span>存档地图 / 刚果（金）南基伍省及其省城布卡武（Bukavu）。RFI Carte Archive / RD Congo : le Sud-Kivu est une province de la république démocratique du Congo. Elle voisine le Rwanda, le Burundi et la Tanzanie. Ici, la province Sud-Kivu.</span>                <span>©Latifa Mouaoued/RFI</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <strong><a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self">Fin</a></strong> .~</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXDF.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240420-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E8%2581%2594%25E5%2590%2588%25E5%259B%25BD%25E5%259C%25A8%25E5%2588%259A%25E6%259E%259C-%25E9%2587%2591-%25E5%258D%2597%25E5%259F%25BA%25E4%25BC%258D%25E6%2592%25A4%25E5%2585%25B5&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5%20-%20https%3A%2F%2Frfi.my%2FAXDF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5%20-%20https%3A%2F%2Frfi.my%2FAXDF.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXDF.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%81%94%E5%90%88%E5%9B%BD%E5%9C%A8%E5%88%9A%E6%9E%9C%28%E9%87%91%29%E5%8D%97%E5%9F%BA%E4%BC%8D%E6%92%A4%E5%85%B5&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
