--- a/articles/rfi/999984.md
+++ b/articles/rfi/999984.md
@@ -1,5 +1,5 @@
-<!--1713595501000-->
-[涉巴基斯坦弹道导弹计划 美国制裁4实体包括3家中企](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92-%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81)
+<!--1713611701000-->
+[解放军成立信息支援部队 撤销战略支援部队番号](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240419-%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F-%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7)
 ------
 
-<div>20/04/2024 - 00:32</div><img src="https://s.rfi.fr/media/display/8e9d3e60-c1a1-11ee-9b11-005056a90284/w:1280/p:16x9/AP23199673095971.jpg"><p><strong>美国国务院发言人米勒（Matthew Miller）4月19日通过声明宣布，“根据针对大规模杀伤性武器及其运载工具扩散者的第13382号行政命令，我们正在指定四个实体。这些实体——三个位于中华人民共和国（PRC），一个位于白俄罗斯——向巴基斯坦的弹道导弹计划，包括其远程导弹计划提供了导弹适用物品”。他称，“美国致力于加强全球防扩散机制，采取行动破坏支持令人担忧的扩散活动的采购网络”。        </strong></p><div><p>米勒在声明中表示：“我们今天指定的实体：明斯克轮式拖拉机厂、西安龙德科技发展有限公司、天津Creative Source国际贸易有限公司（Tianjin Creative Source International Trade Co Ltd）和北京固鸿科技有限公司（Granpect Co. Ltd.），这些实体参与的活动或交易对巴基斯坦扩散大规模杀伤性武器或其运载工具，包括制造、获取、拥有、开发、运输、转移或使用此类物项的任何努力，起到了实质性作用，或构成了实质性作用的风险”。</p><p>该声明称：“美国与其他伙伴密切合作，致力于加强全球防扩散机制，无论大规模杀伤性武器的扩散网络出现在何处，都要对其进行威慑和瓦解”。根据相关法律规定，被指定人员在美国境内或由美国人拥有或控制的所有财产和财产权益均被封锁，必须向美国财政部海外资产控制办公室（OFAC）报告。</p><p>此外，所有直接或间接拥有一个或多个被封锁者50%或以上所有权的个人或实体也会被封锁。美国人或在美国境内，或过境进行的所有交易，凡涉及被指定者或在其他方面被封锁者的任何财产或财产权益的，均被禁止，除非获得美国财政部海外资产控制办公室颁发的一般或特定许可证的授权或豁免。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX5W.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E6%25B6%2589%25E5%25B7%25B4%25E5%259F%25BA%25E6%2596%25AF%25E5%259D%25A6%25E5%25BC%25B9%25E9%2581%2593%25E5%25AF%25BC%25E5%25BC%25B9%25E8%25AE%25A1%25E5%2588%2592-%25E7%25BE%258E%25E5%259B%25BD%25E5%2588%25B6%25E8%25A3%25814%25E5%25AE%259E%25E4%25BD%2593%25E5%258C%2585%25E6%258B%25AC3%25E5%25AE%25B6%25E4%25B8%25AD%25E4%25BC%2581&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81%20-%20https%3A%2F%2Frfi.my%2FAX5W.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX5W.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B6%89%E5%B7%B4%E5%9F%BA%E6%96%AF%E5%9D%A6%E5%BC%B9%E9%81%93%E5%AF%BC%E5%BC%B9%E8%AE%A1%E5%88%92%20%E7%BE%8E%E5%9B%BD%E5%88%B6%E8%A3%814%E5%AE%9E%E4%BD%93%E5%8C%85%E6%8B%AC3%E5%AE%B6%E4%B8%AD%E4%BC%81&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 21:51</div><img src="https://s.rfi.fr/media/display/44663486-fe83-11ee-93e4-005056a90284/w:1280/p:16x9/Capture-2200.JPG"><p><strong>4月19日，中国人民解放军宣布成立信息支援部队，其由中央军委直接领导指挥，撤销原有的战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。战略支援部队成立大会于2015年12月31日举行，该部队成立至今已有逾8年的历史。        </strong></p><div><p>据官媒新华社报导，中国人民解放军信息支援部队成立大会周五在北京八一大楼隆重举行。中共中央总书记、国家主席、中央军委主席习近平向信息支援部队授予军旗并致训词，代表党中央和中央军委向信息支援部队全体官兵致以热烈祝贺。他强调，要贯彻新时代强军思想，贯彻新时代军事战略方针，坚持政治建军、改革强军、科技强军、人才强军、依法治军，聚焦备战打仗，按照体系融合、全域支撑的战略要求，锐意进取，扎实工作，努力建设一支强大的现代化信息支援部队。</p><p>报导提及，习近平在成立大会上将军旗授予信息支援部队司令员毕毅、政治委员李伟。信息支援部队主要领导向习近平敬礼，从习近平手中接过军旗，持旗肃立。全体官兵向军旗庄严敬礼。授旗仪式后，习近平致训词。他指出，调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。</p><p>报导称，习近平强调，信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大。要坚决听党指挥，全面贯彻党对军队绝对领导的根本原则和制度，全面加强部队党的建设，坚定理想信念，严肃纪律规矩，弘扬优良作风，确保部队绝对忠诚、绝对纯洁、绝对可靠。要有力支撑作战，坚持信息主导、联合制胜，畅通信息链路，融合信息资源，加强信息防护，深度融入全军联合作战体系，精准高效实施信息支援，服务保障各方向各领域军事斗争。要加快创新发展，坚持作战需求根本牵引，加强体系统筹，推进共建共享，强化科技创新，建设符合现代战争要求、具有我军特色的网络信息体系，高质量推动体系作战能力加速提升。</p><p>成立大会上，中共中央政治局委员、中央军委副主席张又侠宣读了习近平签发的中央军委关于组建信息支援部队的命令、信息支援部队领导班子成员任职命令和党委常委会组成通知，中共中央政治局委员、中央军委副主席何卫东主持大会。报导指，根据中央军委决定，新组建的信息支援部队由中央军委直接领导指挥，同时撤销战略支援部队番号，相应调整军事航天部队、网络空间部队领导管理关系。</p><p>此外，中国国防部新闻发言人吴谦周五晚在出席专题新闻发布会上介绍称，“调整组建信息支援部队，是党中央和中央军委从强军事业全局出发作出的重大决策，是构建新型军兵种结构布局、完善中国特色现代军事力量体系的战略举措，对加快国防和军队现代化、有效履行新时代人民军队使命任务具有重大而深远的意义。信息支援部队是全新打造的战略性兵种，是统筹网络信息体系建设运用的关键支撑，在推动我军高质量发展和打赢现代战争中地位重要、责任重大”。</p><p>就“构建新型军兵种结构布局”情况，吴谦指出：“这次改革后，中国人民解放军总体形成中央军委领导指挥下的陆军、海军、空军、火箭军等军种，军事航天部队、网络空间部队、信息支援部队、联勤保障部队等兵种的新型军兵种结构布局。随着形势任务的发展，我们将不断完善中国特色军事力量体系”。</p><p>就“军事航天部队担负什么任务”的提问，吴谦表示：“推进军事航天部队建设，对提高安全进出和开放利用太空能力、增强太空危机管控和综合治理效能、更好和平利用太空具有重要意义。中方的太空政策清晰明确，我们一向坚持和平利用太空，愿同所有和平利用太空的国家一道，加强交流、深化合作、为维护太空持久和平与共同安全作出贡献”。</p><p>就“网络空间部队担负什么任务”的提问，吴谦说：“推进网络空间部队建设，大力发展网络安全防御手段，对筑牢国家网络边防，及时发现和抵御网络入侵，捍卫国家网络主权和信息安全具有重要意义”。他续称：“我们积极倡导建设和平、安全、开放、合作的网络空间，致力于同国际社会一道共同构建网络命运共同体”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4j.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240419-%25E8%25A7%25A3%25E6%2594%25BE%25E5%2586%259B%25E6%2588%2590%25E7%25AB%258B%25E4%25BF%25A1%25E6%2581%25AF%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F-%25E6%2592%25A4%25E9%2594%2580%25E6%2588%2598%25E7%2595%25A5%25E6%2594%25AF%25E6%258F%25B4%25E9%2583%25A8%25E9%2598%259F%25E7%2595%25AA%25E5%258F%25B7&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7%20-%20https%3A%2F%2Frfi.my%2FAX4j.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4j.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%A7%A3%E6%94%BE%E5%86%9B%E6%88%90%E7%AB%8B%E4%BF%A1%E6%81%AF%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%20%E6%92%A4%E9%94%80%E6%88%98%E7%95%A5%E6%94%AF%E6%8F%B4%E9%83%A8%E9%98%9F%E7%95%AA%E5%8F%B7&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
