--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+4-22 [智庫：中國軍費連年增 帶動鄰國增加防衛預算](/articles/dw/1025828.md)
+
+4-22 [乌克兰十大军事援助国](/articles/dw/1025829.md)
+
 4-22 [全球主要市场齐降价能否“拯救”特斯拉？](/articles/dw/1025830.md)
 
 4-22 [菲律賓缺席中國海軍論壇 北京擴張遠洋艦隊](/articles/dw/1025831.md)
@@ -596,8 +600,4 @@
 3-26 [巴基斯坦发生恐怖袭击 五名中国人丧生](/articles/dw/1026126.md)
 
 3-26 [德语媒体：欧美商界盼加入中国的新质发展](/articles/dw/1026127.md)
-
-3-26 [解码中国：小心翼翼地重新接近澳大利亚](/articles/dw/1026128.md)
-
-3-26 [“伊斯兰国”死灰复燃 部分欧洲国家提高戒备](/articles/dw/1026129.md)
 
