--- a/articles/rfi/999951.md
+++ b/articles/rfi/999951.md
@@ -1,5 +1,5 @@
-<!--1713771902000-->
-[日本大学两名华人教授2023年相继在中国失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA)
+<!--1713771903000-->
+[布林肯将就向俄罗斯出口武器相关技术警告中国 华盛顿考虑制裁中国金融机构](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E5%B8%83%E6%9E%97%E8%82%AF%E5%B0%86%E5%B0%B1%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%E7%9B%B8%E5%85%B3%E6%8A%80%E6%9C%AF%E8%AD%A6%E5%91%8A%E4%B8%AD%E5%9B%BD-%E5%8D%8E%E7%9B%9B%E9%A1%BF%E8%80%83%E8%99%91%E5%88%B6%E8%A3%81%E4%B8%AD%E5%9B%BD%E9%87%91%E8%9E%8D%E6%9C%BA%E6%9E%84)
 ------
 
-<div>21/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/4ababa6e-1611-11ea-9b7f-005056a99247/w:1280/p:16x9/chine%20japon%20190315.jpg"><p><strong>日本亚洲大学一名中国教授自去年2月暂时回国后失踪，他在日本的家人一直无法与他取得联系。另一位日本神户学院大学的华人教授去年夏天也在中国失踪...        </strong></p><div><p>据共同社引述熟悉双边关系的消息人士周日介绍，日本亚洲大学音译名范云涛的教授现年61岁，在中国期间，他是被中国当局联系之后失踪的，因此被认为可能已被拘留。</p><p>此外，日本神户学院大学在今年3月份说，该大学的教授胡士云也在去年夏天回中国后失踪。</p><p>共同社说，两位华人教授在中国失踪引起了人们的关注，因为中国一直在加强维护国家安全的力度，导致包括外国公民在内的人员被以涉嫌从事间谍活动拘留。</p><p>中国政府加强了对与其他国家交往的外国人和中国人的打击力度，预计这将加深中日关系中现有的紧张局势。</p><p>该报道还说，中国政府加强了对外国人和与外国交往的中国人的镇压措施，这很可能会加剧中日关系现有的紧张局势，而这个关系已经因领土争端等一系列问题而受到损害。</p><p>2023年2月底，范云涛返回上海。消息人士说，他失踪前曾告诉身边的人，他被要求陪同当局参加一次审问。他患有慢性疾病，需要适当的治疗。</p><p>范云涛教授是国际法和政治问题专家，他原计划于去年 4 月返回日本，但他在日本的家人一直无法与他取得联系。他已被校方安排休假，由另一名教师负责他的大学课程。</p><p>日本神户学院大学的胡士云在中国失踪后，校方已安排代课老师代替他的工作。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXI3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E5%25A4%25A7%25E5%25AD%25A6%25E4%25B8%25A4%25E5%2590%258D%25E5%258D%258E%25E4%25BA%25BA%25E6%2595%2599%25E6%258E%25882023%25E5%25B9%25B4%25E7%259B%25B8%25E7%25BB%25A7%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXI3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 10:46</div><img src="https://s.rfi.fr/media/display/d04b83f6-ff5b-11ee-8036-005056bfb2b6/w:1280/p:16x9/2024-04-19T092952Z_874730840_RC2I97AOU4FS_RTRMADP_3_G7-ITALY-FOREIGN.JPG"><p><strong>知情人士透露，华盛顿正在考虑对中国金融机构实施制裁。据美国上周公布的清单，到2023年，俄罗斯进口芯片90%来自中国，并用于生产导弹、坦克和飞机。去年最后一季度，俄罗斯进口机床的70%来自中国，并“可能用于”生产弹道导弹。        </strong></p><div><p>金融时报4月21日报道说，美国国务卿安东尼·布林肯将警告中国，除非中国停止向俄罗斯提供武器相关技术，否则美国将采取惩罚措施，因为华盛顿正在考虑对中国金融机构实施制裁。</p><p>在下周访问中国期间，布林肯将告诉中国官员，美国及其盟国对北京拒绝停止向莫斯科提供从芯片到巡航导弹发动机等一切物资以帮助重建其工业基础感到越来越不耐烦。</p><p>布林肯不打算透露美国将采取什么措施，但几位知情人士表示，美国正在考虑对中国金融机构和其他实体实施制裁。</p><p>其中一位人士表示，他的信息是美国将向中国官员发出的最明确警告。</p><p>最近几周，美国加强了对这个局势的警告，包括在与欧洲和七国集团盟友的会议上。</p><p>美国副国务卿库尔特·坎贝尔在接受采访时表示，中国在试图与欧洲发展更紧密的经济和政治关系的同时，却向俄罗斯提供军民两用技术，从而破坏了欧洲的安全。</p><p>他说，“我们试图向欧洲和中国对话者强调的是，这些“双重”目标是相悖的，我们希望中国非常仔细地考虑前进的道路”。坎贝尔还表示，美国“非常直接”表达了自己的关切，并将对中国的行动"追究责任"。</p><p>布林肯先生将于 4 月 24 日至 26 日访问中国，并将在上海和北京举行会议。坎贝尔表示，布林肯将向中国外交部长王毅提出这个问题。</p><p>一位美国官员表示，本周在卡普里举行的七国集团外长会议上，布林肯讨论了这一问题，七国集团其他成员已告诉华盛顿，他们已经或将会向中国提出这一问题。</p><p>一位人士表示，中国越来越担心其银行可能受到制裁。总统乔·拜登去年 12 月发布了一项行政命令，警告外国金融机构，“如果它们为与俄罗斯军事工业基地有关的重大交易提供便利，它们将面临失去进入美国金融体系的风险”。  </p><p>现就职于乔治敦大学的前美国中情局中国问题分析师丹尼斯-怀尔德（Dennis Wilder）说："一段时间以来，中国一直担心美国会因为中国在乌克兰战争期间对俄罗斯的支持而加大对中国的制裁，尤其是在银行业领域。</p><p>据俄罗斯媒体报道，四家中国顶级银行上个月选择性地停止接受来自俄罗斯的付款，特别是与关键电子元件交易相关的付款。</p><p>美国财长珍妮特·耶伦本月访问中国时提出了这个问题，但布林肯打算以更强硬的措辞对此事施压。三周前，拜登在两国领导人通电话时向中国国家主席习近平表达了担忧。</p><p>坎贝尔表示，在华盛顿发出一系列警告后，“判断中国是否正在重新评估其对俄罗斯和乌克兰战争的立场和立场还为时过早”。</p><p>尽管美国希望通过惩罚性措施的威胁说服中国改变路线，但它也敦促欧洲国家采取行动。美国认为欧洲的压力至关重要，因为中国担心随着本国经济放缓，其与欧洲的经济关系受到影响。</p><p>一位知情人士表示，自两年前俄罗斯入侵以来，欧洲仅对三个中国实体实施了制裁，而华盛顿对中国实体采取了100起制裁行动。</p><p>美国高级官员上周公布了一份他们所说的中国正在向俄罗斯发送的技术清单。他们表示，到2023年，俄罗斯进口的芯片90%来自中国，并用于生产导弹、坦克和飞机。去年最后一个季度，俄罗斯进口机床的 70% 来自中国，并且“可能用于”生产弹道导弹。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXGH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E5%25B8%2583%25E6%259E%2597%25E8%2582%25AF%25E5%25B0%2586%25E5%25B0%25B1%25E5%2590%2591%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E5%2587%25BA%25E5%258F%25A3%25E6%25AD%25A6%25E5%2599%25A8%25E7%259B%25B8%25E5%2585%25B3%25E6%258A%2580%25E6%259C%25AF%25E8%25AD%25A6%25E5%2591%258A%25E4%25B8%25AD%25E5%259B%25BD-%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF%25E8%2580%2583%25E8%2599%2591%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%25AD%25E5%259B%25BD%25E9%2587%2591%25E8%259E%258D%25E6%259C%25BA%25E6%259E%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E5%B0%86%E5%B0%B1%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%E7%9B%B8%E5%85%B3%E6%8A%80%E6%9C%AF%E8%AD%A6%E5%91%8A%E4%B8%AD%E5%9B%BD%20%E5%8D%8E%E7%9B%9B%E9%A1%BF%E8%80%83%E8%99%91%E5%88%B6%E8%A3%81%E4%B8%AD%E5%9B%BD%E9%87%91%E8%9E%8D%E6%9C%BA%E6%9E%84%20-%20https%3A%2F%2Frfi.my%2FAXGH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%B8%83%E6%9E%97%E8%82%AF%E5%B0%86%E5%B0%B1%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%E7%9B%B8%E5%85%B3%E6%8A%80%E6%9C%AF%E8%AD%A6%E5%91%8A%E4%B8%AD%E5%9B%BD%20%E5%8D%8E%E7%9B%9B%E9%A1%BF%E8%80%83%E8%99%91%E5%88%B6%E8%A3%81%E4%B8%AD%E5%9B%BD%E9%87%91%E8%9E%8D%E6%9C%BA%E6%9E%84%20-%20https%3A%2F%2Frfi.my%2FAXGH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXGH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%B8%83%E6%9E%97%E8%82%AF%E5%B0%86%E5%B0%B1%E5%90%91%E4%BF%84%E7%BD%97%E6%96%AF%E5%87%BA%E5%8F%A3%E6%AD%A6%E5%99%A8%E7%9B%B8%E5%85%B3%E6%8A%80%E6%9C%AF%E8%AD%A6%E5%91%8A%E4%B8%AD%E5%9B%BD%20%E5%8D%8E%E7%9B%9B%E9%A1%BF%E8%80%83%E8%99%91%E5%88%B6%E8%A3%81%E4%B8%AD%E5%9B%BD%E9%87%91%E8%9E%8D%E6%9C%BA%E6%9E%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
