--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
 <!--1713771902000-->
-[日本海上自卫队两架直升机坠毁 1人死亡 7人失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81-1%E4%BA%BA%E6%AD%BB%E4%BA%A1-7%E4%BA%BA%E5%A4%B1%E8%B8%AA)
+[日本大学两名华人教授2023年相继在中国失踪](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240421-%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA)
 ------
 
-<div>21/04/2024 - 10:53</div><img src="https://s.rfi.fr/media/display/da16e712-ffbb-11ee-8eda-005056bfb2b6/w:1280/p:16x9/Capture-2208.PNG"><p><strong>日本自卫队两架直升机周六（4月20日）晚间在训练时坠毁，造成一名机上人员死亡，另有七人失联。日本防卫大臣木原稔（Minoru Kihara）周日说，“发现飞行记录仪的位置非常接近"，因此"（两机）相撞的可能性高"。        </strong></p><div><p>木原稔向媒体说，失事飞机当时正在参加 "夜间反潜战演习"。目前，尚不清楚事故的原因，当务之急是拯救生命。他说，海上救援部门发现了可能是两部直升机的残骸。</p><p>他在几小时后再次通报，"稍早获救的一名队员已确认死亡，其他七人仍下落不明。” 他说，两部飞行记录仪被发现的位置非常接近"，因此"（两机）很可能相撞”。</p><p>这两架直升机在伊豆群岛海岸执行反潜训练时在当地时间晚10点38分后先后失联，NHK 报道，两机失联时间相差约25分钟，日本海上自卫队表示，正在分析已回收的飞行记录仪，并对参加训练但未出事故的第三架直升机人员进行询问。</p><p>两架直升机是日本三菱制造的SH-60K巡逻直升机，隶属于海上自卫队。</p><p>法新社报道，一年前，一架另一型号的日本军用直升机（UH-60JA）在冲绳海域坠毁，机上十人遇难。11月，驻日美军的一架 "鱼鹰 "直升机坠海，造成8 名机组人员全部遇难。</p><p>此次事故促使美军展开调查，并在全球全面停飞其鱼鹰式飞机，为期三个月。在经过美军对飞机的维护和程序修改后，鱼鹰飞机的飞行3月初恢复，包括在日本的飞行。</p><p>报道指，作为美国密切盟友，日本正大幅增加国防预算，以应对亚太地区日益紧张的局势，包括中国日益强硬的领土要求和朝鲜在该地区频频释出的威胁。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXGK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E6%25B5%25B7%25E4%25B8%258A%25E8%2587%25AA%25E5%258D%25AB%25E9%2598%259F%25E4%25B8%25A4%25E6%259E%25B6%25E7%259B%25B4%25E5%258D%2587%25E6%259C%25BA%25E5%259D%25A0%25E6%25AF%2581-1%25E4%25BA%25BA%25E6%25AD%25BB%25E4%25BA%25A1-7%25E4%25BA%25BA%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXGK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXGK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E6%B5%B7%E4%B8%8A%E8%87%AA%E5%8D%AB%E9%98%9F%E4%B8%A4%E6%9E%B6%E7%9B%B4%E5%8D%87%E6%9C%BA%E5%9D%A0%E6%AF%81%201%E4%BA%BA%E6%AD%BB%E4%BA%A1%207%E4%BA%BA%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/4ababa6e-1611-11ea-9b7f-005056a99247/w:1280/p:16x9/chine%20japon%20190315.jpg"><p><strong>日本亚洲大学一名中国教授自去年2月暂时回国后失踪，他在日本的家人一直无法与他取得联系。另一位日本神户学院大学的华人教授去年夏天也在中国失踪...        </strong></p><div><p>据共同社引述熟悉双边关系的消息人士周日介绍，日本亚洲大学音译名范云涛的教授现年61岁，在中国期间，他是被中国当局联系之后失踪的，因此被认为可能已被拘留。</p><p>此外，日本神户学院大学在今年3月份说，该大学的教授胡士云也在去年夏天回中国后失踪。</p><p>共同社说，两位华人教授在中国失踪引起了人们的关注，因为中国一直在加强维护国家安全的力度，导致包括外国公民在内的人员被以涉嫌从事间谍活动拘留。</p><p>中国政府加强了对与其他国家交往的外国人和中国人的打击力度，预计这将加深中日关系中现有的紧张局势。</p><p>该报道还说，中国政府加强了对外国人和与外国交往的中国人的镇压措施，这很可能会加剧中日关系现有的紧张局势，而这个关系已经因领土争端等一系列问题而受到损害。</p><p>2023年2月底，范云涛返回上海。消息人士说，他失踪前曾告诉身边的人，他被要求陪同当局参加一次审问。他患有慢性疾病，需要适当的治疗。</p><p>范云涛教授是国际法和政治问题专家，他原计划于去年 4 月返回日本，但他在日本的家人一直无法与他取得联系。他已被校方安排休假，由另一名教师负责他的大学课程。</p><p>日本神户学院大学的胡士云在中国失踪后，校方已安排代课老师代替他的工作。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXI3.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E5%25A4%25A7%25E5%25AD%25A6%25E4%25B8%25A4%25E5%2590%258D%25E5%258D%258E%25E4%25BA%25BA%25E6%2595%2599%25E6%258E%25882023%25E5%25B9%25B4%25E7%259B%25B8%25E7%25BB%25A7%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25B1%25E8%25B8%25AA&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA%20-%20https%3A%2F%2Frfi.my%2FAXI3.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXI3.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E5%A4%A7%E5%AD%A6%E4%B8%A4%E5%90%8D%E5%8D%8E%E4%BA%BA%E6%95%99%E6%8E%882023%E5%B9%B4%E7%9B%B8%E7%BB%A7%E5%9C%A8%E4%B8%AD%E5%9B%BD%E5%A4%B1%E8%B8%AA&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
