--- a/articles/rfi/999956.md
+++ b/articles/rfi/999956.md
@@ -1,5 +1,5 @@
-<!--1713753902000-->
-[毛里塔尼亚抗议马里边境暴行](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240421-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C)
+<!--1713753903000-->
+[泰媒：关注莫迪蝉联对世界的影响 - 曼谷专栏](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%9B%BC%E8%B0%B7%E4%B8%93%E6%A0%8F/20240421-%E6%B3%B0%E5%AA%92-%E5%85%B3%E6%B3%A8%E8%8E%AB%E8%BF%AA%E8%9D%89%E8%81%94%E5%AF%B9%E4%B8%96%E7%95%8C%E7%9A%84%E5%BD%B1%E5%93%8D)
 ------
 
-<div>21/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/b315e188-cf5d-11ee-9d1b-005056bf30b7/w:1280/p:16x9/PHOTO-2024-02-19-16-19-33.jpg"><p><strong>毛里塔尼亚总统谢赫·加兹瓦尼（Président Cheikh el-Ghazouani）已于两个月前的2024年02月17日接掌非洲联盟（UA）的轮值主席。毛里塔尼亚位于非洲的西北部，和马里有着漫长的边境线。过去几年，马里军人和瓦格纳雇佣军时常卷入边境地带的意外伤亡事故。但双方都对此保持低调。最近一次边境事件发生于两周前的04月07日星期天，在毛里塔尼亚境内造成三人受伤。这迫使努瓦克肖特当局（Nouakchott）不仅通过外交渠道提出了抗议，还派出一支代表团前往巴马科（Bamako）交涉。马里军政府首脑阿西米·戈伊塔（Assimi Goïta）于昨天（04月20日）星期六，会见了前来传递一个官方讯息的毛里塔尼亚国防部长乌尔德·西迪将军（Gr. Hanena Ould Sidi）。        </strong></p><div><p><strong>-- 马里军政府首脑会晤毛里塔尼亚防长 -</strong></p><p>本台法广（RFI）法文网今天（2024年04月21日）星期天有关非洲的最新消息之一是，毛里塔尼亚国防部长前往马里讨论两国边境地带的紧张气氛。努瓦克肖特当局（Nouakchott）不满毛里塔尼亚公民时常成为两国边境地带暴行的受害者，向巴马科（Bamako）提出双重抗议。几乎就在一名马里外交官被毛里塔尼亚外交部召见的同时，毛里塔尼亚国防部长带着一支代表团来到了马里。</p><a href="https://www.rfi.fr/fr/tag/mauritanie/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.webp 300w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.jpg" alt="commandant de la force conjointe du G5 Sahel." srcset="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.jpg 300w"sizes=""width="300"height="200"loading="lazy"></picture><figcaption><span>存档图片 / 毛里塔尼亚国防部长乌尔德·西迪将军（Gr. Hanena Ould Sidi）Image Archive / Mauritanie : Gr. Hanena Ould Sidi est le ministre de la défense.</span>                <span>g5sahel.org / RFI Archive</span>            </figcaption></figure></a><p>据本台法广（RFI）非洲通讯员塞尔吉（Serge Daniel）在报导中的描述，几乎就在马里驻毛里塔尼亚大使刚刚把邻国努瓦克肖特当局（Nouakchott）的抗议传回巴马科（Bamako）的同一时刻，马里军政府首脑会晤了到访的毛里塔尼亚国防部长。</p><p><strong>-- 毛里塔尼亚当局向马里军政府提抗议 -</strong></p><p>毛里塔尼亚国防部长向马里军政府首脑阿西米·戈伊塔（Assimi Goïta）传递了一个官方讯息。努瓦克肖特当局（Nouakchott）抗议其国民在两国边境地带一再遭受暴行的伤害。</p><a href="https://www.rfi.fr/fr/tag/assimi-go%C3%AFta/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.jpg" alt="存档图片/ 马里军政府首脑阿西米·戈伊塔（Assimi Goïta），摄于2020年08月。Image Archive / Mali : le colonel malien Assimi Goïta, en août 2020 au ministère de la Défense à Bamako. (illustration)" srcset="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.jpg 2480w"sizes=""width="2480"height="1631"loading="lazy"></picture><figcaption><span>存档图片/ 马里军政府首脑阿西米·戈伊塔（Assimi Goïta），摄于2020年08月。Image Archive / Mali : le colonel malien Assimi Goïta, en août 2020 au ministère de la Défense à Bamako. (illustration)</span>                <span>AP / RFI Archive</span>            </figcaption></figure></a><p>毛里塔尼亚安全渠道的对话人告诉本台法广（RFI）非洲组，毛里塔尼亚牧民通常从03月份开始，会在马里境内出现。如同以往，他们最近又被施以暴行。但伤亡情况没有对外披露。毛里塔尼亚的另一安全渠道的消息人士指责，施暴者是马里军人和俄罗斯瓦格纳集团的战斗人员。这名知情人还表示，当局将不再只是袖手旁观。</p><p><strong>-- 马里军人近日曾闯入毛里塔尼亚反恐 -</strong></p><p>本台法广（RFI）非洲通讯员大卫（David Baché）日前曾发回消息说，马里军人在俄罗斯瓦格纳集团战斗人员的随同下，于两周前的04月07日星期天曾以反恐行动为理由，进入毛里塔尼亚境内东南部地区。地方上的一位民选代表告诉本台法广（RFI），这批军事人员的子弹击伤了三名驾驶摩托车的毛里塔尼亚平民。他们还曾在一个村庄内开火，损坏了一些民宅。毛里塔尼亚和马里双方在事发后，都没有发表正式的声明。</p><a href="https://www.rfi.fr/fr/afrique/20240408-trois-civils-bless%C3%A9s-apr%C3%A8s-une-incursion-de-l-arm%C3%A9e-malienne-et-de-wagner-en-mauritanie"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.webp 598w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.gif" alt="存档地图 / 毛里塔尼亚和马里边境地区。RFI carte archive / La zone des opérations des armées mauritanienne et malienne contre l&#039;Aqmi." srcset="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.gif 598w"sizes=""width="598"height="449"loading="lazy"></picture><figcaption><span>存档地图 / 毛里塔尼亚和马里边境地区。RFI carte archive / La zone des opérations des armées mauritanienne et malienne contre l&#039;Aqmi.</span>                <span>© RFI Carte</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <strong><a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self">Fin</a></strong> .~</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240421-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E6%25AF%259B%25E9%2587%258C%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E6%258A%2597%25E8%25AE%25AE%25E9%25A9%25AC%25E9%2587%258C%25E8%25BE%25B9%25E5%25A2%2583%25E6%259A%25B4%25E8%25A1%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAXKD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAXKD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>21/04/2024 - 12:11</div><img src="https://s.rfi.fr/media/display/4849449a-fe0a-11ee-b04c-005056a97e36/w:1280/p:16x9/2024-04-19T022831Z_533302519_RC2D97AEAMAR_RTRMADP_3_INDIA-ELECTION.JPG"><p><strong>堪称全球最大规模的印度民主选举投票已于4月19日拉开序幕，结果将在六周后揭晓。外界普遍预料新德里现任执政班子有望再次胜选，继续对印度未来五年的政治方向、经济政策、社会文化以及国际关系产生重要影响。                    </strong></p><div><p>泰国媒体综合报道，印度选举委员会宣布于周五（19日）开始投票，在未来6周内，近10亿合格选民将通过分区分批投票，从各邦选出人民代表，组成国会下议院。这次投票将于6月1日结束，并于6月4日公布选举结果。</p><p>印度国会共 545 席，下议院由9.6亿合格选民直接投票产生 543 席（其中530 名来自各州，13 名来自联邦属地），凡赢得过半选票或达到272席的政党或阵营即可率先组阁。</p><p>这场选举在执政核心印度人民党（BJP）所领导的“国家民主联盟”（NDA）与反对派组成的“印度国家发展共融联盟” （INDIA）之间展开激烈角逐。到目前为止，现任总理莫迪（Narendra Modi）仍然是印度人民党的总理候选人，而拥有 24 个在野党的反对联盟尚未提名总理候选人，宣称有待选举结果出炉后再定。</p><p>印度为联邦共和国，行政权分为28个邦和7个联邦直辖区。中央行政部门规定 “总统”为国家最高领导人，管理国家事务的行政实权则由赢得大选的总理掌管。评论称，已连任两届的现任总理莫迪正在力拼争夺第三届蝉联，执政党胜选毫无悬念。莫迪有望继续治理这个拥有14亿人口的国家并将成为继印度首任总理尼赫鲁（Jawaharlal Nehru）之后又一位连续三届执掌国家政权的人。</p><p>莫迪近期在公开演讲时豪言由印度人民党领导的全国民主联盟将夺得400多个席位。根据印度TV-CNX 今年4月初公布的民意调查显示，印度人民党预计有望赢得342席，反对派则赢得 38 个席位。在2019年上届选举中，印度人民党赢得303席，最大反对派印度国大党（Indian National Congress）仅有52席。</p><p>分析称，印度人民党受欢迎的主要原因是具有印度教民族主义色彩的莫迪2014年上台后，在执政十年里通过履行对选民的承诺，赢得了人口占比最高的印度教（Hinduism）选民的支持。2019年，莫迪宣布废除克什米尔自治区特权；今年1月，莫迪前往曾经是印度教徒和穆斯林之间爆发冲突的地区---阿约提亚出席被视为印度民族主义象征的罗摩神庙祝圣仪式；今年3月，莫迪政府颁布新版公民法，授予印度教徒公民身份，同时认可2014 年 12 月前从邻国前往印度居住的人（穆斯林除外）。莫迪因此被批评歧视穆斯林，穆斯林在印度属于少数群体。</p><p>另一个因素是关乎民生大计的国家经济。印度经济在莫迪治下迅速成长，目前排名世界第五大经济体，国民生产总值（GDP）达3.7万亿美元，有望在2027年成为世界第三大经济体。莫迪政府在促进发展国家经济的同时，也为基本商品和服务提供价格补贴。尽管民调发现印度人民正遭遇年轻人就业困难、生活受到通货膨胀影响，对未来的经济前景感到担忧等问题，但假若对比反对派提出国家民主和宪法受到威胁等具有强烈政治性的意识形态问题，考虑到先前经济发展计划与印度大国目标愿景的延续性，这使得印度人民党在选举中更占明显优势。国际货币基金（IMF）预测印度今明年经济成长率分别为6.8%、6.5%，超过对中国经济同期增长的预测。</p><p>印度大选备受国际关注。除了印度是“世界上最大的民主国家”外，更因为印度是世界上人口最多的国家，年轻人占比高。印度股市资本总值超过4万亿美元。去年12月超越香港，成为全球第四大股市。作为一个时代的经济明星，印度有望成为推动全球经济的关键参与者，同时也是在世界政治中发挥更大作用的国家。</p><p>另就印度与中国平衡力量的作用而言，西方国家对印度寄予更多的关注和期待。分析指出，在过去的一年里，印度与西方国家建立了更深层次的联系。莫迪的连任势必持续加强美国和印度之间的关系。华盛顿政府继续鼓励美国公司将其电子和技术制造业务从中国转移到印度等友好国家，共同遏制中国不断扩大的经济影响力。</p><p>随着印度在全球地缘政治上扮演的角色越来越重要，印度多年来在安全问题和国际关系上的立场持续受到国际社会关注。莫迪政府此前加入了与美国、日本、澳大利亚联手的“印太战略” （Indo‐Pacific），建立了四方安全对话机制（The Quad），积极参与印度洋地区国际事务，致力重竖“南方国家领袖”威望，最近更是罕见就南海领土纠纷问题表态，呼应支持美国“自由开放的印度-太平洋”主张，进一步扩大了与中国在领土、经济领域的对抗。时值当前跟印中毗邻的缅甸一步步陷入战乱，东南亚国家对印中两国联手化解缅甸危机抱以悲观态度。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%9B%BC%E8%B0%B7%E7%89%B9%E7%BA%A6%E8%AE%B0%E8%80%85-%E6%B1%9F%E6%9E%AB/" title="曼谷特约记者 江枫">曼谷特约记者 江枫</a></div></div></div></div>
