--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
-<!--1713748503000-->
-[重庆燃气费暴涨事件-国民是否应为财政危机埋单？ - 微言微语](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%BE%AE%E8%A8%80%E5%BE%AE%E8%AF%AD/20240421-%E9%87%8D%E5%BA%86%E7%87%83%E6%B0%94%E8%B4%B9%E6%9A%B4%E6%B6%A8%E4%BA%8B%E4%BB%B6-%E5%9B%BD%E6%B0%91%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E8%B4%A2%E6%94%BF%E5%8D%B1%E6%9C%BA%E5%9F%8B%E5%8D%95)
+<!--1713753902000-->
+[毛里塔尼亚抗议马里边境暴行](https://www.rfi.fr/cn/%E9%9D%9E%E6%B4%B2/20240421-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E9%9D%9E%E6%B4%B2-%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C)
 ------
 
-<div>21/04/2024 - 12:20</div><img src="https://s.rfi.fr/media/display/405e895e-3298-11ee-8ffc-005056a90321/w:1280/p:16x9/Photo%204%20ter%20village%20migrants.jpg"><p><strong>由央企华润控股的重庆燃气公司近日成为中国舆论焦点，起因是四月份以来，众多重庆成都用户投诉自从更换燃气表后，燃气费突然异常飙升，甚至有人停用燃气，燃气表仍在转动，有用户晒出6000元的离谱账单。重庆燃气公司在七千多用户投诉的压力下展开调查，承认有问题，声明启动退款行动。然而社交平台对该公司的声明并不买账，指该公司涉嫌犯罪应启动刑事调查，网民在议论的同时指责政府正用任意提高公共服务费的方式向国民转嫁财政危机。                    </strong></p><div><p>网友@荣剑发帖说：重庆燃气公司利用换煤气表，多收市民的钱，经众多市民举报，现在被坐实。这个事情的性质犹如盗贼偷窃别人的钱被抓，处理结果却是退钱了事。难道盗贼偷钱也可以用退钱而免于被法律追责吗？</p><p>网友@祥松谈发帖说：经过相关部门的协商，重庆的燃气表竟然真的减缓了运转速度！工作人员无需亲自进入居民家中，便能实现这一调整，大概是通过远程操控技术实现。重庆燃气明明是有组织的刑事犯罪，咋能退钱就完事，现在调查初步结果出来了，重庆燃气在燃气计量上存在重大问题，好比是1方燃气买出3方的钱，让许多用户燃气费用超出平时2～3倍，最高甚至超出正常用气量10倍。让重庆586万家用户叫苦不已，而重庆燃气利润却同比增加824%。燃气公司人均年收入达到21万。无论重庆燃气采取加压还是降低燃气浓度，或者更改气表结构等方式，把1方燃气变成了3方卖给用户，都是犯罪行为，而且这种事需要周密计划多方协同，根本不是一两个人能干成的，需要公司上下全力配合才能干成，尤其涉案金额巨大，</p><p>危及民生，社会危害极大，比市场小贩用七两秤性质严重的多，属于严重的有组织刑事犯罪。在调查事实面前，重庆燃气公司拒不认帐的底气没了，想退钱了事，但既然是有组织的刑事犯罪，咋能退钱就完了。更严重的是，近几年全国多地都出现燃气费用不明猛涨，加重民生困难的情况，显然重庆燃气不是第一家，肯定也不是最后一家这么干的黑心企业。</p><p>网友@桂哥猎手发帖说：某某燃气事件是犯罪，准确的说是诈骗罪且金额巨大，绝不能退钱就了事。如果退钱就了事，那么犯罪成本就是零。退钱了事是懒政、是腐政、是混蛋政！必须对相关部门、公司企业及责任人严肃追责。该撤的撤、该罚的罚、该关的关！法律不容模糊、权利与资本不能凌驾法律之上！</p><p>网友@bows_bob9694发帖说：燃气公司是国营大公司，垄断整个行业，什么违法乱纪的事情都敢做。如此难道不是抢劫性的流氓手段吗？网友@余英发帖说：供电公司、自来水公司、煤气公司等都是代表政府服务和收费的，不应该有损政府的高大形象 。网友@Bruce Mok发帖说：国有资本掌控的都在涨价，比如水电油，烟草等..通胀..民间资本掌控的都在降价，利润就业大减，供大于求..通缩…一胀一缩，统称通杀。</p><p>网友@TheXiangYang发帖说：……川渝地区此次事件背后的同一燃气公司是四川联发，其股东包括四川川港燃气和成都燃气集团。他们背后的股东，是华润燃气投资（中国）有限公司。到了华润这一级，就算查到钢板了。中国四大财阀集团：中信、保利、招商、华润。其实，多数参与民生基础服务的央企国企子公司都是亏损经营的。而之所以能够维持盈利，是因为</p><p>它的钱在别的地方有巨大收益，当然还有大额的国家财政补贴。而地方政府的财政收入，主要来源于税收和卖地。现在时代变了，税收收归国库，由中央统一调配，这几年习近平三令五申要“勒紧裤腰带过日子”，因此，下发到各省市的财政补贴肯定就少了。拿到的补贴少了，房子不好卖，土地出让金规则的更改，使得地方国企央企的日子也不好过了。为什么许多地方公交车停运了，因为上面没有财政补贴了。为什么水电燃油都在涨价，因为提供民生基础服务的央企，要亏损不起了。再不挣钱，行长爷爷的孙子、局长爸爸的儿子、副市长的老婆老妈，就真的要和月薪三千块的打工人一样，过苦日子了。</p><p>网友@庚白星君发帖说：……公共服务费上涨，最先抬高的就是大家的生活成本。在这个工作难找、工资不涨的节骨眼，生活成本若是提高，那么消费降级才是大家的第一选择。大家因为公共服务费上涨而不敢消费，整个社会的消费总需求下降。最难受的还是夹在中间的店家——一边是上涨的成本，不涨价就难以获利存活下去。一边是克制消费的消费者，需求减少，商品难以卖出去。最终的结果，除了苦苦支撑，就是关门止损。一波关门潮可能要来了，紧随其后的，还有降薪潮和裁员潮。</p><p>网友@文昭談古論今发帖说：除了川渝的“智能燃气表”爆表，又有更多网民报告，水表电表都有同样的问题。比如重庆、郑州都有网民反馈，装了新水表之后，就自己跳字，不用也产生费用，你不消费也被消费。所以拉动消费的新三件成了：电表、水表和气表。又称新“三个代表”。当然拉动消费只是戏称，其</p><p>实是割韭菜的新境界——破坏度量衡。这是萧条岁月基于权力，社会分摊损失的过程：权力越弱者</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div>
+<div>21/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/b315e188-cf5d-11ee-9d1b-005056bf30b7/w:1280/p:16x9/PHOTO-2024-02-19-16-19-33.jpg"><p><strong>毛里塔尼亚总统谢赫·加兹瓦尼（Président Cheikh el-Ghazouani）已于两个月前的2024年02月17日接掌非洲联盟（UA）的轮值主席。毛里塔尼亚位于非洲的西北部，和马里有着漫长的边境线。过去几年，马里军人和瓦格纳雇佣军时常卷入边境地带的意外伤亡事故。但双方都对此保持低调。最近一次边境事件发生于两周前的04月07日星期天，在毛里塔尼亚境内造成三人受伤。这迫使努瓦克肖特当局（Nouakchott）不仅通过外交渠道提出了抗议，还派出一支代表团前往巴马科（Bamako）交涉。马里军政府首脑阿西米·戈伊塔（Assimi Goïta）于昨天（04月20日）星期六，会见了前来传递一个官方讯息的毛里塔尼亚国防部长乌尔德·西迪将军（Gr. Hanena Ould Sidi）。        </strong></p><div><p><strong>-- 马里军政府首脑会晤毛里塔尼亚防长 -</strong></p><p>本台法广（RFI）法文网今天（2024年04月21日）星期天有关非洲的最新消息之一是，毛里塔尼亚国防部长前往马里讨论两国边境地带的紧张气氛。努瓦克肖特当局（Nouakchott）不满毛里塔尼亚公民时常成为两国边境地带暴行的受害者，向巴马科（Bamako）提出双重抗议。几乎就在一名马里外交官被毛里塔尼亚外交部召见的同时，毛里塔尼亚国防部长带着一支代表团来到了马里。</p><a href="https://www.rfi.fr/fr/tag/mauritanie/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.webp 300w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.jpg" alt="commandant de la force conjointe du G5 Sahel." srcset="https://s.rfi.fr/media/display/b262502e-10c0-11ea-84bc-005056a99247/general-hanena_ould_sidi_0.jpg 300w"sizes=""width="300"height="200"loading="lazy"></picture><figcaption><span>存档图片 / 毛里塔尼亚国防部长乌尔德·西迪将军（Gr. Hanena Ould Sidi）Image Archive / Mauritanie : Gr. Hanena Ould Sidi est le ministre de la défense.</span>                <span>g5sahel.org / RFI Archive</span>            </figcaption></figure></a><p>据本台法广（RFI）非洲通讯员塞尔吉（Serge Daniel）在报导中的描述，几乎就在马里驻毛里塔尼亚大使刚刚把邻国努瓦克肖特当局（Nouakchott）的抗议传回巴马科（Bamako）的同一时刻，马里军政府首脑会晤了到访的毛里塔尼亚国防部长。</p><p><strong>-- 毛里塔尼亚当局向马里军政府提抗议 -</strong></p><p>毛里塔尼亚国防部长向马里军政府首脑阿西米·戈伊塔（Assimi Goïta）传递了一个官方讯息。努瓦克肖特当局（Nouakchott）抗议其国民在两国边境地带一再遭受暴行的伤害。</p><a href="https://www.rfi.fr/fr/tag/assimi-go%C3%AFta/"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.webp 2480w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.jpg" alt="存档图片/ 马里军政府首脑阿西米·戈伊塔（Assimi Goïta），摄于2020年08月。Image Archive / Mali : le colonel malien Assimi Goïta, en août 2020 au ministère de la Défense à Bamako. (illustration)" srcset="https://s.rfi.fr/media/display/5a13b85a-be97-11eb-9ffb-005056a917b9/AP21146335317039.jpg 2480w"sizes=""width="2480"height="1631"loading="lazy"></picture><figcaption><span>存档图片/ 马里军政府首脑阿西米·戈伊塔（Assimi Goïta），摄于2020年08月。Image Archive / Mali : le colonel malien Assimi Goïta, en août 2020 au ministère de la Défense à Bamako. (illustration)</span>                <span>AP / RFI Archive</span>            </figcaption></figure></a><p>毛里塔尼亚安全渠道的对话人告诉本台法广（RFI）非洲组，毛里塔尼亚牧民通常从03月份开始，会在马里境内出现。如同以往，他们最近又被施以暴行。但伤亡情况没有对外披露。毛里塔尼亚的另一安全渠道的消息人士指责，施暴者是马里军人和俄罗斯瓦格纳集团的战斗人员。这名知情人还表示，当局将不再只是袖手旁观。</p><p><strong>-- 马里军人近日曾闯入毛里塔尼亚反恐 -</strong></p><p>本台法广（RFI）非洲通讯员大卫（David Baché）日前曾发回消息说，马里军人在俄罗斯瓦格纳集团战斗人员的随同下，于两周前的04月07日星期天曾以反恐行动为理由，进入毛里塔尼亚境内东南部地区。地方上的一位民选代表告诉本台法广（RFI），这批军事人员的子弹击伤了三名驾驶摩托车的毛里塔尼亚平民。他们还曾在一个村庄内开火，损坏了一些民宅。毛里塔尼亚和马里双方在事发后，都没有发表正式的声明。</p><a href="https://www.rfi.fr/fr/afrique/20240408-trois-civils-bless%C3%A9s-apr%C3%A8s-une-incursion-de-l-arm%C3%A9e-malienne-et-de-wagner-en-mauritanie"><figure><picture><sourcetype="image/webp"srcset="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.webp 598w"sizes=""><imgfetchpriority="low" src="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.gif" alt="存档地图 / 毛里塔尼亚和马里边境地区。RFI carte archive / La zone des opérations des armées mauritanienne et malienne contre l&#039;Aqmi." srcset="https://s.rfi.fr/media/display/0e77100c-0f8b-11ea-af6d-005056bf7c53/MALI_Wagadou-3_0.gif 598w"sizes=""width="598"height="449"loading="lazy"></picture><figcaption><span>存档地图 / 毛里塔尼亚和马里边境地区。RFI carte archive / La zone des opérations des armées mauritanienne et malienne contre l&#039;Aqmi.</span>                <span>© RFI Carte</span>            </figcaption></figure></a><p>（ 翻译和编辑：法广 <strong><a href="https://www.rfi.fr/fr/" target="_self">RFI</a> </strong>电台 <strong><a href="https://www.rfi.fr/tw/作者/尼古拉/" target="_self">尼古拉</a> </strong>）</p><p>~. <strong><a href="https://www.rfi.fr/cn/作者/尼古拉/" target="_self">Fin</a></strong> .~</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E9%259D%259E%25E6%25B4%25B2%2F20240421-rfi-%25E6%25B3%2595%25E5%25B9%25BF-%25E5%25B0%25BC%25E5%258F%25A4%25E6%258B%2589-%25E9%259D%259E%25E6%25B4%25B2-%25E6%25AF%259B%25E9%2587%258C%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E6%258A%2597%25E8%25AE%25AE%25E9%25A9%25AC%25E9%2587%258C%25E8%25BE%25B9%25E5%25A2%2583%25E6%259A%25B4%25E8%25A1%258C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAXKD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C%20-%20https%3A%2F%2Frfi.my%2FAXKD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%AF%9B%E9%87%8C%E5%A1%94%E5%B0%BC%E4%BA%9A%E6%8A%97%E8%AE%AE%E9%A9%AC%E9%87%8C%E8%BE%B9%E5%A2%83%E6%9A%B4%E8%A1%8C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
