--- a/articles/rfi/999958.md
+++ b/articles/rfi/999958.md
@@ -1,5 +1,5 @@
 <!--1713748503000-->
-[宪政制度的故乡英国 诗人参孙弥尔顿之二  啼声初试 - 欧洲思想文化长廊](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%AC%A7%E6%B4%B2%E6%80%9D%E6%83%B3%E6%96%87%E5%8C%96%E9%95%BF%E5%BB%8A/20240421-%E5%AE%AA%E6%94%BF%E5%88%B6%E5%BA%A6%E7%9A%84%E6%95%85%E4%B9%A1%E8%8B%B1%E5%9B%BD-%E8%AF%97%E4%BA%BA%E5%8F%82%E5%AD%99%E5%BC%A5%E5%B0%94%E9%A1%BF%E4%B9%8B%E4%BA%8C-%E5%95%BC%E5%A3%B0%E5%88%9D%E8%AF%95)
+[重庆燃气费暴涨事件-国民是否应为财政危机埋单？ - 微言微语](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E5%BE%AE%E8%A8%80%E5%BE%AE%E8%AF%AD/20240421-%E9%87%8D%E5%BA%86%E7%87%83%E6%B0%94%E8%B4%B9%E6%9A%B4%E6%B6%A8%E4%BA%8B%E4%BB%B6-%E5%9B%BD%E6%B0%91%E6%98%AF%E5%90%A6%E5%BA%94%E4%B8%BA%E8%B4%A2%E6%94%BF%E5%8D%B1%E6%9C%BA%E5%9F%8B%E5%8D%95)
 ------
 
-<div>21/04/2024 - 23:24</div><img src="https://s.rfi.fr/media/display/647ce2f6-fab4-11ee-b2ed-005056bf30b7/w:1280/p:16x9/maxresdefault-81.jpg"><p><strong>「提要」 胸怀抱负要成为一位伟大诗人的弥尔顿(John Milton (1608 - 1674)自剑桥毕业后返回故园，在霍顿村隐居五年。在此期间，他潜心苦读，尽一切可能丰富自己，并开始初试新声，创作了自己第一批诗作。                    </strong></p><div><p>问：弥尔顿似乎天生就要做诗人。</p><p>答；这是个事实，而且似乎是命中注定，连他自己都这么想这么说。他说：“有一种内心的激情日益引起我的关注，凭借我苦心孤诣的研读，加上天生强烈的酷爱，我或许给后世留下些东西，让后人不会轻易遗忘，这是我人生在世的天职”。这段话明确表明他的志向和对自己能力的确信，他要给后世留下不会湮灭的精神财富。毫无疑问，这个愿望已经实现。更难得的是，他明确告诫自己，诗如其人。他说：“我深信，若有谁希望用写作歌颂一切美善之事，那他自己内心必具备一切有关美善之物的经验的实践，否则他何敢唱出赞颂伟人和名都之歌？”马克·帕提森总结弥尔顿创作的三大法宝和源泉，那就是知识、道德感和宗教情怀。帕提森认为，他要获取一切知识，却不单为知识而知识，他拥有知识为的是从中获得智慧，这些智慧将和他道德上的完善携手并进，诗人的灵魂应该兼有善良、明智、正义和完美的形式。还有，神的启示来自弥尔顿对上帝的坚信。弥尔顿自己说，诗的灵感，“除了虔诚的祷告那永生的圣灵之外是不可能得到的，因为只有圣灵给诗人词语和知识，使诗人的表达丰富多彩”。</p><p>问：这三个法宝可以当作理解弥尔顿作品的指南。</p><p>答：是的。刚回到霍顿田庄，弥尔顿就作了两首表达自己心境和追求的诗。《快乐的人》和《沉思的人》。《快乐的人》一诗，淋漓尽致地表达了他青春洋溢，光明向上的心情。那时弥尔顿初尝知识之果，前面还有无限丰富的精神宝藏要去探索。诗中用希腊罗马神奇的形象，引人进入一个充满活力的田园世界，它其实就是弥尔顿生活、幽居的霍顿乡村景色。那里云雀飞鸣、晨曦初起，窗棱上野蔷薇怒放，葡萄藤曼缠绕，雄鸡高唱，猎犬吠吠，农夫扶犁耕种，挤奶的女郎轻声歌唱，悠扬的提琴声伴随一群青年男女在树荫下舞蹈，诗人沉浸在一片欢乐之中。但是诗人提醒自己，不能让世俗生活宜人的慵懒虚耗光阴，诗人惊醒：“闪开吧，空虚哄人的欢欣/你是愚蠢所生，没有父亲，无法满足一颗执着的心/对于它，你的玩意儿不值几文/你只能呆在闲散人的头脑里/空想各种愚蠢无聊的东西/五颜六色、繁杂缤纷/好像太阳光线中浮游的微尘”。诗人要摆脱那些浅薄无聊的快乐，深入精神的洞府，去研究赫耳墨斯和柏拉图的著作，去探究生成宇宙的元素，去翻读希腊悲剧，去钻研阿伽门农家族的英雄传说，他要续写乔叟未完成的故事，继续讲述成吉思汗的传奇，甚至要把塔索、斯宾塞这些大诗人唤来，一较高低。在这个学习探索的过程中，诗人成为了一个沉思的人。</p><p>问：弥尔顿二十岁刚出头，他对生活的体验和思考已经相当完整了。</p><p>答；是的。《快乐的人》和《沉思的人》这两首诗，可以说已经给弥尔顿一生勾勒了一个轮廓。他的一生就是从一个快乐的人变成一个沉思的人，而这个沉思的人又使他成为了一个战斗的人。不过在他心灵深处还隐藏着一个渴望，那就是对音乐的热爱。他写了一首诗《在神圣的音乐声中》，他表达的意向是天上的乐曲，由正义的精灵佩戴着胜利的棕榈冠，永无休止地歌唱。我们人类曾经在地上应和这些天籁，但是悖谬的罪行用刺耳的噪音破坏了这种自然的和声。诗人盼望人们能够恢复这些音乐，使天上的仙乐配合地上的人生，与造物主一起歌唱。这是他心中的一个至高的理想。似乎是为了实现弥尔顿心中的这个渴望，他和一位朋友、作曲家亨利·劳斯合作，创作了一部音乐诗剧《科马斯》。弥尔顿写诗，劳斯谱曲，这部诗剧是描写酒神巴库斯的儿子科马斯以毒酒诱骗旅人，一旦人们喝下这毒酒，立即变成豺狼野兽的嘴脸，但这些喝了毒酒的人迷了心窍，对自己变成野兽的相貌欣赏不已，他们忘掉一切家人朋友，只盯着食槽放纵口腹。从一个正常人变成一个狰狞丑陋、只知吃喝自以为荣的下贱东西。科马斯施行这种巫术，专找孩子下手，他瞄上了一家姐弟三人。这部诗剧中有许多歌颂音乐的迷人的诗行，例如“由泥土塑成的凡人，怎能有/如此神圣的声音，摄人心魄/定有某种神圣之物在他胸中/销魂的歌曲震动四周的空气/他的肺腑中定隐藏着神圣的禀赋/迷人的歌声驾起静谧的翅膀/浮游过空灵夜色/每一节拍都抚摸着/乌黑的夜的羽毛”。</p><p>问：这诗句配上音乐，一定很美。</p><p>答：当然。只是现在人们只记住了弥尔顿的诗。科马斯扮作牧人去诱惑姐姐，但最终在两个弟弟和保护神的卫护下，转危为安。在弟弟和保护神的对话中，弥尔顿引用希腊哲学家的思想来宣扬他的理想，把复杂的哲学思考融入美丽的诗行。比如，“智慧常去寻找退隐中的宁静/在他最好的护卫沉思的伴随下/整理羽毛使翅膀生成美好/洁净的人心中自有光明/坐在地层中心也得享天光/但灵魂藏着黑暗和恶念的人/即便行走在正午的阳光下，也如黑暗，他自身就是自己的地牢”。这些诗句是对柏拉图哲学思想的诠释，那些地下的人就是柏拉图在《理想国》中描述的洞穴人。弥尔顿是一个非常珍视友谊的人，他在剑桥的好友爱德华·金不幸死于一场海难，弥尔顿为他写了一首哀婉动人的悼歌《黎西达斯》，这首诗的名字出自古罗马诗人维吉尔的《牧歌》。维吉尔是但丁《神曲》中的引路人，弥尔顿对这位大诗人很崇敬，所以借他诗歌中的一个人物当自己哀歌的名字。在维吉尔的《牧歌》第九首中，黎西达斯和他的朋友莫埃里一起上路，谈论着世事变迁。诗中莫埃里对黎西达斯说：“时光带走一切私人的经历，记得在儿时/我曾经常常以我的轻歌埋葬白日/而现在，这么多歌都忘了/我的歌喉也喑哑”。弥尔顿借维吉尔的诗来表达以往友朋之间欢聚的轻歌已不可再现，因为朋友已逝，他的歌喉也随之喑哑。弥尔顿在维吉尔的诗意中找到了自己要对朋友说的话。黎西达斯回唱道：“你的推辞更引起我渴慕的心情/看哪，海水都为你变得平静/所有絮语的风都停止了喧嚣”。维吉尔诗中的黎西达斯就是弥尔顿心中的爱德华·金。弥尔顿哀唱道：“黎西达斯死了，死于荣华岁月/他以波涛为灵床漂浮在水上/不该无人为他哀歌/哀伤的泪珠滚滚”。随后弥尔顿回忆他与金的友谊：“我们在同一小山上长大/放牧同一羊群，在泉边、泽畔和荫下/当高原的牧场还在朦胧/晨曦初上，我们就并肩出发”。诗中弥尔顿想象力汪洋恣肆，让黎西达斯也就是他的朋友金上天入地。天上的神灵列队迎候，他最终变成了海岸上的神灵，保护那些在大海中颠簸的人。诗的结尾是他的这位朋友又回到了故乡，与牧童、小溪、橡树唱和，用牧笛吹出温柔的曲调。在诗人的幻想中，他的朋友复活了：“他终于站起来，抖抖蓝色的斗篷”，而蓝色是希望的象征。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E7%89%B9%E7%BA%A6%E4%B8%93%E6%A0%8F%E4%BD%9C%E8%80%85-%E8%B5%B5%E8%B6%8A%E8%83%9C/" title="特约专栏作者:赵越胜">特约专栏作者:赵越胜</a></div></div></div></div>
+<div>21/04/2024 - 12:20</div><img src="https://s.rfi.fr/media/display/405e895e-3298-11ee-8ffc-005056a90321/w:1280/p:16x9/Photo%204%20ter%20village%20migrants.jpg"><p><strong>由央企华润控股的重庆燃气公司近日成为中国舆论焦点，起因是四月份以来，众多重庆成都用户投诉自从更换燃气表后，燃气费突然异常飙升，甚至有人停用燃气，燃气表仍在转动，有用户晒出6000元的离谱账单。重庆燃气公司在七千多用户投诉的压力下展开调查，承认有问题，声明启动退款行动。然而社交平台对该公司的声明并不买账，指该公司涉嫌犯罪应启动刑事调查，网民在议论的同时指责政府正用任意提高公共服务费的方式向国民转嫁财政危机。                    </strong></p><div><p>网友@荣剑发帖说：重庆燃气公司利用换煤气表，多收市民的钱，经众多市民举报，现在被坐实。这个事情的性质犹如盗贼偷窃别人的钱被抓，处理结果却是退钱了事。难道盗贼偷钱也可以用退钱而免于被法律追责吗？</p><p>网友@祥松谈发帖说：经过相关部门的协商，重庆的燃气表竟然真的减缓了运转速度！工作人员无需亲自进入居民家中，便能实现这一调整，大概是通过远程操控技术实现。重庆燃气明明是有组织的刑事犯罪，咋能退钱就完事，现在调查初步结果出来了，重庆燃气在燃气计量上存在重大问题，好比是1方燃气买出3方的钱，让许多用户燃气费用超出平时2～3倍，最高甚至超出正常用气量10倍。让重庆586万家用户叫苦不已，而重庆燃气利润却同比增加824%。燃气公司人均年收入达到21万。无论重庆燃气采取加压还是降低燃气浓度，或者更改气表结构等方式，把1方燃气变成了3方卖给用户，都是犯罪行为，而且这种事需要周密计划多方协同，根本不是一两个人能干成的，需要公司上下全力配合才能干成，尤其涉案金额巨大，</p><p>危及民生，社会危害极大，比市场小贩用七两秤性质严重的多，属于严重的有组织刑事犯罪。在调查事实面前，重庆燃气公司拒不认帐的底气没了，想退钱了事，但既然是有组织的刑事犯罪，咋能退钱就完了。更严重的是，近几年全国多地都出现燃气费用不明猛涨，加重民生困难的情况，显然重庆燃气不是第一家，肯定也不是最后一家这么干的黑心企业。</p><p>网友@桂哥猎手发帖说：某某燃气事件是犯罪，准确的说是诈骗罪且金额巨大，绝不能退钱就了事。如果退钱就了事，那么犯罪成本就是零。退钱了事是懒政、是腐政、是混蛋政！必须对相关部门、公司企业及责任人严肃追责。该撤的撤、该罚的罚、该关的关！法律不容模糊、权利与资本不能凌驾法律之上！</p><p>网友@bows_bob9694发帖说：燃气公司是国营大公司，垄断整个行业，什么违法乱纪的事情都敢做。如此难道不是抢劫性的流氓手段吗？网友@余英发帖说：供电公司、自来水公司、煤气公司等都是代表政府服务和收费的，不应该有损政府的高大形象 。网友@Bruce Mok发帖说：国有资本掌控的都在涨价，比如水电油，烟草等..通胀..民间资本掌控的都在降价，利润就业大减，供大于求..通缩…一胀一缩，统称通杀。</p><p>网友@TheXiangYang发帖说：……川渝地区此次事件背后的同一燃气公司是四川联发，其股东包括四川川港燃气和成都燃气集团。他们背后的股东，是华润燃气投资（中国）有限公司。到了华润这一级，就算查到钢板了。中国四大财阀集团：中信、保利、招商、华润。其实，多数参与民生基础服务的央企国企子公司都是亏损经营的。而之所以能够维持盈利，是因为</p><p>它的钱在别的地方有巨大收益，当然还有大额的国家财政补贴。而地方政府的财政收入，主要来源于税收和卖地。现在时代变了，税收收归国库，由中央统一调配，这几年习近平三令五申要“勒紧裤腰带过日子”，因此，下发到各省市的财政补贴肯定就少了。拿到的补贴少了，房子不好卖，土地出让金规则的更改，使得地方国企央企的日子也不好过了。为什么许多地方公交车停运了，因为上面没有财政补贴了。为什么水电燃油都在涨价，因为提供民生基础服务的央企，要亏损不起了。再不挣钱，行长爷爷的孙子、局长爸爸的儿子、副市长的老婆老妈，就真的要和月薪三千块的打工人一样，过苦日子了。</p><p>网友@庚白星君发帖说：……公共服务费上涨，最先抬高的就是大家的生活成本。在这个工作难找、工资不涨的节骨眼，生活成本若是提高，那么消费降级才是大家的第一选择。大家因为公共服务费上涨而不敢消费，整个社会的消费总需求下降。最难受的还是夹在中间的店家——一边是上涨的成本，不涨价就难以获利存活下去。一边是克制消费的消费者，需求减少，商品难以卖出去。最终的结果，除了苦苦支撑，就是关门止损。一波关门潮可能要来了，紧随其后的，还有降薪潮和裁员潮。</p><p>网友@文昭談古論今发帖说：除了川渝的“智能燃气表”爆表，又有更多网民报告，水表电表都有同样的问题。比如重庆、郑州都有网民反馈，装了新水表之后，就自己跳字，不用也产生费用，你不消费也被消费。所以拉动消费的新三件成了：电表、水表和气表。又称新“三个代表”。当然拉动消费只是戏称，其</p><p>实是割韭菜的新境界——破坏度量衡。这是萧条岁月基于权力，社会分摊损失的过程：权力越弱者</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%A1%91%E9%9B%A8/" title="桑雨">桑雨</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
