--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
-<!--1713746703000-->
-[泽连斯基：&quot;乌克兰不会成为第二个阿富汗&quot; 乌军在克里米亚击中一艘俄罗斯舰艇](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97-%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87)
+<!--1713746705000-->
+[311比112 美国会众议院通过608亿美元援乌法案](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240420-311%E6%AF%94112-%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87610%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88)
 ------
 
-<div>21/04/2024 - 23:04</div><img src="https://s.rfi.fr/media/display/c78838b4-0022-11ef-82a5-005056bf30b7/w:1280/p:16x9/2024-04-03T120301Z_111254464_RC2YY6ARKUMI_RTRMADP_3_UKRAINE-CRISIS-FINLAND.JPG"><p><strong>在美国国会众议院通过对乌克兰新军事援助法案后，俄罗斯和乌克兰军队周日(4月21日）在重要城镇恰西夫亚尔（东部）附近发生激烈战斗；乌克兰宣称，乌军在克里米亚击中了一艘俄罗斯舰艇。乌克兰总统泽连斯基周日表示，美国新的援乌法案表明，乌克兰将不会成为第二个阿富汗。        </strong></p><div><p>法新社消息，俄罗斯国防部周日中午宣称，东部的博格达尼夫卡镇已“完全解放”，但乌克兰军队随后表示，俄军试图在空军的掩护配合下"改善战术局势"，但遭到乌克兰军队击退。</p><p>博格达尼夫卡是一个战前居民不足100人的小镇，距离俄罗斯军队的目标城镇恰西夫亚尔 (Chassiv Iar) 不到10公里。而恰西夫亚尔距离克拉马托尔斯克东南不到30公里，是顿涅茨克地区仍受乌克兰控制的主要城市，也是乌克兰军队重要的铁路和后勤枢纽。</p><p>另外，乌克兰周日宣称，乌克兰海军在克里米亚击中俄罗斯“科姆纳”号舰艇。负责公海救援（沉没潜艇或丢失货物）的科莫纳号是俄罗斯最老牌的军舰之一。</p><p>据多个军事网站称，“科姆纳”号于1915年下水，参加过两次世界大战，被认为是世界历史最久的仍可执行战斗任务的舰船。</p><p>乌克兰海军发言人普莱滕丘克表示，“科姆纳”号已经不再能执行任务。他说，“乌克兰还将继续进行打击行动，直到俄罗斯不再拥有船舰或离开吞并的克里米亚。</p><p>另据法新社消息，乌克兰总统泽连斯基周日接受美国全国广播公司频道采访，再次就美国众议院周六投票通过的美国对乌克兰援助计划表示，美国新的援乌法案表明，乌克兰将不会成为“第二个阿富汗”。</p><p>泽连斯基接受“会见新闻界”采访表示，“这项援助将增强乌克兰的实力，并向克里姆林宫发出强烈信号，表明乌克兰不会成为第二个阿富汗”。</p><p>泽连斯基称：“美国将与乌克兰站在一起，保护乌克兰人民并保护世界各地的民主。”</p><p>经过漫长而艰苦的谈判，美国众议院于周六通过了一揽子对外援助法案，其中包括向乌克兰提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>泽连斯基立即众院通过新的援乌法案表示欢迎称，"法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>泽连斯基在周日的访谈还表示，乌克兰部分部队已经“精疲力竭”，需要更换。但新的部队必须拥有装备。他表示，希望尽快为前线的士兵提供具体帮助。</p><p>美国国会众院通过的法案还需要经参议院通过并得到美国总统拜登的批准，然后才能开始向乌克兰运送军援。</p><p>法新社援引美国战争研究所在最新公告中警告称，这意味着这种援助“几周内不会开始影响前线战局”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25B8%258D%25E4%25BC%259A%25E6%2588%2590%25E4%25B8%25BA%25E7%25AC%25AC%25E4%25BA%258C%25E4%25B8%25AA%25E9%2598%25BF%25E5%25AF%258C%25E6%25B1%2597-%25E4%25B9%258C%25E5%2586%259B%25E5%259C%25A8%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E5%2587%25BB%25E4%25B8%25AD%25E4%25B8%2580%25E8%2589%2598%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E8%2588%25B0%25E8%2589%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>20/04/2024 - 20:04</div><img src="https://s.rfi.fr/media/display/68fcb402-ff3f-11ee-a91e-005056bfb2b6/w:1280/p:16x9/Capture-2205.JPG"><p><strong>4月20日，美国国会众议院以311比112票通过了《2024年乌克兰安全补充拨款法案》（H.R.8035）。所有民主党议员都投了赞成票。共和党议员的赞成与反对投票几乎持平，101票赞成，112票反对，1票弃权。该法案通过时，民主党人和旁听席上的来宾欢呼雀跃。众议院议长约翰逊（Mike Johnson）警告说，在会场上挥舞旗帜是“违反礼仪”的行为。        </strong></p><div><p>该援助计划提供608.4亿美元援助乌克兰，其中138亿美元用于乌克兰购买先进武器，134亿美元用于补充美军库存，110亿美元用于支持美国在欧洲的盟友，另外138亿美元用于为乌克兰购买美国防御系统。 </p><p>还有90亿美元将作为经济援助拨给乌克兰这个饱受战争蹂躏的国家，这些援助将以贷款的形式提供，经美国国会批准后总统可以免除这些贷款。该方案现在将提交参议院表决，然后交由拜登总统签署。拜登已表示，一旦国会通过，他将签署这些法案。</p><p>得知消息后，乌克兰总统泽连斯基（Volodymyr Zelenskyy）通过社交媒体平台X表示：“感谢美国众议院两党以及议长迈克·约翰逊（Mike Johnson）本人作出的决定，让历史沿着正确的轨道前进”。</p><p>泽连斯基补充说：“民主与自由永远具有全球意义，只要美国帮助保护民主与自由，民主与自由就永远不会失败。众议院今天通过的至关重要的美国援助法案将阻止战争扩大，拯救成千上万人的生命，并帮助我们两国变得更加强大”。</p><p>泽连斯基说：“只有通过实力才能实现公正的和平与安全。我们希望这些法案能够得到参议院的支持，并递交给拜登总统。谢谢你，美国！”</p><p>拜登（Joe Biden）周六通过白宫发表的声明表示：“今天，众议院两党议员投票决定推进我们的国家安全利益，并就美国在世界舞台上的领导力发出了明确的信息。在这个关键的转折点上，他们齐心协力，响应历史的召唤，通过了急需的国家安全立法，这是我几个月来为之奋斗的目标”。</p><p>拜登说：“这一一揽子计划将为以色列和乌克兰提供重要支持；为加沙、苏丹、海地以及世界各地受冲突和自然灾害影响的其他地区提供急需的人道主义援助；并加强印度-太平洋的安全与稳定”。</p><p>拜登续指：“在以色列面临来自伊朗的前所未有的攻击、乌克兰遭受俄罗斯持续轰炸的情况下，这是一个非常紧迫的时刻。我要感谢约翰逊议长、杰弗里斯（众议院民主党、Hakeem Jeffries）领袖以及众议院两党议员联盟，他们投票支持将我们的国家安全放在首位”。</p><p>拜登说：“我敦促参议院尽快将这一方案提交到我的办公桌上，以便我能够将其签署成为法律，我们也可以迅速向乌克兰运送武器装备，以满足他们的紧急战场需求”。</p><p>北约秘书长斯托尔滕贝格（Jens Stoltenberg）同样通过X平台表示：“我对美国众议院批准向乌克兰提供新的重大援助计划表示欢迎。乌克兰正在利用北约盟国提供的武器摧毁俄罗斯的作战能力。这使我们欧洲和北美更加安全”。</p><p>欧盟委员会主席冯德莱恩（Ursula von der Leyen）在X平台上写道：“我对美国众议院压倒性的赞成票表示欢迎。乌克兰应该得到针对俄罗斯的一切支持。现在，我们要求美国参议院尽快投票，因为这关系到生命。跨大西洋盟国团结一致，支持自由与民主”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCL.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240420-311%25E6%25AF%2594112-%25E7%25BE%258E%25E5%259B%25BD%25E4%25BC%259A%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E8%25BF%2587610%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E6%258F%25B4%25E4%25B9%258C%25E6%25B3%2595%25E6%25A1%2588&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88%20-%20https%3A%2F%2Frfi.my%2FAXCL.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCL.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=311%E6%AF%94112%20%E7%BE%8E%E5%9B%BD%E4%BC%9A%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E8%BF%87608%E4%BA%BF%E7%BE%8E%E5%85%83%E6%8F%B4%E4%B9%8C%E6%B3%95%E6%A1%88&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
