--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
 <!--1713746703000-->
-[内塔尼亚胡称将加大对哈马斯的军事压力 汗尤尼斯一家医院发现数十具尸体](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B-%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93)
+[泽连斯基：&quot;乌克兰不会成为第二个阿富汗&quot; 乌军在克里米亚击中一艘俄罗斯舰艇](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA-%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97-%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87)
 ------
 
-<div>21/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/7266a39c-0023-11ef-a6e7-005056a90284/w:1280/p:16x9/2024-04-21T205412Z_576377780_RC2XA7AKBLOK_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>以色列总理内塔尼亚胡周日(4月21日）表示，以色列将加大对巴勒斯坦武装组织哈马斯的军事压力，以确保被扣押加沙的人质获释；加沙地带民防部门周日称，在以色列袭击的加沙地带一家医院的院子里发现了数十具尸体。        </strong></p><div><p>法新社报道，内塔尼亚胡在犹太节日逾越节前夕发表视频讲话，他表示在未来几天，以色列将加大对哈马斯的军事和政治压力，因为这是解救人质和取得胜利的唯一途径，以色列很快就会对哈马斯进行更多和更痛苦的打击。</p><p>内塔尼亚胡并重申，将对拉法发动地面攻势，他认为拉法是哈马斯军事基地及最后的堡垒。</p><p>以色列军方曾经表示，去年10月7日遭到哈马斯从以色列南部挟持的一些人质被扣押在拉法。</p><p>以色列军方发言人哈加里（Daniel Hagari）周日稍后在电视播出的谈话中表示，以军总参谋长哈莱维在南部军区司令部与军方高开会并评估局势，他在会上批准了以军继续展开军事行动的计划。不过他没有就此提供细节。</p><p>他说："逾越节时，人质已经被俘200天，我们会战斗，直到他们回到我们身边。"</p><p>以色列军队20日夜间空袭加沙地带南部城市拉法（Rafah）多处住宅，造成至少19人死亡。</p><p>报道说，死者绝大多数是妇女和儿童，其中包括一名孕妇。另有大量人员被埋在废墟下等待救援。</p><p>另据巴勒斯坦卫生部21日发表的声明，以军当天还在约旦河西岸城市希伯伦同巴勒斯坦人发生冲突，开枪打死两名巴勒斯坦人。</p><p>据巴勒斯坦加沙地带卫生部门21日发布的数据，以军过去24小时对加沙地带的袭击共造成48人死亡、97人受伤。去年10月新一轮巴以冲突爆发以来，以色列在加沙地带的军事行动已造成超过3.4万人死亡、约7.7万人受伤。</p><p>另据加沙民防部门周日（4月21日）说，卫生人员在南部城市汗尤尼斯的一家医院发现了至少50具尸体。以色列军方称正在查证这个报道。</p><p>法新社报道，民防机构在声明中说，遗体是在纳赛尔医疗中心的庭院中发现的。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXL2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E7%25A7%25B0%25E5%25B0%2586%25E5%258A%25A0%25E5%25A4%25A7%25E5%25AF%25B9%25E5%2593%2588%25E9%25A9%25AC%25E6%2596%25AF%25E7%259A%2584%25E5%2586%259B%25E4%25BA%258B%25E5%258E%258B%25E5%258A%259B-%25E6%25B1%2597%25E5%25B0%25A4%25E5%25B0%25BC%25E6%2596%25AF%25E4%25B8%2580%25E5%25AE%25B6%25E5%258C%25BB%25E9%2599%25A2%25E5%258F%2591%25E7%258E%25B0%25E6%2595%25B0%25E5%258D%2581%25E5%2585%25B7%25E5%25B0%25B8%25E4%25BD%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXL2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>21/04/2024 - 23:04</div><img src="https://s.rfi.fr/media/display/c78838b4-0022-11ef-82a5-005056bf30b7/w:1280/p:16x9/2024-04-03T120301Z_111254464_RC2YY6ARKUMI_RTRMADP_3_UKRAINE-CRISIS-FINLAND.JPG"><p><strong>在美国国会众议院通过对乌克兰新军事援助法案后，俄罗斯和乌克兰军队周日(4月21日）在重要城镇恰西夫亚尔（东部）附近发生激烈战斗；乌克兰宣称，乌军在克里米亚击中了一艘俄罗斯舰艇。乌克兰总统泽连斯基周日表示，美国新的援乌法案表明，乌克兰将不会成为第二个阿富汗。        </strong></p><div><p>法新社消息，俄罗斯国防部周日中午宣称，东部的博格达尼夫卡镇已“完全解放”，但乌克兰军队随后表示，俄军试图在空军的掩护配合下"改善战术局势"，但遭到乌克兰军队击退。</p><p>博格达尼夫卡是一个战前居民不足100人的小镇，距离俄罗斯军队的目标城镇恰西夫亚尔 (Chassiv Iar) 不到10公里。而恰西夫亚尔距离克拉马托尔斯克东南不到30公里，是顿涅茨克地区仍受乌克兰控制的主要城市，也是乌克兰军队重要的铁路和后勤枢纽。</p><p>另外，乌克兰周日宣称，乌克兰海军在克里米亚击中俄罗斯“科姆纳”号舰艇。负责公海救援（沉没潜艇或丢失货物）的科莫纳号是俄罗斯最老牌的军舰之一。</p><p>据多个军事网站称，“科姆纳”号于1915年下水，参加过两次世界大战，被认为是世界历史最久的仍可执行战斗任务的舰船。</p><p>乌克兰海军发言人普莱滕丘克表示，“科姆纳”号已经不再能执行任务。他说，“乌克兰还将继续进行打击行动，直到俄罗斯不再拥有船舰或离开吞并的克里米亚。</p><p>另据法新社消息，乌克兰总统泽连斯基周日接受美国全国广播公司频道采访，再次就美国众议院周六投票通过的美国对乌克兰援助计划表示，美国新的援乌法案表明，乌克兰将不会成为“第二个阿富汗”。</p><p>泽连斯基接受“会见新闻界”采访表示，“这项援助将增强乌克兰的实力，并向克里姆林宫发出强烈信号，表明乌克兰不会成为第二个阿富汗”。</p><p>泽连斯基称：“美国将与乌克兰站在一起，保护乌克兰人民并保护世界各地的民主。”</p><p>经过漫长而艰苦的谈判，美国众议院于周六通过了一揽子对外援助法案，其中包括向乌克兰提供610亿美元以协助乌克兰和地区合作伙伴对抗俄罗斯。</p><p>泽连斯基立即众院通过新的援乌法案表示欢迎称，"法案将阻止战争蔓延，拯救成千上万的生命，并将使我们两国变得更加强大。”</p><p>泽连斯基在周日的访谈还表示，乌克兰部分部队已经“精疲力竭”，需要更换。但新的部队必须拥有装备。他表示，希望尽快为前线的士兵提供具体帮助。</p><p>美国国会众院通过的法案还需要经参议院通过并得到美国总统拜登的批准，然后才能开始向乌克兰运送军援。</p><p>法新社援引美国战争研究所在最新公告中警告称，这意味着这种援助“几周内不会开始影响前线战局”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXKw.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E6%25B3%25BD%25E8%25BF%259E%25E6%2596%25AF%25E5%259F%25BA-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E4%25B8%258D%25E4%25BC%259A%25E6%2588%2590%25E4%25B8%25BA%25E7%25AC%25AC%25E4%25BA%258C%25E4%25B8%25AA%25E9%2598%25BF%25E5%25AF%258C%25E6%25B1%2597-%25E4%25B9%258C%25E5%2586%259B%25E5%259C%25A8%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E5%2587%25BB%25E4%25B8%25AD%25E4%25B8%2580%25E8%2589%2598%25E4%25BF%2584%25E7%25BD%2597%25E6%2596%25AF%25E8%2588%25B0%25E8%2589%2587&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87%20-%20https%3A%2F%2Frfi.my%2FAXKw.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXKw.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%B3%BD%E8%BF%9E%E6%96%AF%E5%9F%BA%EF%BC%9A%22%E4%B9%8C%E5%85%8B%E5%85%B0%E4%B8%8D%E4%BC%9A%E6%88%90%E4%B8%BA%E7%AC%AC%E4%BA%8C%E4%B8%AA%E9%98%BF%E5%AF%8C%E6%B1%97%22%20%E4%B9%8C%E5%86%9B%E5%9C%A8%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E5%87%BB%E4%B8%AD%E4%B8%80%E8%89%98%E4%BF%84%E7%BD%97%E6%96%AF%E8%88%B0%E8%89%87&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
