--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
-<!--1713746702000-->
-[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
+<!--1713746703000-->
+[内塔尼亚胡称将加大对哈马斯的军事压力 汗尤尼斯一家医院发现数十具尸体](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B-%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93)
 ------
 
-<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 23:09</div><img src="https://s.rfi.fr/media/display/7266a39c-0023-11ef-a6e7-005056a90284/w:1280/p:16x9/2024-04-21T205412Z_576377780_RC2XA7AKBLOK_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>以色列总理内塔尼亚胡周日(4月21日）表示，以色列将加大对巴勒斯坦武装组织哈马斯的军事压力，以确保被扣押加沙的人质获释；加沙地带民防部门周日称，在以色列袭击的加沙地带一家医院的院子里发现了数十具尸体。        </strong></p><div><p>法新社报道，内塔尼亚胡在犹太节日逾越节前夕发表视频讲话，他表示在未来几天，以色列将加大对哈马斯的军事和政治压力，因为这是解救人质和取得胜利的唯一途径，以色列很快就会对哈马斯进行更多和更痛苦的打击。</p><p>内塔尼亚胡并重申，将对拉法发动地面攻势，他认为拉法是哈马斯军事基地及最后的堡垒。</p><p>以色列军方曾经表示，去年10月7日遭到哈马斯从以色列南部挟持的一些人质被扣押在拉法。</p><p>以色列军方发言人哈加里（Daniel Hagari）周日稍后在电视播出的谈话中表示，以军总参谋长哈莱维在南部军区司令部与军方高开会并评估局势，他在会上批准了以军继续展开军事行动的计划。不过他没有就此提供细节。</p><p>他说："逾越节时，人质已经被俘200天，我们会战斗，直到他们回到我们身边。"</p><p>以色列军队20日夜间空袭加沙地带南部城市拉法（Rafah）多处住宅，造成至少19人死亡。</p><p>报道说，死者绝大多数是妇女和儿童，其中包括一名孕妇。另有大量人员被埋在废墟下等待救援。</p><p>另据巴勒斯坦卫生部21日发表的声明，以军当天还在约旦河西岸城市希伯伦同巴勒斯坦人发生冲突，开枪打死两名巴勒斯坦人。</p><p>据巴勒斯坦加沙地带卫生部门21日发布的数据，以军过去24小时对加沙地带的袭击共造成48人死亡、97人受伤。去年10月新一轮巴以冲突爆发以来，以色列在加沙地带的军事行动已造成超过3.4万人死亡、约7.7万人受伤。</p><p>另据加沙民防部门周日（4月21日）说，卫生人员在南部城市汗尤尼斯的一家医院发现了至少50具尸体。以色列军方称正在查证这个报道。</p><p>法新社报道，民防机构在声明中说，遗体是在纳赛尔医疗中心的庭院中发现的。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXL2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E7%25A7%25B0%25E5%25B0%2586%25E5%258A%25A0%25E5%25A4%25A7%25E5%25AF%25B9%25E5%2593%2588%25E9%25A9%25AC%25E6%2596%25AF%25E7%259A%2584%25E5%2586%259B%25E4%25BA%258B%25E5%258E%258B%25E5%258A%259B-%25E6%25B1%2597%25E5%25B0%25A4%25E5%25B0%25BC%25E6%2596%25AF%25E4%25B8%2580%25E5%25AE%25B6%25E5%258C%25BB%25E9%2599%25A2%25E5%258F%2591%25E7%258E%25B0%25E6%2595%25B0%25E5%258D%2581%25E5%2585%25B7%25E5%25B0%25B8%25E4%25BD%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93%20-%20https%3A%2F%2Frfi.my%2FAXL2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXL2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E7%A7%B0%E5%B0%86%E5%8A%A0%E5%A4%A7%E5%AF%B9%E5%93%88%E9%A9%AC%E6%96%AF%E7%9A%84%E5%86%9B%E4%BA%8B%E5%8E%8B%E5%8A%9B%20%E6%B1%97%E5%B0%A4%E5%B0%BC%E6%96%AF%E4%B8%80%E5%AE%B6%E5%8C%BB%E9%99%A2%E5%8F%91%E7%8E%B0%E6%95%B0%E5%8D%81%E5%85%B7%E5%B0%B8%E4%BD%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
