--- a/articles/rfi/999964.md
+++ b/articles/rfi/999964.md
@@ -1,5 +1,5 @@
-<!--1713712502000-->
-[日本首相向靖国神社奉献祭品  大臣参拜靖国神社](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240421-%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81-%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE)
+<!--1713746702000-->
+[美国或制裁一支以色列部队 内塔尼亚胡震怒](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240421-%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F-%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92)
 ------
 
-<div>21/04/2024 - 09:57</div><img src="https://s.rfi.fr/media/display/3ceea9d8-1583-11ea-9068-005056bf7c53/w:1280/p:16x9/Yasukuni%201%20-%20pluie_0.jpg"><p><strong>一年一度的靖国神社“春大祭”于21日至23日在东京九段靖国神社举行。岸田首相献上名为“真榊”的祭品。        </strong></p><div><p>岸田首相自2021年10月就任首相以来，都在8月15日二战结束纪念日以及春秋两季靖国神社的定期祭典献上名为“真榊”的祭品，据透露，到23日“春大祭”结束，岸田首相本人不会去参拜靖国神社。</p><p>岸田内阁成员中，经济再兴大臣新藤义孝21日上午参拜了靖国神社。他表示：“我满怀崇敬的心情，参拜了那些曾经全心全意为国家奋斗的人们的英灵。”他表示，参拜靖国神社是“私人行为”。他还表示：“我向英灵汇报了三月底在硫磺岛举行了日美联合追悼会。”</p><p>新藤义孝是二战末期日美硫磺岛战役中日方担任指挥官的栗林忠道中将的外孙。</p><p>日本众参两院议长也献上祭品“真榊”。</p><p>韩国外交部21日对日本首相岸田文雄向靖国神社供奉祭品“真榊”以及部分大臣参拜靖国神社表示“深感失望和遗憾”。外交部在一份发言人评论中指出：“日本负有责任的领导人反复祭祀并参拜了美化侵略战争、合祀战犯的靖国神社。”评论敦促“日本负责任的领导人正视历史，在行动中表现出对过去谦虚的反思和真心的反省”，这是“面向未来的日韩关系发展的重要基础”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXFm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240421-%25E6%2597%25A5%25E6%259C%25AC%25E9%25A6%2596%25E7%259B%25B8%25E5%2590%2591%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE%25E5%25A5%2589%25E7%258C%25AE%25E7%25A5%25AD%25E5%2593%2581-%25E5%25A4%25A7%25E8%2587%25A3%25E5%258F%2582%25E6%258B%259C%25E9%259D%2596%25E5%259B%25BD%25E7%25A5%259E%25E7%25A4%25BE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%20-%20https%3A%2F%2Frfi.my%2FAXFm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXFm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%97%A5%E6%9C%AC%E9%A6%96%E7%9B%B8%E5%90%91%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE%E5%A5%89%E7%8C%AE%E7%A5%AD%E5%93%81%20%20%E5%A4%A7%E8%87%A3%E5%8F%82%E6%8B%9C%E9%9D%96%E5%9B%BD%E7%A5%9E%E7%A4%BE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>21/04/2024 - 23:52</div><img src="https://s.rfi.fr/media/display/69cd6558-0029-11ef-b95e-005056bf30b7/w:1280/p:16x9/2024-03-27T000000Z_2099358366_RC2AU6ARAWY1_RTRMADP_3_ISRAEL-PALESTINIANS.JPG"><p><strong>美国媒体周日报道称，华盛顿准备对在约旦河西岸被占领区活动的以色列国防军内扎·耶胡达营（Netzah Yehuda）实施制裁。        </strong></p><div><p>以色列总理内塔尼亚胡周日愤怒地表示，他将与任何针对以色列军队因涉嫌侵犯人权而实施的制裁作斗争。</p><p>内塔尼亚胡对有关华盛顿可能对以色列军队的一支部队实施制裁的报道做出了强烈反应，这支部队被指在 10 月7日哈马斯发动袭击之前可能对约旦河西岸的巴勒斯坦人实施了虐待行为。</p><p>内塔尼亚胡周六称：“在我们的士兵与恐怖怪物战斗的时候，对以色列军队的一支部队实施制裁的意图是荒谬至极的，是对道德的侮辱”。他还在 X 上写道：“以色列军队绝不能受到制裁”。</p><p>周五，美国宣布了对被占领的约旦河西岸的以色列定居者实施一系列新的制裁措施，这令以色列当局大失所望。</p><p>内塔尼亚胡周日称：“如果你们认为可以对以色列国防军（IDF）的一支部队实施制裁，我将采取一切手段反对”。</p><p>周五，美国国务卿布林肯被问及有关美国将停止向以色列国防军某些部队提供军事援助的报道，报道指这与 在约旦河西岸发生的侵犯人权事件有关。</p><p>布林肯回答说： “我已经得出了一些结论，你们可以期待在今后几天内听到这些结论”。</p><p>美国国务卿提到了 “莱希法”，该法禁止美国政府在有可靠信息表明外国安全部队涉嫌侵犯人权时使用资金帮助他们。他补充说：“这是我们在各个层级实施的一项重要法律”。</p><p>布林肯继续表示： “我们进行这些调查（......）需要时间。在收集事实和分析事实方面都必须非常谨慎，而这正是我们所做的。我认为可以告诉你们很快就会看到结果”。</p><p>根据美国和以色列媒体报道，这支部队是 "Netzah Yehuda "营，主要由极端东正教士兵组成。</p><p>以色列政府战时内阁成员本尼-甘兹（Benny Gantz）周日发表声明说，他已与美国国务卿布林肯进行了交谈、劝阻他不要实施这些制裁。</p><p>美国国务院对此不予置评。布林肯周五表示，有关指控以色列违反一系列禁止向严重侵犯人权的个人或安全部队提供军事援助的美国法律一事，他已作出了决定。</p><p>周六，美国众议院投票赞成一项庞大的计划，其中包括向以色列提供数十亿美元的军事援助，特别是用于加强以色列的导弹防御盾牌“ 铁穹”。</p><p>六个多月来，以色列军队一直在加沙地带和黎巴嫩边境调动军队打击哈马斯，加沙地带和黎巴嫩边境几乎每天都会发生与亲伊朗的真主党交火的事件。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXLK.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240421-%25E7%25BE%258E%25E5%259B%25BD%25E6%2588%2596%25E5%2588%25B6%25E8%25A3%2581%25E4%25B8%2580%25E6%2594%25AF%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E9%2583%25A8%25E9%2598%259F-%25E5%2586%2585%25E5%25A1%2594%25E5%25B0%25BC%25E4%25BA%259A%25E8%2583%25A1%25E9%259C%2587%25E6%2580%2592&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92%20-%20https%3A%2F%2Frfi.my%2FAXLK.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXLK.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E6%88%96%E5%88%B6%E8%A3%81%E4%B8%80%E6%94%AF%E4%BB%A5%E8%89%B2%E5%88%97%E9%83%A8%E9%98%9F%20%E5%86%85%E5%A1%94%E5%B0%BC%E4%BA%9A%E8%83%A1%E9%9C%87%E6%80%92&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
