--- a/articles/rfi/999981.md
+++ b/articles/rfi/999981.md
@@ -1,5 +1,5 @@
-<!--1713640501000-->
-[纽时:中国游泳运动员在东京奥运会前兴奋剂检测呈阳性是怎样逃脱的](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BA%BD%E6%97%B6-%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84)
+<!--1713640502000-->
+[伊朗-以色列：以色列谨慎回应，似乎是为了让德黑兰可以选择不回应 - 法国世界报](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E4%B8%96%E7%95%8C%E6%8A%A5/20240419-%E4%BC%8A%E6%9C%97-%E4%BB%A5%E8%89%B2%E5%88%97-%E4%BB%A5%E8%89%B2%E5%88%97%E8%B0%A8%E6%85%8E%E5%9B%9E%E5%BA%94%EF%BC%8C%E4%BC%BC%E4%B9%8E%E6%98%AF%E4%B8%BA%E4%BA%86%E8%AE%A9%E5%BE%B7%E9%BB%91%E5%85%B0%E5%8F%AF%E4%BB%A5%E9%80%89%E6%8B%A9%E4%B8%8D%E5%9B%9E%E5%BA%94)
 ------
 
-<div>20/04/2024 - 20:08</div><img src="https://s.rfi.fr/media/display/116b19c6-ff40-11ee-beb1-005056a90284/w:1280/p:16x9/AP24111179328197.jpg"><p><strong>据纽约时报4月20日报道，在 2021 年东京奥运会前7个月，23 名顶尖的中国游泳运动员被检测出对同一种强效禁药呈阳性反应，但由于中国高官暗中为他们洗脱了使用兴奋剂的罪名，而负责监管体育竞赛使用药物的全球权威机构也选择不予干预，因此他们得以逃脱公众监督，继续参加比赛。        </strong></p><div><p>这个报道说，检测结果呈阳性的多名运动员--包括中国派出参加东京奥运会的游泳队中的近一半--后来都获得了奖牌，其中包括三枚金牌。他们中的许多人仍在为中国参赛，包括两枚金牌得主张雨霏在内的几名运动员有望在今年的巴黎夏季奥运会上再次争夺奖牌。</p><p>中国在其反兴奋剂监管机构的一份报告中承认了阳性检测结果，称这些游泳运动员是在不知情的情况下摄入了极少量禁药，因此没有必要对他们采取任何行动。</p><p>但《纽约时报》的调查发现，这一此前未被报道的事件在反兴奋剂领域造成了严重分歧，而中国运动员的成绩一直是该领域的热点。</p><p><strong>往来邮件显示</strong></p><p>美国官员和其他专家说，在进一步调查之前，这些游泳运动员本应被停赛或公开身份，他们认为，中国体育官员、游泳国际管理机构--世界水上运动协会以及负责监督各国药物检测项目的全球权威机构--世界反兴奋剂机构都没有做到这一点。</p><p>尽管一名中国反兴奋剂官员和一名世界游泳最高级别官员之间的往来邮件似乎表明可能发生了违规行为，而且至少必须公开承认，但这些主管当局还是决定不采取行动。</p><p>这篇报道说，即使在其他国家和国际反兴奋剂官员多次向世界反兴奋剂机构（WADA）提供情报，表明中国游泳运动员掩盖真相和使用兴奋剂之后，该机构仍选择不追究运动员的责任，声称 "缺乏任何可信的证据 "来质疑中国对事件的说法。世界反兴奋剂机构为其不采取行动的决定进行了辩护，称批评没有事实根据。</p><p><strong>美国长臂起诉</strong></p><p>据两位熟悉此案的人士和《纽约时报》审阅的一份文件称，联邦调查局（FBI）去年了解到这些阳性检测结果的存在和中方为运动员洗脱罪名所给出的理由，以及世界反兴奋剂机构的不作为。</p><p>美国联邦调查人员在最近几周采取了一些措施，以了解更多的情况。但联调局的发言人拒绝发表评论。美国当局的任何调查都将借助一个强大的新法律工具：2020 年通过的一项法律赋予美国司法部对企图通过使用兴奋剂败坏国际体育赛事的行为进行刑事起诉的权力，无论这些行为在哪里发生。</p><p>在回答《纽约时报》提问的声明中，美国反兴奋剂机构指责世界反兴奋剂机构（WADA）--其全球对应机构--未能履行其使命。</p><p><strong>干净运动员背后捅一刀</strong></p><p>美国反兴奋剂机构首席执行官特拉维斯-T-泰加特（Travis T. Tygart）说："这似乎是在干净运动员的背后捅了一刀，是对所有公平竞争、遵守规则的运动员的深深背叛”。"泰加特承认，自2020年以来，他曾多次向世界反兴奋剂机构提供有关对中国游泳界使用兴奋剂的指控。"所有那些掩盖这些阳性结果、压制勇敢举报者声音的肮脏之手，都必须在规则和法律的最大范围内被追究责任。"</p><p>纽时这篇报道说，本文基于对机密文件和电子邮件（包括由中国反兴奋剂机构编写并提交给世界反兴奋剂机构的报告）的审查，以及对世界各地参与反兴奋剂工作的人员的采访。有些采访是在不透露消息来源的基础上进行的，因为他们未被授权公开发言或担心遭到报复。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BA%25BD%25E6%2597%25B6-%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B8%25B8%25E6%25B3%25B3%25E8%25BF%2590%25E5%258A%25A8%25E5%2591%2598%25E5%259C%25A8%25E4%25B8%259C%25E4%25BA%25AC%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2589%258D%25E5%2585%25B4%25E5%25A5%258B%25E5%2589%2582%25E6%25A3%2580%25E6%25B5%258B%25E5%2591%2588%25E9%2598%25B3%25E6%2580%25A7%25E6%2598%25AF%25E6%2580%258E%25E6%25A0%25B7%25E9%2580%2583%25E8%2584%25B1%25E7%259A%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 00:34</div><img src="https://s.rfi.fr/media/display/bddd2032-0bde-11ea-9862-005056bff430/w:1280/p:16x9/fa_guo_shi_jie_bao_wb161923-rfi-cn-20150123_cartouche.jpg"><p><strong>周五，伊朗军事地点附近传出了爆炸声，目前尚不清楚伊朗所受袭击的规模和性质。德黑兰当局对爆炸轻描淡写，以色列政府和军队则还没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。自伊朗在上周六袭击以色列以来，国际社会一直在呼吁以色列做出温和的反应，以免整个地区都燃烧起来。                    </strong></p><div><p>法国世界报记者加扎尔·戈尔希里（Ghazal Golshiri）以及该报耶路撒冷通讯员路易斯·安伯特（Louis Imbert）联合写道，4月19日星期五一大早，以色列就伊朗4月13日对以色列领土发动的无人机和导弹袭击做出了回应。</p><p>据报道，伊朗中部城市伊斯法罕（Ispahan）附近发生爆炸，这里有多个军事基地，包括核设施和弹道导弹设施。4月14日，从这些军事地点有拍摄到导弹发射，射向至少一个以色列空军基地。</p><p>伊斯法罕市的一名居民告诉法国《世界报》说，他感受到了强烈的震动，他最初认为“是发生了地震。”隶属于伊朗革命卫队的法尔斯通讯社则提到“伊斯法罕陆军战斗机基地附近发生了三起爆炸”，并声称伊朗启动了拦截可能的无人机的防空系统。法尔斯通讯社还指出，另一个可疑飞行物体让距离一炼油厂几公里的大不里士（Tabriz，西北）的防空系统也被启动了。</p><p>然而，德黑兰当局对以色列的军事回应轻描淡写，至今，对以色列军事回应的性质和方式，外界依然不确定。</p><p>伊朗总统莱希周五发表讲话但没有提及爆炸事件。伊朗总统莱希周五在达姆甘市向数百人发表讲话，非常简短地提及了上周末伊朗对以色列发动前所未有的无人机和导弹袭击后中东紧张的国际局势，但没有提到几个小时前的爆炸事件。</p><p>伊朗媒体周五援引伊斯法罕陆军指挥官西亚沃什·米汉杜斯特（Siavosh Mihandoust）的话说，当地居民听到的爆炸声来自防空系统。这位指挥官坚称，“我们没有受到任何损害，也没有发生任何事件。”自周五黎明时分起，伊朗官方电视台就派遣记者前往伊斯法罕市中心，以表明那里局势平静，日常生活一切照常。</p><p><strong>伊朗说没有导弹袭击</strong></p><p>一名经常代表伊朗革命卫队发言的网络空间最高委员会的一名官员则否认此次袭击涉及导弹袭击。周五，以色列既没有证实也没有否认这一消息。这名伊朗官员声称，有无人机被击落，但没有导弹袭击。他说，被击落的无人机射程较短，是从伊朗境内发射的。一位伊朗分析人士在伊朗国家电视台上说，被击落的“微型无人机”是由“伊朗领土上的渗透者”发射的，他说，以色列国外情报机构有能力这么做，至少在过去，以色列国外情报机构已经进行过一次这一类型的攻击。在黎明时暂停的德黑兰机场的航班，原定周五上午恢复。</p><p>在以色列一边，截至周五晚上，以色列政府和军队尚没有对此次袭击发表评论，也没有宣称对伊朗领土上的爆炸负责。不过，以色列国家安全部长伊塔马尔·本·格维尔(Itamar Ben Gvir)对以色列回应的明显“虚弱”表示遗憾。本·格维尔来自宗教极右翼，被排除在战时内阁之外，他使用了一个希伯来语足球用语，表示射门缺乏力量。这显示，伊朗境内的爆炸，以色列脱不了干系。但以色列的回应既精确又规模有限，似乎以色列并不希望局势有新的升级。</p><p>就目前的情况来看，以色列似乎选择了相对谨慎的回应，以便让德黑兰当局可以选择不回应。</p><p><strong>叙利亚也遭遇了空袭</strong></p><p>另外，周五，除了伊朗，叙利亚也遭遇了空袭。叙利亚国家通讯社SANA援引军方消息人士的话称，以色列在夜间还袭击了叙利亚南部的防空系统，造成了一些“物质损失”。以色列这是为了表明它将继续对伊朗的地区盟友采取密集的军事行动。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E9%98%BF%E6%9B%BC%E4%BA%AD/" title="阿曼亭">阿曼亭</a></div></div></div></div>
