--- a/articles/rfi/999982.md
+++ b/articles/rfi/999982.md
@@ -1,5 +1,5 @@
-<!--1713624303000-->
-[以色列袭击伊朗时也袭击了叙利亚南部一个军事雷达阵地](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0)
+<!--1713640501000-->
+[纽时:中国游泳运动员在东京奥运会前兴奋剂检测呈阳性是怎样逃脱的](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240420-%E7%BA%BD%E6%97%B6-%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84)
 ------
 
-<div>19/04/2024 - 20:13</div><img src="https://s.rfi.fr/media/display/1ff7a568-fe78-11ee-b2b7-005056bfb2b6/w:1280/p:16x9/Syria%20Deraa.PNG"><p><strong>据叙利亚国防部和一个非政府组织称，周五（4月19日）黎明时分，以色列在袭击伊朗中部时，也袭击了叙利亚南部一个军事雷达阵地。        </strong></p><div><p>叙利亚国防部在一份声明中说："2:55（格林尼治标准时间 23:55）左右，敌人以色列使用导弹（......）对我方在南部地区的防空地点发动了袭击"。叙利亚国防部补充说，袭击造成了"物质"损失，未提及是否有人员伤亡。</p><p>总部设在英国的非政府组织叙利亚人权观察站（OSDH）则报告说，"以色列袭击的目标是德拉（Deraa）省的一个叙利亚军队雷达阵地，该阵地探测到以色列飞机进入叙利亚领空"。</p><p>这个在叙利亚拥有庞大消息网络的非政府组织的负责人拉米-阿卜杜勒-拉赫曼（Rami Abdel Rahmane）对法新社说，袭击发生时，"以色列空军正在德拉地区上空密集飞行"，而叙利亚的防空部队并未采取行动。</p><p>自2011年叙利亚战争爆发以来，以色列军队在叙利亚发动了数百次袭击，特别针对亲伊朗团体。</p><p> "雷达阵地"   </p><p>当地网络媒体 “Suwayda 24” 的负责人马鲁夫（Rayan Maarouf）此前告诉法新社，该地区的"叙利亚军队雷达阵地遭到了袭击"，但他没有说明消息来源。</p><p>据报道，周五凌晨叙利亚遭空袭的时间几乎与伊朗中部听到巨大爆炸声的时间一致。据美国媒体援引美国高级官员的话说，那是以色列发动的袭击。</p><p>据伊朗官方法尔斯通讯社报道，德黑兰当局称，该国中部一个军事基地附近发生了三起爆炸。</p><p>伊朗官方通讯社伊斯兰共和国通讯社Irna表示，爆炸发生后“没有造成重大损失”的报告。</p><p>上周末，伊朗向以色列境内发射了数百枚导弹和致命无人机，以色列曾警告称将进行报复。在那次对以色列史无前例的袭击之前，伊朗驻大马士革领事馆遭到袭击，尽管以色列没有承责，但伊朗认为是以色列干的。</p><p>4月1日的袭击摧毁了伊朗领事馆，造成16人死亡，其中有7名伊朗伊斯兰革命卫队成员，包括两名高级军官。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX4H.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E8%25A2%25AD%25E5%2587%25BB%25E5%258F%2599%25E5%2588%25A9%25E4%25BA%259A%25E5%258D%2597%25E9%2583%25A8%25E4%25B8%2580%25E4%25B8%25AA%25E5%2586%259B%25E4%25BA%258B%25E9%259B%25B7%25E8%25BE%25BE%25E9%2598%25B5%25E5%259C%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0%20-%20https%3A%2F%2Frfi.my%2FAX4H.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX4H.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BB%A5%E8%89%B2%E5%88%97%E8%A2%AD%E5%87%BB%E4%BC%8A%E6%9C%97%E6%97%B6%E4%B9%9F%E8%A2%AD%E5%87%BB%E4%BA%86%E5%8F%99%E5%88%A9%E4%BA%9A%E5%8D%97%E9%83%A8%E4%B8%80%E4%B8%AA%E5%86%9B%E4%BA%8B%E9%9B%B7%E8%BE%BE%E9%98%B5%E5%9C%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>20/04/2024 - 20:08</div><img src="https://s.rfi.fr/media/display/116b19c6-ff40-11ee-beb1-005056a90284/w:1280/p:16x9/AP24111179328197.jpg"><p><strong>据纽约时报4月20日报道，在 2021 年东京奥运会前7个月，23 名顶尖的中国游泳运动员被检测出对同一种强效禁药呈阳性反应，但由于中国高官暗中为他们洗脱了使用兴奋剂的罪名，而负责监管体育竞赛使用药物的全球权威机构也选择不予干预，因此他们得以逃脱公众监督，继续参加比赛。        </strong></p><div><p>这个报道说，检测结果呈阳性的多名运动员--包括中国派出参加东京奥运会的游泳队中的近一半--后来都获得了奖牌，其中包括三枚金牌。他们中的许多人仍在为中国参赛，包括两枚金牌得主张雨霏在内的几名运动员有望在今年的巴黎夏季奥运会上再次争夺奖牌。</p><p>中国在其反兴奋剂监管机构的一份报告中承认了阳性检测结果，称这些游泳运动员是在不知情的情况下摄入了极少量禁药，因此没有必要对他们采取任何行动。</p><p>但《纽约时报》的调查发现，这一此前未被报道的事件在反兴奋剂领域造成了严重分歧，而中国运动员的成绩一直是该领域的热点。</p><p><strong>往来邮件显示</strong></p><p>美国官员和其他专家说，在进一步调查之前，这些游泳运动员本应被停赛或公开身份，他们认为，中国体育官员、游泳国际管理机构--世界水上运动协会以及负责监督各国药物检测项目的全球权威机构--世界反兴奋剂机构都没有做到这一点。</p><p>尽管一名中国反兴奋剂官员和一名世界游泳最高级别官员之间的往来邮件似乎表明可能发生了违规行为，而且至少必须公开承认，但这些主管当局还是决定不采取行动。</p><p>这篇报道说，即使在其他国家和国际反兴奋剂官员多次向世界反兴奋剂机构（WADA）提供情报，表明中国游泳运动员掩盖真相和使用兴奋剂之后，该机构仍选择不追究运动员的责任，声称 "缺乏任何可信的证据 "来质疑中国对事件的说法。世界反兴奋剂机构为其不采取行动的决定进行了辩护，称批评没有事实根据。</p><p><strong>美国长臂起诉</strong></p><p>据两位熟悉此案的人士和《纽约时报》审阅的一份文件称，联邦调查局（FBI）去年了解到这些阳性检测结果的存在和中方为运动员洗脱罪名所给出的理由，以及世界反兴奋剂机构的不作为。</p><p>美国联邦调查人员在最近几周采取了一些措施，以了解更多的情况。但联调局的发言人拒绝发表评论。美国当局的任何调查都将借助一个强大的新法律工具：2020 年通过的一项法律赋予美国司法部对企图通过使用兴奋剂败坏国际体育赛事的行为进行刑事起诉的权力，无论这些行为在哪里发生。</p><p>在回答《纽约时报》提问的声明中，美国反兴奋剂机构指责世界反兴奋剂机构（WADA）--其全球对应机构--未能履行其使命。</p><p><strong>干净运动员背后捅一刀</strong></p><p>美国反兴奋剂机构首席执行官特拉维斯-T-泰加特（Travis T. Tygart）说："这似乎是在干净运动员的背后捅了一刀，是对所有公平竞争、遵守规则的运动员的深深背叛”。"泰加特承认，自2020年以来，他曾多次向世界反兴奋剂机构提供有关对中国游泳界使用兴奋剂的指控。"所有那些掩盖这些阳性结果、压制勇敢举报者声音的肮脏之手，都必须在规则和法律的最大范围内被追究责任。"</p><p>纽时这篇报道说，本文基于对机密文件和电子邮件（包括由中国反兴奋剂机构编写并提交给世界反兴奋剂机构的报告）的审查，以及对世界各地参与反兴奋剂工作的人员的采访。有些采访是在不透露消息来源的基础上进行的，因为他们未被授权公开发言或担心遭到报复。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAXCN.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240420-%25E7%25BA%25BD%25E6%2597%25B6-%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B8%25B8%25E6%25B3%25B3%25E8%25BF%2590%25E5%258A%25A8%25E5%2591%2598%25E5%259C%25A8%25E4%25B8%259C%25E4%25BA%25AC%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2589%258D%25E5%2585%25B4%25E5%25A5%258B%25E5%2589%2582%25E6%25A3%2580%25E6%25B5%258B%25E5%2591%2588%25E9%2598%25B3%25E6%2580%25A7%25E6%2598%25AF%25E6%2580%258E%25E6%25A0%25B7%25E9%2580%2583%25E8%2584%25B1%25E7%259A%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84%20-%20https%3A%2F%2Frfi.my%2FAXCN.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAXCN.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BA%BD%E6%97%B6%3A%E4%B8%AD%E5%9B%BD%E6%B8%B8%E6%B3%B3%E8%BF%90%E5%8A%A8%E5%91%98%E5%9C%A8%E4%B8%9C%E4%BA%AC%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%89%8D%E5%85%B4%E5%A5%8B%E5%89%82%E6%A3%80%E6%B5%8B%E5%91%88%E9%98%B3%E6%80%A7%E6%98%AF%E6%80%8E%E6%A0%B7%E9%80%83%E8%84%B1%E7%9A%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
