--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713554102000-->
-[第77届戛纳电影节官方海报致敬黑泽明 在紧张时局背景下呼唤团结](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240419-%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E-%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93)
+<!--1713584702000-->
+[950亿美元的对外援助计划接近在美众议院通关](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240419-950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3)
 ------
 
-<div>19/04/2024 - 19:34</div><img src="https://s.rfi.fr/media/display/ebe59fdc-fe72-11ee-bc3f-005056a97e36/w:1280/p:16x9/Capture-2199.PNG"><p><strong>第77届戛纳电影节官方海报刚刚在本周五（4月19日）揭晓。海报取自日本著名导演黑泽明的电影《八月狂想曲》中的一幅画面，《八月狂想曲》曾在1991年的戛纳电影节上放映。        </strong></p><div><p>这是一幅充满诗意的美好画面：远山背景映衬，在柔和的月光下并排而坐的五人仰头遥视，电影中当空的月亮在这里被换成了电影节的标志：金棕榈。整个画面色调幽蓝，柔和静谧。第77届戛纳电影节即将在今年 5月14 日至25日举行。报道指，电影节以《八月狂想曲》影片画面作为海报，是在现今紧张的国际地缘政治背景下发出的团结呼吁。</p><p>这也是对日本杰出导演黑泽明的致敬，有“电影界的莎士比亚”之誉的黑泽明是日本电影最具国际影响力的导演和编剧之一，在近六十年的电影生涯中创作了《罗生门》、《七武士》、《大镖客》、《天国与地狱》、《影武者》、《乱》等代表作。 《八月狂想曲》是他生前执导的倒数第二部影片，1991年当该片在戛纳电影节上展映时黑泽明已81岁。该片呼吁人们的团结，强调寻求万物和谐的重要意义。</p><p>在《八月狂想曲》中，一位祖母是1945年8月9日长崎原子弹爆炸的受害，她向她的孙子和美国侄子传递了她对爱和正直的信念，以此作为对战争的对抗。影片充满了沉思和温柔。</p><p>戛纳电影节在声明中写道，“作为电影的一面镜子，这幅海报以特有的方式致敬第七艺术：电影让每个人都有发言权，所以它能够解放思想；电影铭记伤痛，所以它是对遗忘的对抗；电影见证了危险，所以它呼唤团结；电影抚平创伤，所以它帮助了生命的修复。”</p><p>声明说，在这个脆弱的世界，人们不断质疑他人的存在，戛纳电影节重申了这样一个信念：即电影是表达和分享的世界圣地，这里书写着我们的人性和自由。</p><p>报道指，继去年戛纳电影节以凯瑟琳·德纳芙的形象、2021 年斯派克·李以及 2018 年让-保罗·贝尔蒙多和安娜·卡琳娜的形象作为电影节海报之后，今年的戛纳又回到了具有强烈象征意义的标志性电影场景作为官方海报。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3u.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240419-%25E7%25AC%25AC77%25E5%25B1%258A%25E6%2588%259B%25E7%25BA%25B3%25E7%2594%25B5%25E5%25BD%25B1%25E8%258A%2582%25E5%25AE%2598%25E6%2596%25B9%25E6%25B5%25B7%25E6%258A%25A5%25E8%2587%25B4%25E6%2595%25AC%25E9%25BB%2591%25E6%25B3%25BD%25E6%2598%258E-%25E5%259C%25A8%25E7%25B4%25A7%25E5%25BC%25A0%25E6%2597%25B6%25E5%25B1%2580%25E8%2583%258C%25E6%2599%25AF%25E4%25B8%258B%25E5%2591%25BC%25E5%2594%25A4%25E5%259B%25A2%25E7%25BB%2593&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93%20-%20https%3A%2F%2Frfi.my%2FAX3u.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3u.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AC%AC77%E5%B1%8A%E6%88%9B%E7%BA%B3%E7%94%B5%E5%BD%B1%E8%8A%82%E5%AE%98%E6%96%B9%E6%B5%B7%E6%8A%A5%E8%87%B4%E6%95%AC%E9%BB%91%E6%B3%BD%E6%98%8E%20%E5%9C%A8%E7%B4%A7%E5%BC%A0%E6%97%B6%E5%B1%80%E8%83%8C%E6%99%AF%E4%B8%8B%E5%91%BC%E5%94%A4%E5%9B%A2%E7%BB%93&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>19/04/2024 - 19:38</div><img src="https://s.rfi.fr/media/display/66235d9c-fe6f-11ee-9bc6-005056a90284/w:1280/p:16x9/AP24110587692992.jpg"><p><strong>4月19日，美国国会众议院以罕见的两党势头推进了一项总额为950亿美元的对外援助计划，该计划将用于乌克兰、以色列、台湾及人道主义援助，一个强大的议员联盟帮助该计划扫清了程序性障碍，以便在周六进行最终投票。周五的投票在通常党争严重的众议院产生了罕见的结果，民主党人帮助共和党籍议长约翰逊（Mike Johnson）的计划以316票对94票的压倒性优势获得通过。众议院可能在本周末最终批准该计划，届时其将被送交参议院。        </strong></p><div><p>这是约翰逊在为该项立法苦恼了两个月后于本周启动的战略的胜利。尽管如此，约翰逊在过去的24小时里仍不得不在美国保守派媒体上四处呼吁，努力挽回对追加援助的支持，尤其是在乌克兰面临与俄罗斯交战的关键时刻，同时也是为了他自己的议长席位，因为将他赶下议长宝座的呼声在共和党极右翼议员中越来越高。</p><p>约翰逊对保守派广播节目《马克·莱文秀》说：“关于我们在这里做什么以及为什么做，有很多误传”。约翰逊补充说，“乌克兰人现在迫切需要致命援助……我们不能允许普京横扫占领另一个国家”，并指“这些都是非常严重的问题，具有全球性影响”。</p><p>经过几个月的拖延，约翰逊本周下定决心继续推进该立法计划后，众议院缓慢而慎重地开展工作。拜登总统迅速对约翰逊议长的计划表示支持，而共和党总统候选人特朗普也罕见地没有破坏约翰逊的工作。白宫在一份声明中说：“全世界都在关注国会的行动。通过这项立法将发出一个强有力的信息，表明美国在关键时刻的领导力”。</p><p>周四晚些时候，众议院规则委员会成员联手进行了一次极为罕见的投票，在接近午夜的投票中，四位民主党人在程序性步骤上给予了支持，以9票对3票的表决结果，击败了该委员会共和党占多数的三位强硬派，将这一方案送入众议院进行辩论。这是众议院近期从未有过的时刻。</p><p>众议院民主党领袖杰弗里斯（Hakeem Jeffries）在投票后说：“我们早就应该支持我们的民主盟友了，众议院民主党人再次为对美国人民很重要的立法扫清了障碍”。周五，约翰逊将需要再次依靠民主党人通过下一轮程序性投票，否决共和党人提出的可能会扼杀该方案的修正案。极右翼共和党籍众议员泰勒·格林（Marjorie Taylor Greene）提出的一项修正案将把用于乌克兰的开支降至零。</p><p>泰勒·格林提出了一项“罢免议长职务”的动议，该动议周五吸引了另一位支持者，亚利桑那州共和党籍众议员戈萨（Paul Gosar）成为该动议的共同提案人。另一位共同提案人、肯塔基州共和党籍众议员马西（Thomas Massie）表示，在下周众议院休会前，可能会有其他议员加入。</p><p>由于众议院的多数党——共和党占优席位是近代以来最稀少的，这种态势将约翰逊推向了民主党人的怀抱。由于没有共和党多数的全力支持，约翰逊无法按照党内极右翼派别的要求来制定方案，这迫使他不得不放弃在美墨边境打击非法移民的强硬安全措施和其他优先事项，以免失去民主党人的支持。</p><p>约翰逊最多只能将先前参议院通过的法案分割成不同部分，这也是众议院共和党人的偏好，最终投票将针对乌克兰、以色列和印太地区盟友的不同措施。该方案还将包括第四项议案，其中包括民主党人赞同或至少愿意接受的许多共和党优先事项：允许美国扣押被冻结的俄罗斯央行资产以重建乌克兰；对伊朗、俄罗斯、中国和贩运芬太尼的犯罪组织实施制裁；如果视频应用TikTok的中国所有者不在一年内出售其股份，则可能禁止该应用。</p><p>预计在周六的投票中通过每项议案将需要约翰逊就它们分别形成复杂的两党联盟，例如，民主党人将确保乌克兰援助获得批准，但一些该党极左翼议员将拒绝因加沙遭到破坏而支持对以色列的军援。然后，这些部分将自动拼接成一个单一的一揽子方案送交参议院，而参议院的反对者也在计划采取程序性举措，来拖延这一揽子的对外援助法案被送到总统拜登的办公桌上供其签字。</p><p>约翰逊的计划是在周六将这四项议案提交众议院全院，并于中午开始投票。其中一项法案为乌克兰提供了600亿美元。其中大部分资金将提供给美国武器制造商，用于重建耗尽的美国武器供应，约20%的资金将以贷款形式直接提供给乌克兰。不过，美国总统可以在11月15日之后取消乌克兰的债务。</p><p>第二项法案将为以色列提供约170亿美元的进攻性和防御性武器，并为加沙和其他地区提供略高于90亿美元的人道主义援助。第三项法案将为印太地区提供81亿美元以威慑中国，第四项法案充满了共和党的优先事项，包括强迫TikTok剥离和扣押俄罗斯资产。由于每项法案都将单独表决，因此支持它们的议员联盟也各不相同。</p><p>周六，众议院还将就共和党优先考虑的第五项法案进行投票，以确保边境安全并限制移民进入美国。但该法案很可能会失败，因为它需要众议院三分之二的支持，因为它是在不同的程序下进行的。外援方案随后将提交参议院，参议员们必须再次对其进行投票，然后才能将法案提交给已批准该方案的拜登总统签字。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAX3y.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240419-950%25E4%25BA%25BF%25E7%25BE%258E%25E5%2585%2583%25E7%259A%2584%25E5%25AF%25B9%25E5%25A4%2596%25E6%258F%25B4%25E5%258A%25A9%25E8%25AE%25A1%25E5%2588%2592%25E6%258E%25A5%25E8%25BF%2591%25E5%259C%25A8%25E7%25BE%258E%25E4%25BC%2597%25E8%25AE%25AE%25E9%2599%25A2%25E9%2580%259A%25E5%2585%25B3&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3%20-%20https%3A%2F%2Frfi.my%2FAX3y.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAX3y.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=950%E4%BA%BF%E7%BE%8E%E5%85%83%E7%9A%84%E5%AF%B9%E5%A4%96%E6%8F%B4%E5%8A%A9%E8%AE%A1%E5%88%92%E6%8E%A5%E8%BF%91%E5%9C%A8%E7%BE%8E%E4%BC%97%E8%AE%AE%E9%99%A2%E9%80%9A%E5%85%B3&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
