--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-22 [1175家中国企业参展汉诺威工博会](/articles/dw/1025823.md)
+
 4-22 [德国工业产出预计将进一步下滑](/articles/dw/1025824.md)
 
 4-22 [向乌克兰转让防空系统? 西班牙希腊承受压力](/articles/dw/1025825.md)
@@ -598,6 +600,4 @@
 3-27 [熊猫、鸡爪和长城  巴伐利亚州长访华都去了哪儿？](/articles/dw/1026121.md)
 
 3-27 [台湾、尼泊尔之后 泰国也将实现同性婚姻合法化](/articles/dw/1026122.md)
-
-3-27 [德国铁路罢工潮终于告一段落](/articles/dw/1026123.md)
 
