--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-22 [中国一季度财政收入和税收收入均同比下降](/articles/voa/1016211.md)
+
+4-22 [聿文视界：美中军费比较，谁在穷兵黩武](/articles/voa/1016212.md)
+
 4-22 [岸田文雄向靖国神社供奉祭品引发中国和韩国不满](/articles/voa/1016213.md)
 
 4-22 [中国多地推住房“以旧换新” 分析:恐难逆转楼市困局](/articles/voa/1016214.md)
@@ -596,8 +600,4 @@
 4-10 [惠誉下调中国主权信用评级展望 从“稳定”降至“负面”](/articles/voa/1016509.md)
 
 4-10 [韩国举行国会议员选举 被视为审视总统尹锡悦执政的公投](/articles/voa/1016510.md)
-
-4-10 [美国再警告将追究中国在乌克兰战争中援助俄罗斯的责任](/articles/voa/1016511.md)
-
-4-10 [拜登称以色列的加沙政策“错误”](/articles/voa/1016512.md)
 
