--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-23 [全球军费开支去年增长7%，军费总额创下历史新高](/articles/voa/1016207.md)
+
 4-23 [广东近日持续暴雨，多地洪灾提早到来](/articles/voa/1016208.md)
 
 4-22 [美国商务部长：华为最新智能手机芯片远没有美国芯片先进](/articles/voa/1016209.md)
@@ -598,6 +600,4 @@
 4-10 [“习马二会”北京登场，马英九成为中共统战的棋子？](/articles/voa/1016505.md)
 
 4-10 [世界媒体看中国 - 中朝俄联盟](/articles/voa/1016506.md)
-
-4-10 [中国渔船经常性越界非法捞捕 韩国总统亲自登舰视察严打现场](/articles/voa/1016507.md)
 
